--- a/sito_modificato/subcategories/business-small-biz.html
+++ b/sito_modificato/subcategories/business-small-biz.html
@@ -94,7 +94,7 @@
                                     <svg class="w-6 h-6 text-blue-600" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v8m0 0v1m0-1c-1.11 0-2.08-.402-2.599-1"></path></svg>
                                 </div>
                                 <div>
-                                    <h3 class="font-semibold text-gray-800">Break-even Calculator</h3>
+                                    <h3 class="font-semibold text-gray-800">Break-even calculator</h3>
                                     <p class="text-sm text-gray-600 mt-1">Calculate break-even quickly and accurately.</p>
                                 </div>
                             </a>
@@ -103,7 +103,7 @@
                                     <svg class="w-6 h-6 text-blue-600" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v8m0 0v1m0-1c-1.11 0-2.08-.402-2.599-1"></path></svg>
                                 </div>
                                 <div>
-                                    <h3 class="font-semibold text-gray-800">Profit Margin Calculator</h3>
+                                    <h3 class="font-semibold text-gray-800">Profit margin calculator</h3>
                                     <p class="text-sm text-gray-600 mt-1">Calculate profit margin quickly and accurately.</p>
                                 </div>
                             </a>
@@ -112,7 +112,7 @@
                                     <svg class="w-6 h-6 text-blue-600" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v8m0 0v1m0-1c-1.11 0-2.08-.402-2.599-1"></path></svg>
                                 </div>
                                 <div>
-                                    <h3 class="font-semibold text-gray-800">Markup Calculator</h3>
+                                    <h3 class="font-semibold text-gray-800">Markup calculator</h3>
                                     <p class="text-sm text-gray-600 mt-1">Calculate markup quickly and accurately.</p>
                                 </div>
                             </a>
@@ -121,7 +121,7 @@
                                     <svg class="w-6 h-6 text-blue-600" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v8m0 0v1m0-1c-1.11 0-2.08-.402-2.599-1"></path></svg>
                                 </div>
                                 <div>
-                                    <h3 class="font-semibold text-gray-800">Cash Flow Projection Calculator</h3>
+                                    <h3 class="font-semibold text-gray-800">Cash flow projection calculator</h3>
                                     <p class="text-sm text-gray-600 mt-1">Calculate cash flow projection quickly and accurately.</p>
                                 </div>
                             </a>
@@ -130,7 +130,7 @@
                                     <svg class="w-6 h-6 text-blue-600" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v8m0 0v1m0-1c-1.11 0-2.08-.402-2.599-1"></path></svg>
                                 </div>
                                 <div>
-                                    <h3 class="font-semibold text-gray-800">Business Loan Calculator</h3>
+                                    <h3 class="font-semibold text-gray-800">Business loan calculator</h3>
                                     <p class="text-sm text-gray-600 mt-1">Calculate business loan quickly and accurately.</p>
                                 </div>
                             </a>
@@ -139,7 +139,7 @@
                                     <svg class="w-6 h-6 text-blue-600" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v8m0 0v1m0-1c-1.11 0-2.08-.402-2.599-1"></path></svg>
                                 </div>
                                 <div>
-                                    <h3 class="font-semibold text-gray-800">Equipment Financing Calculator</h3>
+                                    <h3 class="font-semibold text-gray-800">Equipment financing calculator</h3>
                                     <p class="text-sm text-gray-600 mt-1">Calculate equipment financing  quickly and accurately.</p>
                                 </div>
                             </a>
@@ -148,7 +148,7 @@
                                     <svg class="w-6 h-6 text-blue-600" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v8m0 0v1m0-1c-1.11 0-2.08-.402-2.599-1"></path></svg>
                                 </div>
                                 <div>
-                                    <h3 class="font-semibold text-gray-800">Invoice Factoring Calculator</h3>
+                                    <h3 class="font-semibold text-gray-800">Invoice factoring calculator</h3>
                                     <p class="text-sm text-gray-600 mt-1">Calculate invoice factoring quickly and accurately.</p>
                                 </div>
                             </a>
@@ -157,7 +157,7 @@
                                     <svg class="w-6 h-6 text-blue-600" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v8m0 0v1m0-1c-1.11 0-2.08-.402-2.599-1"></path></svg>
                                 </div>
                                 <div>
-                                    <h3 class="font-semibold text-gray-800">Business Valuation Calculator</h3>
+                                    <h3 class="font-semibold text-gray-800">Business valuation calculator</h3>
                                     <p class="text-sm text-gray-600 mt-1">Calculate business valuation quickly and accurately.</p>
                                 </div>
                             </a>
@@ -166,7 +166,7 @@
                                     <svg class="w-6 h-6 text-blue-600" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v8m0 0v1m0-1c-1.11 0-2.08-.402-2.599-1"></path></svg>
                                 </div>
                                 <div>
-                                    <h3 class="font-semibold text-gray-800">SBA Loan Calculator</h3>
+                                    <h3 class="font-semibold text-gray-800">SBA loan calculator</h3>
                                     <p class="text-sm text-gray-600 mt-1">Calculate sba loan quickly and accurately.</p>
                                 </div>
                             </a>
@@ -176,7 +176,7 @@
                     <svg class="w-6 h-6 text-blue-600" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v8m0 0v1m0-1c-1.11 0-2.08-.402-2.599-1"></path></svg>
                 </div>
                 <div>
-                    <h3 class="font-semibold text-gray-800">Click-Through Rate (CTR) Calculator | Business Operations</h3>
+                    <h3 class="font-semibold text-gray-800">Click-through rate (CTR) calculator | business operations</h3>
                     <p class="text-sm text-gray-600 mt-1">Calculate your Click-Through Rate (CTR) effortlessly with our interactive tool. Perfect for marketing and sales professionals looking to optimize their campaigns.</p>
                 </div>
             </a>
@@ -186,7 +186,7 @@
                     <svg class="w-6 h-6 text-blue-600" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v8m0 0v1m0-1c-1.11 0-2.08-.402-2.599-1"></path></svg>
                 </div>
                 <div>
-                    <h3 class="font-semibold text-gray-800">Return on Ad Spend (ROAS) Calculator</h3>
+                    <h3 class="font-semibold text-gray-800">Return on ad spend (ROAS) calculator</h3>
                     <p class="text-sm text-gray-600 mt-1">Calculate your Return on Ad Spend (ROAS) to optimize marketing investments.</p>
                 </div>
             </a>
@@ -204,7 +204,7 @@
 
                     <!-- Related Categories -->
                     <div class="bg-white p-6 rounded-lg shadow-md">
-                        <h3 class="font-bold text-lg mb-4">Related Categories</h3>
+                        <h3 class="font-bold text-lg mb-4">Related categories</h3>
                         <ul class="space-y-3">
                             <li><a href="https://calcdomain.com/finance" class="text-blue-600 hover:underline">Finance Calculators</a></li>
                             <li><a href="https://calcdomain.com/health-fitness" class="text-blue-600 hover:underline">Health & Fitness</a></li>
@@ -223,7 +223,7 @@
         <div class="container mx-auto px-4">
             <div class="grid grid-cols-1 md:grid-cols-4 gap-8">
                 <div>
-                    <h3 class="text-2xl font-bold mb-4">CalcDomain</h3>
+                    <h3 class="text-2xl font-bold mb-4">Calcdomain</h3>
                     <p class="text-gray-400 mb-4">Your trusted source for free online calculators. Accurate, fast, and reliable calculations for every need.</p>
                     <div class="flex space-x-4">
                         <a href="#" class="text-gray-400 hover:text-white" aria-label="Twitter">
@@ -257,10 +257,10 @@
                 <div>
                     <h4 class="text-lg font-semibold mb-4">Support</h4>
                     <ul class="space-y-2">
-                        <li><a href="about" class="text-gray-400 hover:text-white">About Us</a></li>
-                        <li><a href="contact" class="text-gray-400 hover:text-white">Contact</a></li>
-                        <li><a href="privacy" class="text-gray-400 hover:text-white">Privacy Policy</a></li>
-                        <li><a href="terms" class="text-gray-400 hover:text-white">Terms of Service</a></li>
+                        <li><a href="https://calcdomain.com/about" class="text-gray-400 hover:text-white">About Us</a></li>
+                        <li><a href="https://calcdomain.com/contact" class="text-gray-400 hover:text-white">Contact</a></li>
+                        <li><a href="https://calcdomain.com/privacy" class="text-gray-400 hover:text-white">Privacy Policy</a></li>
+                        <li><a href="https://calcdomain.com/terms" class="text-gray-400 hover:text-white">Terms of Service</a></li>
                         <li><a href="sitemap.xml" class="text-gray-400 hover:text-white">Site Map</a></li>
                     </ul>
                 </div>
