--- a/sito_modificato/subcategories/construction-advanced-construction-calculators.html
+++ b/sito_modificato/subcategories/construction-advanced-construction-calculators.html
@@ -34,7 +34,7 @@
         <div class="container mx-auto px-4">
             <div class="grid grid-cols-1 md:grid-cols-4 gap-8">
                 <div>
-                    <h3 class="text-2xl font-bold mb-4">CalcDomain</h3>
+                    <h3 class="text-2xl font-bold mb-4">Calcdomain</h3>
                     <p class="text-gray-400 mb-4">Your trusted source for free online calculators. Accurate, fast, and reliable calculations for every need.</p>
                     <div class="flex space-x-4">
                         <a href="#" class="text-gray-400 hover:text-white" aria-label="Twitter">
@@ -68,10 +68,10 @@
                 <div>
                     <h4 class="text-lg font-semibold mb-4">Support</h4>
                     <ul class="space-y-2">
-                        <li><a href="about" class="text-gray-400 hover:text-white">About Us</a></li>
-                        <li><a href="contact" class="text-gray-400 hover:text-white">Contact</a></li>
-                        <li><a href="privacy" class="text-gray-400 hover:text-white">Privacy Policy</a></li>
-                        <li><a href="terms" class="text-gray-400 hover:text-white">Terms of Service</a></li>
+                        <li><a href="https://calcdomain.com/about" class="text-gray-400 hover:text-white">About Us</a></li>
+                        <li><a href="https://calcdomain.com/contact" class="text-gray-400 hover:text-white">Contact</a></li>
+                        <li><a href="https://calcdomain.com/privacy" class="text-gray-400 hover:text-white">Privacy Policy</a></li>
+                        <li><a href="https://calcdomain.com/terms" class="text-gray-400 hover:text-white">Terms of Service</a></li>
                         <li><a href="sitemap.xml" class="text-gray-400 hover:text-white">Site Map</a></li>
                     </ul>
                 </div>
@@ -97,31 +97,31 @@ Home / <a href="https://calcdomain.com/construction-diy">Construction</a> / Adva
 <h1>Advanced Construction Calculators</h1>
 <p style="max-width:800px;">Specialized tools for code-based loads, structural design, foundations, temporary works, and project controls. Alphabetized for quick scanning.</p>
 <div class="grid grid-3-col" style="margin-top:1rem;">
-<a class="card" href="https://calcdomain.com/marshall-mix-design"><h3>Asphalt Mix Design (Marshall) Calculator</h3><p>Proportion asphalt mixes using Marshall stability/flow criteria.</p></a>
-<a class="card" href="https://calcdomain.com/blasting-vibration"><h3>Blasting Vibration Calculator</h3><p>Predict PPV and safe distances with scaled-distance formulas.</p></a>
-<a class="card" href="https://calcdomain.com/building-energy"><h3>Building Energy Performance Calculator</h3><p>Estimate EUI, savings, and payback for envelope/HVAC measures.</p></a>
-<a class="card" href="https://calcdomain.com/composite-beam-design"><h3>Composite Steel Beam Design Calculator (AISC)</h3><p>Design composite beams with stud count and deflection checks.</p></a>
-<a class="card" href="https://calcdomain.com/concrete-admixture"><h3>Concrete Admixture Dosage Calculator</h3><p>Compute admixture dose from cement content and spec ranges.</p></a>
-<a class="card" href="https://calcdomain.com/construction-delay-analysis"><h3>Construction Delay Analysis Calculator</h3><p>Quantify critical delays via impacted-as-planned or windows methods.</p></a>
-<a class="card" href="https://calcdomain.com/dewatering-flow-rate"><h3>Construction Dewatering Flow Rate Calculator</h3><p>Estimate pump flow from permeability, drawdown, and spacing.</p></a>
-<a class="card" href="https://calcdomain.com/crane-lift-plan"><h3>Crane Lift Plan Calculator</h3><p>Lift radius, capacity charts, rigging weights, and G.B.P.</p></a>
-<a class="card" href="https://calcdomain.com/dewatering"><h3>Dewatering System Design Calculator</h3><p>Wellpoint/deep-well sizing and pump selection inputs.</p></a>
-<a class="card" href="https://calcdomain.com/formwork-pressure"><h3>Formwork Pressure Calculator (ACI 347)</h3><p>Fresh concrete lateral pressure per ACI 347, with rate-of-placement.</p></a>
-<a class="card" href="https://calcdomain.com/glulam-beam-design"><h3>Glulam Beam Design Calculator (AWC/NDS)</h3><p>Size glulam beams for bending, shear, and deflection per NDS.</p></a>
-<a class="card" href="https://calcdomain.com/helical-pile"><h3>Helical Pile Capacity Calculator</h3><p>Axial capacity from helix geometry and soil parameters.</p></a>
-<a class="card" href="https://calcdomain.com/light-gauge-steel-design"><h3>Light Gauge Steel Framing Calculator</h3><p>Select studs/track by span, load, and L/Δ limits.</p></a>
-<a class="card" href="https://calcdomain.com/micropile-design"><h3>Micropile Design Calculator</h3><p>Bond length and axial capacity from grout/soil properties.</p></a>
-<a class="card" href="https://calcdomain.com/pt-slab-design"><h3>Post-Tensioned (PT) Concrete Slab Calculator</h3><p>Tendon layout, stresses, and crack control for flat slabs.</p></a>
-<a class="card" href="https://calcdomain.com/scaffolding-load"><h3>Scaffolding Load Calculator</h3><p>Live/dead loads, bay capacities, and tie spacing checks.</p></a>
-<a class="card" href="https://calcdomain.com/asce-7-16-seismic"><h3>Seismic Load Calculator (ASCE 7-16)</h3><p>Base shear (Cs) and story forces per ASCE 7-16.</p></a>
-<a class="card" href="https://calcdomain.com/proctor-test"><h3>Soil Compaction (Proctor) Test Calculator</h3><p>Dry density, moisture, and % compaction from lab/field data.</p></a>
-<a class="card" href="https://calcdomain.com/soil-nail-design"><h3>Soil Nail Wall Design Calculator</h3><p>Nail length/spacing and facing pressures with safety factors.</p></a>
-<a class="card" href="https://calcdomain.com/steel-joist-design"><h3>Steel Joist (K, LH, DLH) Design Calculator</h3><p>Select joists by span/load with deflection and vibration checks.</p></a>
-<a class="card" href="https://calcdomain.com/tilt-up-wall-design"><h3>Tilt-Up Concrete Wall Design Calculator</h3><p>Panel lifting/bracing plus in-service load checks.</p></a>
-<a class="card" href="https://calcdomain.com/tower-crane-foundation"><h3>Tower Crane Foundation Design Calculator</h3><p>Bearing pressure, overturning, and anchorage inputs.</p></a>
-<a class="card" href="https://calcdomain.com/asce-7-16-wind-load"><h3>Wind Load Calculator (ASCE 7-16)</h3><p>Velocity pressure and MWFRS/C&amp;C pressures per standard.</p></a>
-<a class="card" href="https://calcdomain.com/wood-diaphragm"><h3>Wood Diaphragm Design Calculator (NDS/SDPWS)</h3><p>Diaphragm shear/capacity and nailing patterns.</p></a>
-<a class="card" href="https://calcdomain.com/wood-shear-wall"><h3>Wood Shear Wall Design Calculator (NDS/SDPWS)</h3><p>Unit shear, aspect ratios, and hold-down forces.</p></a>
+<a class="card" href="https://calcdomain.com/marshall-mix-design"><h3>Asphalt mix design (marshall) calculator</h3><p>Proportion asphalt mixes using Marshall stability/flow criteria.</p></a>
+<a class="card" href="https://calcdomain.com/blasting-vibration"><h3>Blasting vibration calculator</h3><p>Predict PPV and safe distances with scaled-distance formulas.</p></a>
+<a class="card" href="https://calcdomain.com/building-energy"><h3>Building energy performance calculator</h3><p>Estimate EUI, savings, and payback for envelope/HVAC measures.</p></a>
+<a class="card" href="https://calcdomain.com/composite-beam-design"><h3>Composite steel beam design calculator (AISC)</h3><p>Design composite beams with stud count and deflection checks.</p></a>
+<a class="card" href="https://calcdomain.com/concrete-admixture"><h3>Concrete admixture dosage calculator</h3><p>Compute admixture dose from cement content and spec ranges.</p></a>
+<a class="card" href="https://calcdomain.com/construction-delay-analysis"><h3>Construction delay analysis calculator</h3><p>Quantify critical delays via impacted-as-planned or windows methods.</p></a>
+<a class="card" href="https://calcdomain.com/dewatering-flow-rate"><h3>Construction dewatering flow rate calculator</h3><p>Estimate pump flow from permeability, drawdown, and spacing.</p></a>
+<a class="card" href="https://calcdomain.com/crane-lift-plan"><h3>Crane lift plan calculator</h3><p>Lift radius, capacity charts, rigging weights, and G.B.P.</p></a>
+<a class="card" href="https://calcdomain.com/dewatering"><h3>Dewatering system design calculator</h3><p>Wellpoint/deep-well sizing and pump selection inputs.</p></a>
+<a class="card" href="https://calcdomain.com/formwork-pressure"><h3>Formwork pressure calculator (ACI 347)</h3><p>Fresh concrete lateral pressure per ACI 347, with rate-of-placement.</p></a>
+<a class="card" href="https://calcdomain.com/glulam-beam-design"><h3>Glulam beam design calculator (AWC/NDS)</h3><p>Size glulam beams for bending, shear, and deflection per NDS.</p></a>
+<a class="card" href="https://calcdomain.com/helical-pile"><h3>Helical pile capacity calculator</h3><p>Axial capacity from helix geometry and soil parameters.</p></a>
+<a class="card" href="https://calcdomain.com/light-gauge-steel-design"><h3>Light gauge steel framing calculator</h3><p>Select studs/track by span, load, and L/Δ limits.</p></a>
+<a class="card" href="https://calcdomain.com/micropile-design"><h3>Micropile design calculator</h3><p>Bond length and axial capacity from grout/soil properties.</p></a>
+<a class="card" href="https://calcdomain.com/pt-slab-design"><h3>Post-tensioned (PT) concrete slab calculator</h3><p>Tendon layout, stresses, and crack control for flat slabs.</p></a>
+<a class="card" href="https://calcdomain.com/scaffolding-load"><h3>Scaffolding load calculator</h3><p>Live/dead loads, bay capacities, and tie spacing checks.</p></a>
+<a class="card" href="https://calcdomain.com/asce-7-16-seismic"><h3>Seismic load calculator (ASCE 7-16)</h3><p>Base shear (Cs) and story forces per ASCE 7-16.</p></a>
+<a class="card" href="https://calcdomain.com/proctor-test"><h3>Soil compaction (proctor) test calculator</h3><p>Dry density, moisture, and % compaction from lab/field data.</p></a>
+<a class="card" href="https://calcdomain.com/soil-nail-design"><h3>Soil nail wall design calculator</h3><p>Nail length/spacing and facing pressures with safety factors.</p></a>
+<a class="card" href="https://calcdomain.com/steel-joist-design"><h3>Steel joist (K, LH, DLH) design calculator</h3><p>Select joists by span/load with deflection and vibration checks.</p></a>
+<a class="card" href="https://calcdomain.com/tilt-up-wall-design"><h3>Tilt-up concrete wall design calculator</h3><p>Panel lifting/bracing plus in-service load checks.</p></a>
+<a class="card" href="https://calcdomain.com/tower-crane-foundation"><h3>Tower crane foundation design calculator</h3><p>Bearing pressure, overturning, and anchorage inputs.</p></a>
+<a class="card" href="https://calcdomain.com/asce-7-16-wind-load"><h3>Wind load calculator (ASCE 7-16)</h3><p>Velocity pressure and MWFRS/C&amp;C pressures per standard.</p></a>
+<a class="card" href="https://calcdomain.com/wood-diaphragm"><h3>Wood diaphragm design calculator (NDS/SDPWS)</h3><p>Diaphragm shear/capacity and nailing patterns.</p></a>
+<a class="card" href="https://calcdomain.com/wood-shear-wall"><h3>Wood shear wall design calculator (NDS/SDPWS)</h3><p>Unit shear, aspect ratios, and hold-down forces.</p></a>
 </div>
 </div>
 </main>
