--- a/sito_modificato/subcategories/construction-cost-estimator.html
+++ b/sito_modificato/subcategories/construction-cost-estimator.html
@@ -294,7 +294,7 @@
         <div class="container mx-auto px-4">
             <div class="grid grid-cols-1 md:grid-cols-4 gap-8">
                 <div>
-                    <h3 class="text-2xl font-bold mb-4">CalcDomain</h3>
+                    <h3 class="text-2xl font-bold mb-4">Calcdomain</h3>
                     <p class="text-gray-400 mb-4">Your trusted source for free online calculators. Accurate, fast, and reliable calculations for every need.</p>
                     <div class="flex space-x-4">
                         <a href="#" class="text-gray-400 hover:text-white" aria-label="Twitter">
@@ -328,10 +328,10 @@
                 <div>
                     <h4 class="text-lg font-semibold mb-4">Support</h4>
                     <ul class="space-y-2">
-                        <li><a href="about" class="text-gray-400 hover:text-white">About Us</a></li>
-                        <li><a href="contact" class="text-gray-400 hover:text-white">Contact</a></li>
-                        <li><a href="privacy" class="text-gray-400 hover:text-white">Privacy Policy</a></li>
-                        <li><a href="terms" class="text-gray-400 hover:text-white">Terms of Service</a></li>
+                        <li><a href="https://calcdomain.com/about" class="text-gray-400 hover:text-white">About Us</a></li>
+                        <li><a href="https://calcdomain.com/contact" class="text-gray-400 hover:text-white">Contact</a></li>
+                        <li><a href="https://calcdomain.com/privacy" class="text-gray-400 hover:text-white">Privacy Policy</a></li>
+                        <li><a href="https://calcdomain.com/terms" class="text-gray-400 hover:text-white">Terms of Service</a></li>
                         <li><a href="sitemap.xml" class="text-gray-400 hover:text-white">Site Map</a></li>
                     </ul>
                 </div>
@@ -581,7 +581,7 @@
 </ul>
 </div>
 <h2>Worked Example</h2>
-<h3>How It Works: A Step-by-Step Example</h3>
+<h3>How it works: a step-by-step example</h3>
 <p>Assume a 25,000 ft² standard office in Denver, 2 floors, national unit cost baseline, soft 15%, contingency 10%, O&amp;P 12%, complexity 1.00, annual escalation 4%, midpoint 12 months.</p>
 <ol>
 <li>Baseline unit cost (U) for Standard Office ≈ $240/ft². Location (L) Denver ≈ 1.03. Complexity (C)=1.00.</li>
@@ -600,15 +600,15 @@
 <p>It is a conceptual tool (AACE Class 5–4). Expect a wide range until design is further developed and quotes are obtained.</p>
 <h3>What is a location factor?</h3>
 <p>A multiplier that adjusts national average costs to a specific city or region, derived from published indices like RSMeans.</p>
-<h3>What should I include in soft costs?</h3>
+<h3>What should i include in soft costs?</h3>
 <p>Architecture, engineering, permits, plan review, inspections, surveys, utility fees, insurance, testing, and project management.</p>
-<h3>How do I select contingency?</h3>
+<h3>How do i select contingency?</h3>
 <p>Early phases often use 10–20%, reducing as risk is retired and design matures.</p>
 <h3>Does the estimator include taxes?</h3>
 <p>Sales/VAT is not automatically included. Add it within soft costs or O&amp;P if applicable in your jurisdiction.</p>
-<h3>Can I switch to metric?</h3>
+<h3>Can i switch to metric?</h3>
 <p>Yes. Toggle Metric to enter area in m²; the calculator converts unit costs accordingly.</p>
-<h3>Can I override the location factor?</h3>
+<h3>Can i override the location factor?</h3>
 <p>Yes. Enter a custom factor from your latest city cost index; it will override the dropdown.</p>
 </div>
 </section>
