--- a/sito_modificato/subcategories/construction-diy-materials-estimation.html
+++ b/sito_modificato/subcategories/construction-diy-materials-estimation.html
@@ -94,7 +94,7 @@
                                 <svg class="w-6 h-6 text-blue-600" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5H7a2 2 0 00-2 2v10a2 2 0 002 2h8a2 2 0 002-2V7a2 2 0 00-2-2h-2M9 5a2 2 0 002 2h2a2 2 0 002-2M9 5a2 2 0 012-2h2a2 2 0 012 2"></path></svg>
                             </div>
                             <div>
-                                <h3 class="font-semibold text-gray-800">Concrete Calculator</h3>
+                                <h3 class="font-semibold text-gray-800">Concrete calculator</h3>
                                 <p class="text-sm text-gray-600 mt-1">Compute ready-mix volume, bag counts, and reinforcement for slabs, footings, and piers.</p>
                             </div>
                         </a>
@@ -103,7 +103,7 @@
                                 <svg class="w-6 h-6 text-blue-600" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16"></path></svg>
                             </div>
                             <div>
-                                <h3 class="font-semibold text-gray-800">Tile & Adhesive Calculator</h3>
+                                <h3 class="font-semibold text-gray-800">Tile & adhesive calculator</h3>
                                 <p class="text-sm text-gray-600 mt-1">Estimate tile boxes, grout, and adhesive with waste factors and multi-room support.</p>
                             </div>
                         </a>
@@ -112,7 +112,7 @@
                                 <svg class="w-6 h-6 text-blue-600" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 7h18M3 12h18M3 17h18"></path></svg>
                             </div>
                             <div>
-                                <h3 class="font-semibold text-gray-800">Drywall & Sheetrock Calculator</h3>
+                                <h3 class="font-semibold text-gray-800">Drywall & sheetrock calculator</h3>
                                 <p class="text-sm text-gray-600 mt-1">Plan wallboard, mud, and tape requirements for full homes or single remodel rooms.</p>
                             </div>
                         </a>
@@ -121,7 +121,7 @@
                                 <svg class="w-6 h-6 text-blue-600" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16"></path></svg>
                             </div>
                             <div>
-                                <h3 class="font-semibold text-gray-800">Lumber & Board Foot Calculator</h3>
+                                <h3 class="font-semibold text-gray-800">Lumber & board foot calculator</h3>
                                 <p class="text-sm text-gray-600 mt-1">Convert dimensions to board feet, tally studs and joists, and estimate cost.</p>
                             </div>
                         </a>
@@ -130,7 +130,7 @@
                                 <svg class="w-6 h-6 text-blue-600" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v8m0 0v1m0-1c-1.11 0-2.08-.402-2.599-1"></path></svg>
                             </div>
                             <div>
-                                <h3 class="font-semibold text-gray-800">Insulation Coverage Calculator</h3>
+                                <h3 class="font-semibold text-gray-800">Insulation coverage calculator</h3>
                                 <p class="text-sm text-gray-600 mt-1">Evaluate batts and blown-in insulation coverage by R-value, depth, and bag count.</p>
                             </div>
                         </a>
@@ -139,7 +139,7 @@
                                 <svg class="w-6 h-6 text-blue-600" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v8m0 0v1m0-1c-1.11 0-2.08-.402-2.599-1"></path></svg>
                             </div>
                             <div>
-                                <h3 class="font-semibold text-gray-800">Gravel, Sand & Aggregate Calculator</h3>
+                                <h3 class="font-semibold text-gray-800">Gravel, sand & aggregate calculator</h3>
                                 <p class="text-sm text-gray-600 mt-1">Convert coverage depth to tonnage, cubic yards, and truckloads for landscaping fills.</p>
                             </div>
                         </a>
@@ -148,7 +148,7 @@
                                 <svg class="w-6 h-6 text-blue-600" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 7h18M3 12h18M3 17h18"></path></svg>
                             </div>
                             <div>
-                                <h3 class="font-semibold text-gray-800">Excavation Volume Calculator</h3>
+                                <h3 class="font-semibold text-gray-800">Excavation volume calculator</h3>
                                 <p class="text-sm text-gray-600 mt-1">Estimate cut and fill volumes, truck cycles, and spoil piles for sitework.</p>
                             </div>
                         </a>
@@ -157,7 +157,7 @@
                                 <svg class="w-6 h-6 text-blue-600" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16"></path></svg>
                             </div>
                             <div>
-                                <h3 class="font-semibold text-gray-800">Vapor Barrier Calculator</h3>
+                                <h3 class="font-semibold text-gray-800">Vapor barrier calculator</h3>
                                 <p class="text-sm text-gray-600 mt-1">Quantify poly sheeting for slabs-on-grade and crawlspace encapsulation.</p>
                             </div>
                         </a>
@@ -166,7 +166,7 @@
                                 <svg class="w-6 h-6 text-blue-600" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v8m0 0v1m0-1c-1.11 0-2.08-.402-2.599-1"></path></svg>
                             </div>
                             <div>
-                                <h3 class="font-semibold text-gray-800">Wire Mesh & Rebar Calculator</h3>
+                                <h3 class="font-semibold text-gray-800">Wire mesh & rebar calculator</h3>
                                 <p class="text-sm text-gray-600 mt-1">Lay out reinforcement sheets and bars with lap splice allowances.</p>
                             </div>
                         </a>
@@ -175,7 +175,7 @@
                                 <svg class="w-6 h-6 text-blue-600" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 7h18M3 12h18M3 17h18"></path></svg>
                             </div>
                             <div>
-                                <h3 class="font-semibold text-gray-800">Mortar & Brickwork Calculator</h3>
+                                <h3 class="font-semibold text-gray-800">Mortar & brickwork calculator</h3>
                                 <p class="text-sm text-gray-600 mt-1">Determine mortar bags, bricks, and block counts with waste and joint options.</p>
                             </div>
                         </a>
@@ -184,7 +184,7 @@
                                 <svg class="w-6 h-6 text-blue-600" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16"></path></svg>
                             </div>
                             <div>
-                                <h3 class="font-semibold text-gray-800">Mulch & Landscape Coverage</h3>
+                                <h3 class="font-semibold text-gray-800">Mulch & landscape coverage</h3>
                                 <p class="text-sm text-gray-600 mt-1">Size bulk mulch orders by bed area, depth, and bag or yard units.</p>
                             </div>
                         </a>
@@ -193,7 +193,7 @@
                                 <svg class="w-6 h-6 text-blue-600" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 7h18M3 12h18M3 17h18"></path></svg>
                             </div>
                             <div>
-                                <h3 class="font-semibold text-gray-800">Cement & Mortar Mix Calculator</h3>
+                                <h3 class="font-semibold text-gray-800">Cement & mortar mix calculator</h3>
                                 <p class="text-sm text-gray-600 mt-1">Blend cement, sand, and aggregate proportions for masonry and plaster mixes.</p>
                             </div>
                         </a>
@@ -202,7 +202,7 @@
                                 <svg class="w-6 h-6 text-blue-600" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v8m0 0v1m0-1c-1.11 0-2.08-.402-2.599-1"></path></svg>
                             </div>
                             <div>
-                                <h3 class="font-semibold text-gray-800">Floor Underlayment Calculator</h3>
+                                <h3 class="font-semibold text-gray-800">Floor underlayment calculator</h3>
                                 <p class="text-sm text-gray-600 mt-1">Measure underlayment rolls or panels for subfloors and tile installations.</p>
                             </div>
                         </a>
@@ -220,7 +220,7 @@
 
                     <!-- Related Categories -->
                     <div class="bg-white p-6 rounded-lg shadow-md">
-                        <h3 class="font-bold text-lg mb-4">Related Categories</h3>
+                        <h3 class="font-bold text-lg mb-4">Related categories</h3>
                         <ul class="space-y-3">
                             <li><a href="https://calcdomain.com/construction-diy" class="text-blue-600 hover:underline">Construction & DIY Calculators</a></li>
                             <li><a href="https://calcdomain.com/subcategories/project-layout-design" class="text-blue-600 hover:underline">Project Layout & Design</a></li>
@@ -239,7 +239,7 @@
         <div class="container mx-auto px-4">
             <div class="grid grid-cols-1 md:grid-cols-4 gap-8">
                 <div>
-                    <h3 class="text-2xl font-bold mb-4">CalcDomain</h3>
+                    <h3 class="text-2xl font-bold mb-4">Calcdomain</h3>
                     <p class="text-gray-400 mb-4">Your trusted source for free online calculators. Accurate, fast, and reliable calculations for every need.</p>
                     <div class="flex space-x-4">
                         <a href="#" class="text-gray-400 hover:text-white" aria-label="Twitter">
@@ -273,10 +273,10 @@
                 <div>
                     <h4 class="text-lg font-semibold mb-4">Support</h4>
                     <ul class="space-y-2">
-                        <li><a href="about" class="text-gray-400 hover:text-white">About Us</a></li>
-                        <li><a href="contact" class="text-gray-400 hover:text-white">Contact</a></li>
-                        <li><a href="privacy" class="text-gray-400 hover:text-white">Privacy Policy</a></li>
-                        <li><a href="terms" class="text-gray-400 hover:text-white">Terms of Service</a></li>
+                        <li><a href="https://calcdomain.com/about" class="text-gray-400 hover:text-white">About Us</a></li>
+                        <li><a href="https://calcdomain.com/contact" class="text-gray-400 hover:text-white">Contact</a></li>
+                        <li><a href="https://calcdomain.com/privacy" class="text-gray-400 hover:text-white">Privacy Policy</a></li>
+                        <li><a href="https://calcdomain.com/terms" class="text-gray-400 hover:text-white">Terms of Service</a></li>
                         <li><a href="sitemap.xml" class="text-gray-400 hover:text-white">Site Map</a></li>
                     </ul>
                 </div>
