--- a/sito_modificato/subcategories/construction-roofing.html
+++ b/sito_modificato/subcategories/construction-roofing.html
@@ -34,7 +34,7 @@
         <div class="container mx-auto px-4">
             <div class="grid grid-cols-1 md:grid-cols-4 gap-8">
                 <div>
-                    <h3 class="text-2xl font-bold mb-4">CalcDomain</h3>
+                    <h3 class="text-2xl font-bold mb-4">Calcdomain</h3>
                     <p class="text-gray-400 mb-4">Your trusted source for free online calculators. Accurate, fast, and reliable calculations for every need.</p>
                     <div class="flex space-x-4">
                         <a href="#" class="text-gray-400 hover:text-white" aria-label="Twitter">
@@ -68,10 +68,10 @@
                 <div>
                     <h4 class="text-lg font-semibold mb-4">Support</h4>
                     <ul class="space-y-2">
-                        <li><a href="about" class="text-gray-400 hover:text-white">About Us</a></li>
-                        <li><a href="contact" class="text-gray-400 hover:text-white">Contact</a></li>
-                        <li><a href="privacy" class="text-gray-400 hover:text-white">Privacy Policy</a></li>
-                        <li><a href="terms" class="text-gray-400 hover:text-white">Terms of Service</a></li>
+                        <li><a href="https://calcdomain.com/about" class="text-gray-400 hover:text-white">About Us</a></li>
+                        <li><a href="https://calcdomain.com/contact" class="text-gray-400 hover:text-white">Contact</a></li>
+                        <li><a href="https://calcdomain.com/privacy" class="text-gray-400 hover:text-white">Privacy Policy</a></li>
+                        <li><a href="https://calcdomain.com/terms" class="text-gray-400 hover:text-white">Terms of Service</a></li>
                         <li><a href="sitemap.xml" class="text-gray-400 hover:text-white">Site Map</a></li>
                     </ul>
                 </div>
@@ -93,9 +93,9 @@
 <h1>Roofing</h1>
 <p>Pitch, spans, and materials—roof takeoffs and geometry in minutes.</p>
 <div class="grid grid-3-col" style="margin-top:1rem;">
-<a class="card" href="https://calcdomain.com/rafter"><h3>Rafter Length Calculator</h3><p>Common/hip/valley rafters with overhang and birdsmouth.</p></a>
-<a class="card" href="https://calcdomain.com/roof-pitch"><h3>Roof Pitch Calculator</h3><p>Pitch/angle conversions and slope length.</p></a>
-<a class="card" href="https://calcdomain.com/roofing"><h3>Roofing Calculator</h3><p>Squares, bundles, underlayment, and waste by roof shape.</p></a>
+<a class="card" href="https://calcdomain.com/rafter"><h3>Rafter length calculator</h3><p>Common/hip/valley rafters with overhang and birdsmouth.</p></a>
+<a class="card" href="https://calcdomain.com/roof-pitch"><h3>Roof pitch calculator</h3><p>Pitch/angle conversions and slope length.</p></a>
+<a class="card" href="https://calcdomain.com/roofing"><h3>Roofing calculator</h3><p>Squares, bundles, underlayment, and waste by roof shape.</p></a>
 </div>
 </div></main>
 <!-- Standard Footer --> 
