--- a/sito_modificato/subcategories/construction-sitework-aggregates-and-asphalt.html
+++ b/sito_modificato/subcategories/construction-sitework-aggregates-and-asphalt.html
@@ -34,7 +34,7 @@
         <div class="container mx-auto px-4">
             <div class="grid grid-cols-1 md:grid-cols-4 gap-8">
                 <div>
-                    <h3 class="text-2xl font-bold mb-4">CalcDomain</h3>
+                    <h3 class="text-2xl font-bold mb-4">Calcdomain</h3>
                     <p class="text-gray-400 mb-4">Your trusted source for free online calculators. Accurate, fast, and reliable calculations for every need.</p>
                     <div class="flex space-x-4">
                         <a href="#" class="text-gray-400 hover:text-white" aria-label="Twitter">
@@ -68,10 +68,10 @@
                 <div>
                     <h4 class="text-lg font-semibold mb-4">Support</h4>
                     <ul class="space-y-2">
-                        <li><a href="about" class="text-gray-400 hover:text-white">About Us</a></li>
-                        <li><a href="contact" class="text-gray-400 hover:text-white">Contact</a></li>
-                        <li><a href="privacy" class="text-gray-400 hover:text-white">Privacy Policy</a></li>
-                        <li><a href="terms" class="text-gray-400 hover:text-white">Terms of Service</a></li>
+                        <li><a href="https://calcdomain.com/about" class="text-gray-400 hover:text-white">About Us</a></li>
+                        <li><a href="https://calcdomain.com/contact" class="text-gray-400 hover:text-white">Contact</a></li>
+                        <li><a href="https://calcdomain.com/privacy" class="text-gray-400 hover:text-white">Privacy Policy</a></li>
+                        <li><a href="https://calcdomain.com/terms" class="text-gray-400 hover:text-white">Terms of Service</a></li>
                         <li><a href="sitemap.xml" class="text-gray-400 hover:text-white">Site Map</a></li>
                     </ul>
                 </div>
@@ -93,12 +93,12 @@
 <h1>Sitework, Aggregates &amp; Asphalt</h1>
 <p>Plan excavation and materials with volume, weight, and compaction-aware estimates.</p>
 <div class="grid grid-3-col" style="margin-top:1rem;">
-<a class="card" href="https://calcdomain.com/asphalt"><h3>Asphalt Calculator</h3><p>Tonnage for paving thickness, compaction, and area.</p></a>
-<a class="card" href="https://calcdomain.com/cut-and-fill"><h3>Excavation (Cut and Fill) Calculator</h3><p>Balance cut/fill volumes with swell and shrink factors.</p></a>
-<a class="card" href="https://calcdomain.com/gravel"><h3>Gravel Calculator</h3><p>Depth-based aggregate volumes and delivery tonnage.</p></a>
-<a class="card" href="https://calcdomain.com/mulch"><h3>Mulch Calculator</h3><p>Cubic yards for beds and landscaping coverage.</p></a>
-<a class="card" href="https://calcdomain.com/sand"><h3>Sand Calculator</h3><p>Volume/weight estimates for bedding and fill.</p></a>
-<a class="card" href="https://calcdomain.com/topsoil"><h3>Topsoil Calculator</h3><p>Screened topsoil quantity by area and depth.</p></a>
+<a class="card" href="https://calcdomain.com/asphalt"><h3>Asphalt calculator</h3><p>Tonnage for paving thickness, compaction, and area.</p></a>
+<a class="card" href="https://calcdomain.com/cut-and-fill"><h3>Excavation (cut and fill) calculator</h3><p>Balance cut/fill volumes with swell and shrink factors.</p></a>
+<a class="card" href="https://calcdomain.com/gravel"><h3>Gravel calculator</h3><p>Depth-based aggregate volumes and delivery tonnage.</p></a>
+<a class="card" href="https://calcdomain.com/mulch"><h3>Mulch calculator</h3><p>Cubic yards for beds and landscaping coverage.</p></a>
+<a class="card" href="https://calcdomain.com/sand"><h3>Sand calculator</h3><p>Volume/weight estimates for bedding and fill.</p></a>
+<a class="card" href="https://calcdomain.com/topsoil"><h3>Topsoil calculator</h3><p>Screened topsoil quantity by area and depth.</p></a>
 </div>
 </div></main>
 <!-- Standard Footer --> 
