--- a/sito_modificato/subcategories/diet-nutrition.html
+++ b/sito_modificato/subcategories/diet-nutrition.html
@@ -94,7 +94,7 @@
                                     <svg class="w-6 h-6 text-blue-600" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v8m0 0v1m0-1c-1.11 0-2.08-.402-2.599-1"></path></svg>
                                 </div>
                                 <div>
-                                    <h3 class="font-semibold text-gray-800">Calorie Calculator</h3>
+                                    <h3 class="font-semibold text-gray-800">Calorie calculator</h3>
                                     <p class="text-sm text-gray-600 mt-1">Calculate calorie calculator quickly and accurately.</p>
                                 </div>
                             </a>
@@ -103,7 +103,7 @@
                                     <svg class="w-6 h-6 text-blue-600" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v8m0 0v1m0-1c-1.11 0-2.08-.402-2.599-1"></path></svg>
                                 </div>
                                 <div>
-                                    <h3 class="font-semibold text-gray-800">Macro Calculator</h3>
+                                    <h3 class="font-semibold text-gray-800">Macro calculator</h3>
                                     <p class="text-sm text-gray-600 mt-1">Calculate macro calculator quickly and accurately.</p>
                                 </div>
                             </a>
@@ -112,7 +112,7 @@
                                     <svg class="w-6 h-6 text-blue-600" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v8m0 0v1m0-1c-1.11 0-2.08-.402-2.599-1"></path></svg>
                                 </div>
                                 <div>
-                                    <h3 class="font-semibold text-gray-800">Protein Calculator</h3>
+                                    <h3 class="font-semibold text-gray-800">Protein calculator</h3>
                                     <p class="text-sm text-gray-600 mt-1">Calculate protein calculator quickly and accurately.</p>
                                 </div>
                             </a>
@@ -121,7 +121,7 @@
                                     <svg class="w-6 h-6 text-blue-600" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v8m0 0v1m0-1c-1.11 0-2.08-.402-2.599-1"></path></svg>
                                 </div>
                                 <div>
-                                    <h3 class="font-semibold text-gray-800">Carb Calculator</h3>
+                                    <h3 class="font-semibold text-gray-800">Carb calculator</h3>
                                     <p class="text-sm text-gray-600 mt-1">Calculate carb calculator quickly and accurately.</p>
                                 </div>
                             </a>
@@ -130,7 +130,7 @@
                                     <svg class="w-6 h-6 text-blue-600" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v8m0 0v1m0-1c-1.11 0-2.08-.402-2.599-1"></path></svg>
                                 </div>
                                 <div>
-                                    <h3 class="font-semibold text-gray-800">Fat Calculator</h3>
+                                    <h3 class="font-semibold text-gray-800">Fat calculator</h3>
                                     <p class="text-sm text-gray-600 mt-1">Calculate fat calculator quickly and accurately.</p>
                                 </div>
                             </a>
@@ -139,7 +139,7 @@
                                     <svg class="w-6 h-6 text-blue-600" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v8m0 0v1m0-1c-1.11 0-2.08-.402-2.599-1"></path></svg>
                                 </div>
                                 <div>
-                                    <h3 class="font-semibold text-gray-800">Fiber Calculator</h3>
+                                    <h3 class="font-semibold text-gray-800">Fiber calculator</h3>
                                     <p class="text-sm text-gray-600 mt-1">Calculate fiber calculator quickly and accurately.</p>
                                 </div>
                             </a>
@@ -148,7 +148,7 @@
                                     <svg class="w-6 h-6 text-blue-600" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v8m0 0v1m0-1c-1.11 0-2.08-.402-2.599-1"></path></svg>
                                 </div>
                                 <div>
-                                    <h3 class="font-semibold text-gray-800">Sugar Calculator</h3>
+                                    <h3 class="font-semibold text-gray-800">Sugar calculator</h3>
                                     <p class="text-sm text-gray-600 mt-1">Calculate sugar calculator quickly and accurately.</p>
                                 </div>
                             </a>
@@ -157,7 +157,7 @@
                                     <svg class="w-6 h-6 text-blue-600" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v8m0 0v1m0-1c-1.11 0-2.08-.402-2.599-1"></path></svg>
                                 </div>
                                 <div>
-                                    <h3 class="font-semibold text-gray-800">Sodium Calculator</h3>
+                                    <h3 class="font-semibold text-gray-800">Sodium calculator</h3>
                                     <p class="text-sm text-gray-600 mt-1">Calculate sodium calculator quickly and accurately.</p>
                                 </div>
                             </a>
@@ -166,7 +166,7 @@
                                     <svg class="w-6 h-6 text-blue-600" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v8m0 0v1m0-1c-1.11 0-2.08-.402-2.599-1"></path></svg>
                                 </div>
                                 <div>
-                                    <h3 class="font-semibold text-gray-800">Cholesterol Calculator</h3>
+                                    <h3 class="font-semibold text-gray-800">Cholesterol calculator</h3>
                                     <p class="text-sm text-gray-600 mt-1">Calculate cholesterol calculator quickly and accurately.</p>
                                 </div>
                             </a>
@@ -175,7 +175,7 @@
                                     <svg class="w-6 h-6 text-blue-600" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v8m0 0v1m0-1c-1.11 0-2.08-.402-2.599-1"></path></svg>
                                 </div>
                                 <div>
-                                    <h3 class="font-semibold text-gray-800">Vitamin Calculator</h3>
+                                    <h3 class="font-semibold text-gray-800">Vitamin calculator</h3>
                                     <p class="text-sm text-gray-600 mt-1">Calculate vitamin calculator quickly and accurately.</p>
                                 </div>
                             </a>
@@ -184,7 +184,7 @@
                                     <svg class="w-6 h-6 text-blue-600" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v8m0 0v1m0-1c-1.11 0-2.08-.402-2.599-1"></path></svg>
                                 </div>
                                 <div>
-                                    <h3 class="font-semibold text-gray-800">Mineral Calculator</h3>
+                                    <h3 class="font-semibold text-gray-800">Mineral calculator</h3>
                                     <p class="text-sm text-gray-600 mt-1">Calculate mineral calculator quickly and accurately.</p>
                                 </div>
                             </a>
@@ -193,7 +193,7 @@
                                     <svg class="w-6 h-6 text-blue-600" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v8m0 0v1m0-1c-1.11 0-2.08-.402-2.599-1"></path></svg>
                                 </div>
                                 <div>
-                                    <h3 class="font-semibold text-gray-800">Water Intake Calculator</h3>
+                                    <h3 class="font-semibold text-gray-800">Water intake calculator</h3>
                                     <p class="text-sm text-gray-600 mt-1">Calculate water intake calculator quickly and accurately.</p>
                                 </div>
                             </a>
@@ -202,7 +202,7 @@
                                     <svg class="w-6 h-6 text-blue-600" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v8m0 0v1m0-1c-1.11 0-2.08-.402-2.599-1"></path></svg>
                                 </div>
                                 <div>
-                                    <h3 class="font-semibold text-gray-800">Meal Planning Calculator</h3>
+                                    <h3 class="font-semibold text-gray-800">Meal planning calculator</h3>
                                     <p class="text-sm text-gray-600 mt-1">Calculate meal planning calculator quickly and accurately.</p>
                                 </div>
                             </a>
@@ -211,7 +211,7 @@
                                     <svg class="w-6 h-6 text-blue-600" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v8m0 0v1m0-1c-1.11 0-2.08-.402-2.599-1"></path></svg>
                                 </div>
                                 <div>
-                                    <h3 class="font-semibold text-gray-800">Portion Size Calculator</h3>
+                                    <h3 class="font-semibold text-gray-800">Portion size calculator</h3>
                                     <p class="text-sm text-gray-600 mt-1">Calculate portion size calculator quickly and accurately.</p>
                                 </div>
                             </a>
@@ -220,7 +220,7 @@
                                     <svg class="w-6 h-6 text-blue-600" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v8m0 0v1m0-1c-1.11 0-2.08-.402-2.599-1"></path></svg>
                                 </div>
                                 <div>
-                                    <h3 class="font-semibold text-gray-800">Food Scale Calculator</h3>
+                                    <h3 class="font-semibold text-gray-800">Food scale calculator</h3>
                                     <p class="text-sm text-gray-600 mt-1">Calculate food scale calculator quickly and accurately.</p>
                                 </div>
                             </a>
@@ -229,7 +229,7 @@
                                     <svg class="w-6 h-6 text-blue-600" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v8m0 0v1m0-1c-1.11 0-2.08-.402-2.599-1"></path></svg>
                                 </div>
                                 <div>
-                                    <h3 class="font-semibold text-gray-800">Recipe Nutrition Calculator</h3>
+                                    <h3 class="font-semibold text-gray-800">Recipe nutrition calculator</h3>
                                     <p class="text-sm text-gray-600 mt-1">Calculate recipe nutrition calculator quickly and accurately.</p>
                                 </div>
                             </a>
@@ -238,7 +238,7 @@
                                     <svg class="w-6 h-6 text-blue-600" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v8m0 0v1m0-1c-1.11 0-2.08-.402-2.599-1"></path></svg>
                                 </div>
                                 <div>
-                                    <h3 class="font-semibold text-gray-800">Diet Plan Calculator</h3>
+                                    <h3 class="font-semibold text-gray-800">Diet plan calculator</h3>
                                     <p class="text-sm text-gray-600 mt-1">Calculate diet plan calculator quickly and accurately.</p>
                                 </div>
                             </a>
@@ -247,7 +247,7 @@
                                     <svg class="w-6 h-6 text-blue-600" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v8m0 0v1m0-1c-1.11 0-2.08-.402-2.599-1"></path></svg>
                                 </div>
                                 <div>
-                                    <h3 class="font-semibold text-gray-800">Weight Loss Calculator</h3>
+                                    <h3 class="font-semibold text-gray-800">Weight loss calculator</h3>
                                     <p class="text-sm text-gray-600 mt-1">Calculate weight loss calculator quickly and accurately.</p>
                                 </div>
                             </a>
@@ -256,7 +256,7 @@
                                     <svg class="w-6 h-6 text-blue-600" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v8m0 0v1m0-1c-1.11 0-2.08-.402-2.599-1"></path></svg>
                                 </div>
                                 <div>
-                                    <h3 class="font-semibold text-gray-800">Weight Gain Calculator</h3>
+                                    <h3 class="font-semibold text-gray-800">Weight gain calculator</h3>
                                     <p class="text-sm text-gray-600 mt-1">Calculate weight gain calculator quickly and accurately.</p>
                                 </div>
                             </a>
@@ -274,7 +274,7 @@
 
                     <!-- Related Categories -->
                     <div class="bg-white p-6 rounded-lg shadow-md">
-                        <h3 class="font-bold text-lg mb-4">Related Categories</h3>
+                        <h3 class="font-bold text-lg mb-4">Related categories</h3>
                         <ul class="space-y-3">
                             <li><a href="https://calcdomain.com/finance" class="text-blue-600 hover:underline">Finance Calculators</a></li>
                             <li><a href="https://calcdomain.com/health-fitness" class="text-blue-600 hover:underline">Health & Fitness</a></li>
@@ -293,7 +293,7 @@
         <div class="container mx-auto px-4">
             <div class="grid grid-cols-1 md:grid-cols-4 gap-8">
                 <div>
-                    <h3 class="text-2xl font-bold mb-4">CalcDomain</h3>
+                    <h3 class="text-2xl font-bold mb-4">Calcdomain</h3>
                     <p class="text-gray-400 mb-4">Your trusted source for free online calculators. Accurate, fast, and reliable calculations for every need.</p>
                     <div class="flex space-x-4">
                         <a href="#" class="text-gray-400 hover:text-white" aria-label="Twitter">
@@ -327,10 +327,10 @@
                 <div>
                     <h4 class="text-lg font-semibold mb-4">Support</h4>
                     <ul class="space-y-2">
-                        <li><a href="about" class="text-gray-400 hover:text-white">About Us</a></li>
-                        <li><a href="contact" class="text-gray-400 hover:text-white">Contact</a></li>
-                        <li><a href="privacy" class="text-gray-400 hover:text-white">Privacy Policy</a></li>
-                        <li><a href="terms" class="text-gray-400 hover:text-white">Terms of Service</a></li>
+                        <li><a href="https://calcdomain.com/about" class="text-gray-400 hover:text-white">About Us</a></li>
+                        <li><a href="https://calcdomain.com/contact" class="text-gray-400 hover:text-white">Contact</a></li>
+                        <li><a href="https://calcdomain.com/privacy" class="text-gray-400 hover:text-white">Privacy Policy</a></li>
+                        <li><a href="https://calcdomain.com/terms" class="text-gray-400 hover:text-white">Terms of Service</a></li>
                         <li><a href="sitemap.xml" class="text-gray-400 hover:text-white">Site Map</a></li>
                     </ul>
                 </div>
