--- a/sito_modificato/subcategories/electrical.html
+++ b/sito_modificato/subcategories/electrical.html
@@ -65,7 +65,7 @@
             </svg>
           </div>
           <div>
-            <h3 class="font-semibold text-gray-800">Amps to Watts</h3>
+            <h3 class="font-semibold text-gray-800">Amps to watts</h3>
             <p class="text-sm text-gray-600 mt-1">Convert amps (current) to watts (power) for DC and AC circuits.</p>
           </div>
         </a>
@@ -76,7 +76,7 @@
             </svg>
           </div>
           <div>
-            <h3 class="font-semibold text-gray-800">Watts to Amps</h3>
+            <h3 class="font-semibold text-gray-800">Watts to amps</h3>
             <p class="text-sm text-gray-600 mt-1">Convert watts (power) to amps (current) for DC and AC circuits.</p>
           </div>
         </a>
@@ -87,7 +87,7 @@
             </svg>
           </div>
           <div>
-            <h3 class="font-semibold text-gray-800">Watts to Horsepower</h3>
+            <h3 class="font-semibold text-gray-800">Watts to horsepower</h3>
             <p class="text-sm text-gray-600 mt-1">Convert electrical power in watts to mechanical horsepower.</p>
           </div>
         </a>
@@ -98,7 +98,7 @@
             </svg>
           </div>
           <div>
-            <h3 class="font-semibold text-gray-800">Watts to BTU/hr</h3>
+            <h3 class="font-semibold text-gray-800">Watts to btu/hr</h3>
             <p class="text-sm text-gray-600 mt-1">Convert electrical power (watts) to British thermal units per hour.</p>
           </div>
         </a>
@@ -120,7 +120,7 @@
             </svg>
           </div>
           <div>
-            <h3 class="font-semibold text-gray-800">Horsepower to Watts</h3>
+            <h3 class="font-semibold text-gray-800">Horsepower to watts</h3>
             <p class="text-sm text-gray-600 mt-1">Convert mechanical HP to electrical power (watts).</p>
           </div>
         </a>
@@ -131,7 +131,7 @@
             </svg>
           </div>
           <div>
-            <h3 class="font-semibold text-gray-800">BTU/hr to Watts</h3>
+            <h3 class="font-semibold text-gray-800">Btu/hr to watts</h3>
             <p class="text-sm text-gray-600 mt-1">Convert British thermal units/hr to electrical power (watts).</p>
           </div>
         </a>
@@ -142,7 +142,7 @@
             </svg>
           </div>
           <div>
-            <h3 class="font-semibold text-gray-800">Ohm's Law Calculator</h3>
+            <h3 class="font-semibold text-gray-800">Ohm's law calculator</h3>
             <p class="text-sm text-gray-600 mt-1">Calculate voltage, current, resistance, and power using Ohm's Law.</p>
           </div>
         </a>
@@ -153,7 +153,7 @@
             </svg>
           </div>
           <div>
-            <h3 class="font-semibold text-gray-800">NEC Ampacity Tables</h3>
+            <h3 class="font-semibold text-gray-800">NEC ampacity tables</h3>
             <p class="text-sm text-gray-600 mt-1">Check allowable ampacity of wires per NEC.</p>
           </div>
         </a>
@@ -164,7 +164,7 @@
             </svg>
           </div>
           <div>
-            <h3 class="font-semibold text-gray-800">Short Circuit Current</h3>
+            <h3 class="font-semibold text-gray-800">Short circuit current</h3>
             <p class="text-sm text-gray-600 mt-1">Estimate short-circuit current using transformer data and distance.</p>
           </div>
         </a>
@@ -175,7 +175,7 @@
             </svg>
           </div>
           <div>
-            <h3 class="font-semibold text-gray-800">Three Phase Power</h3>
+            <h3 class="font-semibold text-gray-800">Three phase power</h3>
             <p class="text-sm text-gray-600 mt-1">Calculate power for three-phase electrical systems.</p>
           </div>
         </a>
@@ -186,7 +186,7 @@
             </svg>
           </div>
           <div>
-            <h3 class="font-semibold text-gray-800">Volts to Watts</h3>
+            <h3 class="font-semibold text-gray-800">Volts to watts</h3>
             <p class="text-sm text-gray-600 mt-1">Convert volts (V) to actual power (W) in AC/DC circuits.</p>
           </div>
         </a>
@@ -196,7 +196,7 @@
       <aside class="w-full lg:w-1/3">
         <div class="sticky top-24 space-y-8">
           <div class="bg-white p-6 rounded-lg shadow-md">
-            <h3 class="font-bold text-lg mb-4">Popular in Engineering</h3>
+            <h3 class="font-bold text-lg mb-4">Popular in engineering</h3>
             <ul class="space-y-3 text-sm">
               <li><a href="https://calcdomain.com/ohm-s-law-calculator" class="text-blue-600 hover:underline">Ohm's Law</a></li>
               <li><a href="https://calcdomain.com/amps-to-watts" class="text-blue-600 hover:underline">Amps to Watts</a></li>
@@ -208,7 +208,7 @@
             <div class="w-full h-full ad-slot" aria-hidden="true"></div>
           </div>
           <div class="bg-white p-6 rounded-lg shadow-md">
-            <h3 class="font-bold text-lg mb-4">Explore More</h3>
+            <h3 class="font-bold text-lg mb-4">Explore more</h3>
             <ul class="space-y-3 text-sm">
               <li><a href="https://calcdomain.com/subcategories/structural-engineering" class="text-blue-600 hover:underline">Structural Engineering</a></li>
               <li><a href="https://calcdomain.com/subcategories/mechanical-engineering" class="text-blue-600 hover:underline">Mechanical Engineering</a></li>
@@ -223,7 +223,7 @@
         <div class="container mx-auto px-4">
             <div class="grid grid-cols-1 md:grid-cols-4 gap-8">
                 <div>
-                    <h3 class="text-2xl font-bold mb-4">CalcDomain</h3>
+                    <h3 class="text-2xl font-bold mb-4">Calcdomain</h3>
                     <p class="text-gray-400 mb-4">Your trusted source for free online calculators. Accurate, fast, and reliable calculations for every need.</p>
                     <div class="flex space-x-4">
                         <a href="#" class="text-gray-400 hover:text-white" aria-label="Twitter">
@@ -257,10 +257,10 @@
                 <div>
                     <h4 class="text-lg font-semibold mb-4">Support</h4>
                     <ul class="space-y-2">
-                        <li><a href="about" class="text-gray-400 hover:text-white">About Us</a></li>
-                        <li><a href="contact" class="text-gray-400 hover:text-white">Contact</a></li>
-                        <li><a href="privacy" class="text-gray-400 hover:text-white">Privacy Policy</a></li>
-                        <li><a href="terms" class="text-gray-400 hover:text-white">Terms of Service</a></li>
+                        <li><a href="https://calcdomain.com/about" class="text-gray-400 hover:text-white">About Us</a></li>
+                        <li><a href="https://calcdomain.com/contact" class="text-gray-400 hover:text-white">Contact</a></li>
+                        <li><a href="https://calcdomain.com/privacy" class="text-gray-400 hover:text-white">Privacy Policy</a></li>
+                        <li><a href="https://calcdomain.com/terms" class="text-gray-400 hover:text-white">Terms of Service</a></li>
                         <li><a href="sitemap.xml" class="text-gray-400 hover:text-white">Site Map</a></li>
                     </ul>
                 </div>
