--- a/sito_modificato/subcategories/engineering-eurocode-2.html
+++ b/sito_modificato/subcategories/engineering-eurocode-2.html
@@ -37,7 +37,7 @@
         <div class="container mx-auto px-4">
             <div class="grid grid-cols-1 md:grid-cols-4 gap-8">
                 <div>
-                    <h3 class="text-2xl font-bold mb-4">CalcDomain</h3>
+                    <h3 class="text-2xl font-bold mb-4">Calcdomain</h3>
                     <p class="text-gray-400 mb-4">Your trusted source for free online calculators. Accurate, fast, and reliable calculations for every need.</p>
                     <div class="flex space-x-4">
                         <a href="#" class="text-gray-400 hover:text-white" aria-label="Twitter">
@@ -71,10 +71,10 @@
                 <div>
                     <h4 class="text-lg font-semibold mb-4">Support</h4>
                     <ul class="space-y-2">
-                        <li><a href="about" class="text-gray-400 hover:text-white">About Us</a></li>
-                        <li><a href="contact" class="text-gray-400 hover:text-white">Contact</a></li>
-                        <li><a href="privacy" class="text-gray-400 hover:text-white">Privacy Policy</a></li>
-                        <li><a href="terms" class="text-gray-400 hover:text-white">Terms of Service</a></li>
+                        <li><a href="https://calcdomain.com/about" class="text-gray-400 hover:text-white">About Us</a></li>
+                        <li><a href="https://calcdomain.com/contact" class="text-gray-400 hover:text-white">Contact</a></li>
+                        <li><a href="https://calcdomain.com/privacy" class="text-gray-400 hover:text-white">Privacy Policy</a></li>
+                        <li><a href="https://calcdomain.com/terms" class="text-gray-400 hover:text-white">Terms of Service</a></li>
                         <li><a href="sitemap.xml" class="text-gray-400 hover:text-white">Site Map</a></li>
                     </ul>
                 </div>
@@ -101,12 +101,12 @@ Home / <a href="https://calcdomain.com/engineering">Engineering</a> / EC2
 <h1>Eurocode 2 — Concrete (EC2)</h1>
 <p style="max-width:900px">Design reinforced concrete elements per EC2: ultimate and serviceability checks for beams, slabs and columns, plus detailing lengths and crack control.</p>
 <div class="grid grid-3-col" style="margin-top:1rem;">
-<a class="card" href="https://calcdomain.com/eurocode-2-beam-design"><h3>EC2 Concrete Beam (Flexure)</h3><p>Ultimate moment capacity and reinforcement.</p></a>
-<a class="card" href="https://calcdomain.com/eurocode-2-shear-design"><h3>EC2 Concrete Beam (Shear)</h3><p>VRd,c and VRd,s with shear links.</p></a>
-<a class="card" href="https://calcdomain.com/eurocode-2-punching-shear"><h3>EC2 Slab Punching Shear</h3><p>Two-way shear around columns.</p></a>
-<a class="card" href="https://calcdomain.com/eurocode-2-column-design"><h3>EC2 Concrete Column</h3><p>Axial-moment interaction checks.</p></a>
-<a class="card" href="https://calcdomain.com/eurocode-2-anchorage-length"><h3>EC2 Anchorage &amp; Lap Length</h3><p>l<sub>b</sub> and l<sub>0</sub> per bar &amp; concrete class.</p></a>
-<a class="card" href="https://calcdomain.com/crack-width"><h3>EC2 Crack Width</h3><p>Service crack width w<sub>k</sub> estimates.</p></a>
+<a class="card" href="https://calcdomain.com/eurocode-2-beam-design"><h3>EC2 concrete beam (flexure)</h3><p>Ultimate moment capacity and reinforcement.</p></a>
+<a class="card" href="https://calcdomain.com/eurocode-2-shear-design"><h3>EC2 concrete beam (shear)</h3><p>VRd,c and VRd,s with shear links.</p></a>
+<a class="card" href="https://calcdomain.com/eurocode-2-punching-shear"><h3>EC2 slab punching shear</h3><p>Two-way shear around columns.</p></a>
+<a class="card" href="https://calcdomain.com/eurocode-2-column-design"><h3>EC2 concrete column</h3><p>Axial-moment interaction checks.</p></a>
+<a class="card" href="https://calcdomain.com/eurocode-2-anchorage-length"><h3>EC2 anchorage &amp; lap length</h3><p>l<sub>b</sub> and l<sub>0</sub> per bar &amp; concrete class.</p></a>
+<a class="card" href="https://calcdomain.com/crack-width"><h3>EC2 crack width</h3><p>Service crack width w<sub>k</sub> estimates.</p></a>
 </div>
 </div>
 </main>
