--- a/sito_modificato/subcategories/finance-business-ratios-and-valuation.html
+++ b/sito_modificato/subcategories/finance-business-ratios-and-valuation.html
@@ -34,7 +34,7 @@
         <div class="container mx-auto px-4">
             <div class="grid grid-cols-1 md:grid-cols-4 gap-8">
                 <div>
-                    <h3 class="text-2xl font-bold mb-4">CalcDomain</h3>
+                    <h3 class="text-2xl font-bold mb-4">Calcdomain</h3>
                     <p class="text-gray-400 mb-4">Your trusted source for free online calculators. Accurate, fast, and reliable calculations for every need.</p>
                     <div class="flex space-x-4">
                         <a href="#" class="text-gray-400 hover:text-white" aria-label="Twitter">
@@ -68,10 +68,10 @@
                 <div>
                     <h4 class="text-lg font-semibold mb-4">Support</h4>
                     <ul class="space-y-2">
-                        <li><a href="about" class="text-gray-400 hover:text-white">About Us</a></li>
-                        <li><a href="contact" class="text-gray-400 hover:text-white">Contact</a></li>
-                        <li><a href="privacy" class="text-gray-400 hover:text-white">Privacy Policy</a></li>
-                        <li><a href="terms" class="text-gray-400 hover:text-white">Terms of Service</a></li>
+                        <li><a href="https://calcdomain.com/about" class="text-gray-400 hover:text-white">About Us</a></li>
+                        <li><a href="https://calcdomain.com/contact" class="text-gray-400 hover:text-white">Contact</a></li>
+                        <li><a href="https://calcdomain.com/privacy" class="text-gray-400 hover:text-white">Privacy Policy</a></li>
+                        <li><a href="https://calcdomain.com/terms" class="text-gray-400 hover:text-white">Terms of Service</a></li>
                         <li><a href="sitemap.xml" class="text-gray-400 hover:text-white">Site Map</a></li>
                     </ul>
                 </div>
@@ -94,37 +94,37 @@
 <h1>Business Ratios &amp; Valuation</h1>
 <p style="max-width:800px">Misura liquidità, leva, efficienza e redditività; valuta l’impresa con metodi fondamentali e probabilistici.</p>
 <div class="grid grid-3-col" style="margin-top:1rem;">
-<a class="card" href="https://calcdomain.com/current-ratio"><h3>Current Ratio</h3><p>Liquidità base.</p></a>
-<a class="card" href="https://calcdomain.com/quick-ratio"><h3>Quick Ratio</h3><p>Liquidità senza scorte.</p></a>
-<a class="card" href="https://calcdomain.com/cash-ratio"><h3>Cash Ratio</h3><p>Liquidità più prudente.</p></a>
-<a class="card" href="https://calcdomain.com/debt-to-assets-ratio"><h3>Debt-to-Assets</h3><p>Leverage su attivi.</p></a>
-<a class="card" href="https://calcdomain.com/debt-to-equity-ratio"><h3>Debt-to-Equity</h3><p>Struttura del capitale.</p></a>
-<a class="card" href="https://calcdomain.com/interest-coverage-ratio"><h3>Interest Coverage</h3><p>Copertura oneri.</p></a>
-<a class="card" href="https://calcdomain.com/inventory-turnover"><h3>Inventory Turnover</h3><p>Rotazione scorte.</p></a>
-<a class="card" href="https://calcdomain.com/receivables-turnover"><h3>Receivables Turnover</h3><p>Incassi clienti.</p></a>
-<a class="card" href="https://calcdomain.com/total-asset-turnover"><h3>Total Asset Turnover</h3><p>Efficienza degli attivi.</p></a>
+<a class="card" href="https://calcdomain.com/current-ratio"><h3>Current ratio</h3><p>Liquidità base.</p></a>
+<a class="card" href="https://calcdomain.com/quick-ratio"><h3>Quick ratio</h3><p>Liquidità senza scorte.</p></a>
+<a class="card" href="https://calcdomain.com/cash-ratio"><h3>Cash ratio</h3><p>Liquidità più prudente.</p></a>
+<a class="card" href="https://calcdomain.com/debt-to-assets-ratio"><h3>Debt-to-assets</h3><p>Leverage su attivi.</p></a>
+<a class="card" href="https://calcdomain.com/debt-to-equity-ratio"><h3>Debt-to-equity</h3><p>Struttura del capitale.</p></a>
+<a class="card" href="https://calcdomain.com/interest-coverage-ratio"><h3>Interest coverage</h3><p>Copertura oneri.</p></a>
+<a class="card" href="https://calcdomain.com/inventory-turnover"><h3>Inventory turnover</h3><p>Rotazione scorte.</p></a>
+<a class="card" href="https://calcdomain.com/receivables-turnover"><h3>Receivables turnover</h3><p>Incassi clienti.</p></a>
+<a class="card" href="https://calcdomain.com/total-asset-turnover"><h3>Total asset turnover</h3><p>Efficienza degli attivi.</p></a>
 <a class="card" href="https://calcdomain.com/return-on-assets"><h3>ROA</h3><p>Redditività su attivi.</p></a>
 <a class="card" href="https://calcdomain.com/return-on-equity"><h3>ROE</h3><p>Rendimento per i soci.</p></a>
 <h3>P/E</h3><p>Prezzo su utili.</p>
 <h3>P/B</h3><p>Prezzo su valore contabile.</p>
 <h3>P/S</h3><p>Prezzo su vendite.</p>
-<a class="card" href="https://calcdomain.com/dividend-yield"><h3>Dividend Yield</h3><p>Rendimento dividendi.</p></a>
+<a class="card" href="https://calcdomain.com/dividend-yield"><h3>Dividend yield</h3><p>Rendimento dividendi.</p></a>
 <a class="card" href="https://calcdomain.com/eps"><h3>EPS</h3><p>Utile per azione.</p></a>
-<a class="card" href="https://calcdomain.com/dupont-analysis"><h3>DuPont</h3><p>Scomposizione ROE.</p></a>
+<a class="card" href="https://calcdomain.com/dupont-analysis"><h3>Dupont</h3><p>Scomposizione ROE.</p></a>
 <a class="card" href="https://calcdomain.com/eva"><h3>EVA</h3><p>Valore economico aggiunto.</p></a>
-<a class="card" href="https://calcdomain.com/altman-z-score"><h3>Altman Z</h3><p>Rischio default.</p></a>
+<a class="card" href="https://calcdomain.com/altman-z-score"><h3>Altman z</h3><p>Rischio default.</p></a>
 <a class="card" href="https://calcdomain.com/sustainable-growth-rate"><h3>SGR</h3><p>Crescita sostenibile.</p></a>
 <a class="card" href="https://calcdomain.com/hhi"><h3>HHI</h3><p>Concentrazione mercato.</p></a>
 <a class="card" href="https://calcdomain.com/dcf"><h3>DCF (FCFF)</h3><p>Valore azienda con WACC.</p></a>
 <a class="card" href="https://calcdomain.com/dcf-equity"><h3>DCF (FCFE)</h3><p>Valore per gli azionisti.</p></a>
 <a class="card" href="https://calcdomain.com/dividend-discount-model"><h3>DDM</h3><p>Valore da dividendi.</p></a>
 <a class="card" href="https://calcdomain.com/comparable-company-analysis"><h3>Comps</h3><p>Multipli di mercato.</p></a>
-<a class="card" href="https://calcdomain.com/precedent-transaction-analysis"><h3>Precedent Deals</h3><p>Multipli con premi.</p></a>
-<a class="card" href="https://calcdomain.com/monte-carlo-simulation"><h3>Monte Carlo</h3><p>Distribuzioni di valore.</p></a>
-<a class="card" href="https://calcdomain.com/real-options-valuation"><h3>Real Options</h3><p>Valore della flessibilità.</p></a>
-<a class="card" href="https://calcdomain.com/credit-rating-model"><h3>Credit Rating</h3><p>Punteggio rischiosità.</p></a>
-<a class="card" href="https://calcdomain.com/capital-structure-optimization"><h3>Capital Structure</h3><p>Trade-off leva/WACC.</p></a>
-<a class="card" href="https://calcdomain.com/walter-model-dividend"><h3>Walter Model</h3><p>Politica dividendi.</p></a>
+<a class="card" href="https://calcdomain.com/precedent-transaction-analysis"><h3>Precedent deals</h3><p>Multipli con premi.</p></a>
+<a class="card" href="https://calcdomain.com/monte-carlo-simulation"><h3>Monte carlo</h3><p>Distribuzioni di valore.</p></a>
+<a class="card" href="https://calcdomain.com/real-options-valuation"><h3>Real options</h3><p>Valore della flessibilità.</p></a>
+<a class="card" href="https://calcdomain.com/credit-rating-model"><h3>Credit rating</h3><p>Punteggio rischiosità.</p></a>
+<a class="card" href="https://calcdomain.com/capital-structure-optimization"><h3>Capital structure</h3><p>Trade-off leva/WACC.</p></a>
+<a class="card" href="https://calcdomain.com/walter-model-dividend"><h3>Walter model</h3><p>Politica dividendi.</p></a>
 </div>
 </div></main>
 <!-- Standard Footer --> 
