--- a/sito_modificato/subcategories/finance-company-planning-and-statements.html
+++ b/sito_modificato/subcategories/finance-company-planning-and-statements.html
@@ -34,7 +34,7 @@
         <div class="container mx-auto px-4">
             <div class="grid grid-cols-1 md:grid-cols-4 gap-8">
                 <div>
-                    <h3 class="text-2xl font-bold mb-4">CalcDomain</h3>
+                    <h3 class="text-2xl font-bold mb-4">Calcdomain</h3>
                     <p class="text-gray-400 mb-4">Your trusted source for free online calculators. Accurate, fast, and reliable calculations for every need.</p>
                     <div class="flex space-x-4">
                         <a href="#" class="text-gray-400 hover:text-white" aria-label="Twitter">
@@ -68,10 +68,10 @@
                 <div>
                     <h4 class="text-lg font-semibold mb-4">Support</h4>
                     <ul class="space-y-2">
-                        <li><a href="about" class="text-gray-400 hover:text-white">About Us</a></li>
-                        <li><a href="contact" class="text-gray-400 hover:text-white">Contact</a></li>
-                        <li><a href="privacy" class="text-gray-400 hover:text-white">Privacy Policy</a></li>
-                        <li><a href="terms" class="text-gray-400 hover:text-white">Terms of Service</a></li>
+                        <li><a href="https://calcdomain.com/about" class="text-gray-400 hover:text-white">About Us</a></li>
+                        <li><a href="https://calcdomain.com/contact" class="text-gray-400 hover:text-white">Contact</a></li>
+                        <li><a href="https://calcdomain.com/privacy" class="text-gray-400 hover:text-white">Privacy Policy</a></li>
+                        <li><a href="https://calcdomain.com/terms" class="text-gray-400 hover:text-white">Terms of Service</a></li>
                         <li><a href="sitemap.xml" class="text-gray-400 hover:text-white">Site Map</a></li>
                     </ul>
                 </div>
@@ -96,18 +96,18 @@
 <h1>Company Planning &amp; Financial Statements</h1>
 <p style="max-width:800px">Strumenti per pianificare, valutare e gestire l’azienda: rendiconti, costi di avvio, spazi e leasing, benefit fiscali, chilometraggio e imposte su vendite e pagamenti.</p>
 <div class="grid grid-3-col" style="margin-top:1rem;">
-<a class="card" href="https://calcdomain.com/cash-flow-statement"><h3>Cash Flow Statement</h3><p>OO/INV/FIN con riconciliazione.</p></a>
-<a class="card" href="https://calcdomain.com/pro-forma-income-statement"><h3>Pro Forma Income Statement</h3><p>Ricavi, margini e opex.</p></a>
-<h3>Business Valuation</h3><p>DCF, multipli e precedent deals.</p>
-<a class="card" href="https://calcdomain.com/startup-costs"><h3>Startup Costs</h3><p>Capex, setup e burn rate.</p></a>
-<a class="card" href="https://calcdomain.com/office-space"><h3>Office Space</h3><p>Metrature, densità e costi.</p></a>
-<h3>Lease vs. Buy (Equipment)</h3><p>Confronto after-tax su vita utile.</p>
+<a class="card" href="https://calcdomain.com/cash-flow-statement"><h3>Cash flow statement</h3><p>OO/INV/FIN con riconciliazione.</p></a>
+<a class="card" href="https://calcdomain.com/pro-forma-income-statement"><h3>Pro forma income statement</h3><p>Ricavi, margini e opex.</p></a>
+<h3>Business valuation</h3><p>DCF, multipli e precedent deals.</p>
+<a class="card" href="https://calcdomain.com/startup-costs"><h3>Startup costs</h3><p>Capex, setup e burn rate.</p></a>
+<a class="card" href="https://calcdomain.com/office-space"><h3>Office space</h3><p>Metrature, densità e costi.</p></a>
+<h3>Lease vs. buy (equipment)</h3><p>Confronto after-tax su vita utile.</p>
 <a class="card" href="https://calcdomain.com/section-179"><h3>Section 179</h3><p>Limiti e bonus depreciation.</p></a>
-<a class="card" href="https://calcdomain.com/business-mileage"><h3>Business Mileage</h3><p>Metodo standard vs. spese reali.</p></a>
-<h3>Card Processing Fees</h3><p>Interchange, assessment e markup.</p>
-<h3>Sales Tax</h3><p>Aliquote locali e reverse calc.</p>
-<a class="card" href="https://calcdomain.com/reverse-sales-tax"><h3>Reverse Sales Tax</h3><p>Prezzo al netto di IVA/imposte.</p></a>
-<h3>VAT Calculator</h3><p>Aggiungi/rimuovi IVA multi-aliquota.</p>
+<a class="card" href="https://calcdomain.com/business-mileage"><h3>Business mileage</h3><p>Metodo standard vs. spese reali.</p></a>
+<h3>Card processing fees</h3><p>Interchange, assessment e markup.</p>
+<h3>Sales tax</h3><p>Aliquote locali e reverse calc.</p>
+<a class="card" href="https://calcdomain.com/reverse-sales-tax"><h3>Reverse sales tax</h3><p>Prezzo al netto di IVA/imposte.</p></a>
+<h3>VAT calculator</h3><p>Aggiungi/rimuovi IVA multi-aliquota.</p>
 </div>
 </div>
 </main>
