--- a/sito_modificato/subcategories/finance-personal-loans.html
+++ b/sito_modificato/subcategories/finance-personal-loans.html
@@ -71,27 +71,27 @@
                     <h2 class="text-xl font-semibold text-gray-900 mb-4">Core personal loan tools</h2>
                     <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4">
                         <a href="https://calcdomain.com/personal-loan" class="card-hover bg-white p-5 rounded-lg shadow">
-                            <h3 class="text-lg font-semibold text-gray-900">Personal Loan Calculator</h3>
+                            <h3 class="text-lg font-semibold text-gray-900">Personal loan calculator</h3>
                             <p class="text-sm text-gray-600 mt-2">Estimate payment size, total interest, and payoff timeline for installment loans.</p>
                         </a>
                         <a href="https://calcdomain.com/simple-loan" class="card-hover bg-white p-5 rounded-lg shadow">
-                            <h3 class="text-lg font-semibold text-gray-900">Simple Loan Calculator</h3>
+                            <h3 class="text-lg font-semibold text-gray-900">Simple loan calculator</h3>
                             <p class="text-sm text-gray-600 mt-2">Compute simple-interest payments and schedules for short-term personal loans.</p>
                         </a>
                         <a href="https://calcdomain.com/loan-amortization" class="card-hover bg-white p-5 rounded-lg shadow">
-                            <h3 class="text-lg font-semibold text-gray-900">Loan Amortization Schedule</h3>
+                            <h3 class="text-lg font-semibold text-gray-900">Loan amortization schedule</h3>
                             <p class="text-sm text-gray-600 mt-2">Generate full payment tables with principal and interest by period.</p>
                         </a>
                         <a href="https://calcdomain.com/loan-payoff" class="card-hover bg-white p-5 rounded-lg shadow">
-                            <h3 class="text-lg font-semibold text-gray-900">Loan Payoff Planner</h3>
+                            <h3 class="text-lg font-semibold text-gray-900">Loan payoff planner</h3>
                             <p class="text-sm text-gray-600 mt-2">See interest saved and new payoff dates with one-time or recurring extras.</p>
                         </a>
                         <a href="https://calcdomain.com/loan-prepayment" class="card-hover bg-white p-5 rounded-lg shadow">
-                            <h3 class="text-lg font-semibold text-gray-900">Loan Prepayment Calculator</h3>
+                            <h3 class="text-lg font-semibold text-gray-900">Loan prepayment calculator</h3>
                             <p class="text-sm text-gray-600 mt-2">Compare strategies like snowball vs. avalanche and measure months saved.</p>
                         </a>
                         <a href="https://calcdomain.com/loan-comparison" class="card-hover bg-white p-5 rounded-lg shadow">
-                            <h3 class="text-lg font-semibold text-gray-900">Loan Comparison</h3>
+                            <h3 class="text-lg font-semibold text-gray-900">Loan comparison</h3>
                             <p class="text-sm text-gray-600 mt-2">Evaluate multiple offers side-by-side by APR, fees, and cumulative interest.</p>
                         </a>
                     </div>
@@ -101,23 +101,23 @@
                     <h2 class="text-xl font-semibold text-gray-900 mb-4">Cost &amp; rate analysis</h2>
                     <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4">
                         <a href="https://calcdomain.com/apr" class="card-hover bg-white p-5 rounded-lg shadow">
-                            <h3 class="text-lg font-semibold text-gray-900">APR Calculator</h3>
+                            <h3 class="text-lg font-semibold text-gray-900">APR calculator</h3>
                             <p class="text-sm text-gray-600 mt-2">Convert nominal interest plus fees into an apples-to-apples APR.</p>
                         </a>
                         <a href="https://calcdomain.com/interest-only-loan" class="card-hover bg-white p-5 rounded-lg shadow">
-                            <h3 class="text-lg font-semibold text-gray-900">Interest-Only Loan</h3>
+                            <h3 class="text-lg font-semibold text-gray-900">Interest-only loan</h3>
                             <p class="text-sm text-gray-600 mt-2">Project payments during the IO period and the balance when amortization begins.</p>
                         </a>
                         <a href="https://calcdomain.com/balloon-loan" class="card-hover bg-white p-5 rounded-lg shadow">
-                            <h3 class="text-lg font-semibold text-gray-900">Balloon Loan Calculator</h3>
+                            <h3 class="text-lg font-semibold text-gray-900">Balloon loan calculator</h3>
                             <p class="text-sm text-gray-600 mt-2">Plan for balloon balances, refinancing needs, and total interest expense.</p>
                         </a>
                         <a href="https://calcdomain.com/dti-ratio" class="card-hover bg-white p-5 rounded-lg shadow">
-                            <h3 class="text-lg font-semibold text-gray-900">Debt-to-Income Ratio</h3>
+                            <h3 class="text-lg font-semibold text-gray-900">Debt-to-income ratio</h3>
                             <p class="text-sm text-gray-600 mt-2">Check lending eligibility by calculating front-end and back-end DTI.</p>
                         </a>
                         <a href="https://calcdomain.com/debt-consolidation" class="card-hover bg-white p-5 rounded-lg shadow">
-                            <h3 class="text-lg font-semibold text-gray-900">Debt Consolidation</h3>
+                            <h3 class="text-lg font-semibold text-gray-900">Debt consolidation</h3>
                             <p class="text-sm text-gray-600 mt-2">Compare current debts against a consolidation loan to verify savings.</p>
                         </a>
                     </div>
@@ -127,19 +127,19 @@
                     <h2 class="text-xl font-semibold text-gray-900 mb-4">Payoff &amp; credit strategies</h2>
                     <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4">
                         <a href="https://calcdomain.com/credit-card-payoff" class="card-hover bg-white p-5 rounded-lg shadow">
-                            <h3 class="text-lg font-semibold text-gray-900">Credit Card Payoff</h3>
+                            <h3 class="text-lg font-semibold text-gray-900">Credit card payoff</h3>
                             <p class="text-sm text-gray-600 mt-2">Build fixed payment or target-date payoff plans for revolving balances.</p>
                         </a>
                         <a href="https://calcdomain.com/auto-loan" class="card-hover bg-white p-5 rounded-lg shadow">
-                            <h3 class="text-lg font-semibold text-gray-900">Auto Loan Calculator</h3>
+                            <h3 class="text-lg font-semibold text-gray-900">Auto loan calculator</h3>
                             <p class="text-sm text-gray-600 mt-2">Price vehicles with taxes, dealer fees, trade-ins, and rebates.</p>
                         </a>
                         <a href="https://calcdomain.com/auto-lease" class="card-hover bg-white p-5 rounded-lg shadow">
-                            <h3 class="text-lg font-semibold text-gray-900">Auto Lease Calculator</h3>
+                            <h3 class="text-lg font-semibold text-gray-900">Auto lease calculator</h3>
                             <p class="text-sm text-gray-600 mt-2">Break down residual value, money factor, and total lease cost.</p>
                         </a>
                         <a href="https://calcdomain.com/student-loan" class="card-hover bg-white p-5 rounded-lg shadow">
-                            <h3 class="text-lg font-semibold text-gray-900">Student Loan Calculator</h3>
+                            <h3 class="text-lg font-semibold text-gray-900">Student loan calculator</h3>
                             <p class="text-sm text-gray-600 mt-2">Model federal IDR plans, forgiveness targets, and refinancing outcomes.</p>
                         </a>
                     </div>
@@ -188,7 +188,7 @@
         <div class="container mx-auto px-4">
             <div class="grid grid-cols-1 md:grid-cols-4 gap-8">
                 <div>
-                    <h3 class="text-2xl font-bold mb-4">CalcDomain</h3>
+                    <h3 class="text-2xl font-bold mb-4">Calcdomain</h3>
                     <p class="text-gray-400 mb-4">Your trusted source for free online calculators. Accurate, fast, and reliable calculations for every need.</p>
                     <div class="flex space-x-4">
                         <a href="#" class="text-gray-400 hover:text-white" aria-label="Twitter">
@@ -222,10 +222,10 @@
                 <div>
                     <h4 class="text-lg font-semibold mb-4">Support</h4>
                     <ul class="space-y-2">
-                        <li><a href="about" class="text-gray-400 hover:text-white">About Us</a></li>
-                        <li><a href="contact" class="text-gray-400 hover:text-white">Contact</a></li>
-                        <li><a href="privacy" class="text-gray-400 hover:text-white">Privacy Policy</a></li>
-                        <li><a href="terms" class="text-gray-400 hover:text-white">Terms of Service</a></li>
+                        <li><a href="https://calcdomain.com/about" class="text-gray-400 hover:text-white">About Us</a></li>
+                        <li><a href="https://calcdomain.com/contact" class="text-gray-400 hover:text-white">Contact</a></li>
+                        <li><a href="https://calcdomain.com/privacy" class="text-gray-400 hover:text-white">Privacy Policy</a></li>
+                        <li><a href="https://calcdomain.com/terms" class="text-gray-400 hover:text-white">Terms of Service</a></li>
                         <li><a href="sitemap.xml" class="text-gray-400 hover:text-white">Site Map</a></li>
                     </ul>
                 </div>
