--- a/sito_modificato/subcategories/mechanical-engineering.html
+++ b/sito_modificato/subcategories/mechanical-engineering.html
@@ -64,7 +64,7 @@
             </svg>
           </div>
           <div>
-            <h3 class="font-semibold text-gray-800">Gear Ratio Calculator</h3>
+            <h3 class="font-semibold text-gray-800">Gear ratio calculator</h3>
             <p class="text-sm text-gray-600 mt-1">Compute ratio, speed, and torque relationships for gear pairs and trains.</p>
           </div>
         </a>
@@ -75,7 +75,7 @@
             </svg>
           </div>
           <div>
-            <h3 class="font-semibold text-gray-800">Torque Calculator</h3>
+            <h3 class="font-semibold text-gray-800">Torque calculator</h3>
             <p class="text-sm text-gray-600 mt-1">Relate torque, force, and radius with quick unit-aware results.</p>
           </div>
         </a>
@@ -86,7 +86,7 @@
             </svg>
           </div>
           <div>
-            <h3 class="font-semibold text-gray-800">Horsepower Calculator</h3>
+            <h3 class="font-semibold text-gray-800">Horsepower calculator</h3>
             <p class="text-sm text-gray-600 mt-1">Convert between power, torque, and RPM instantly.</p>
           </div>
         </a>
@@ -97,7 +97,7 @@
             </svg>
           </div>
           <div>
-            <h3 class="font-semibold text-gray-800">Pulley Speed Calculator</h3>
+            <h3 class="font-semibold text-gray-800">Pulley speed calculator</h3>
             <p class="text-sm text-gray-600 mt-1">Find driven speed and ratio for belt and pulley systems.</p>
           </div>
         </a>
@@ -108,7 +108,7 @@
             </svg>
           </div>
           <div>
-            <h3 class="font-semibold text-gray-800">Spring Rate Calculator</h3>
+            <h3 class="font-semibold text-gray-800">Spring rate calculator</h3>
             <p class="text-sm text-gray-600 mt-1">Estimate stiffness, deflection, and preload for common spring types.</p>
           </div>
         </a>
@@ -119,7 +119,7 @@
             </svg>
           </div>
           <div>
-            <h3 class="font-semibold text-gray-800">Belt Drive Design Calculator</h3>
+            <h3 class="font-semibold text-gray-800">Belt drive design calculator</h3>
             <p class="text-sm text-gray-600 mt-1">Select belt length, wrap angle, and center distance with ease.</p>
           </div>
         </a>
@@ -130,7 +130,7 @@
             </svg>
           </div>
           <div>
-            <h3 class="font-semibold text-gray-800">Chain Drive Design Calculator</h3>
+            <h3 class="font-semibold text-gray-800">Chain drive design calculator</h3>
             <p class="text-sm text-gray-600 mt-1">Size sprockets, pitch, and chain length for reliable transmission.</p>
           </div>
         </a>
@@ -141,7 +141,7 @@
             </svg>
           </div>
           <div>
-            <h3 class="font-semibold text-gray-800">Cam Profile Design Calculator</h3>
+            <h3 class="font-semibold text-gray-800">Cam profile design calculator</h3>
             <p class="text-sm text-gray-600 mt-1">Generate motion laws and key cam parameters for follower travel.</p>
           </div>
         </a>
@@ -152,7 +152,7 @@
             </svg>
           </div>
           <div>
-            <h3 class="font-semibold text-gray-800">Bolt Torque Calculator</h3>
+            <h3 class="font-semibold text-gray-800">Bolt torque calculator</h3>
             <p class="text-sm text-gray-600 mt-1">Determine tightening torque from preload, size, and friction assumptions.</p>
           </div>
         </a>
@@ -163,7 +163,7 @@
             </svg>
           </div>
           <div>
-            <h3 class="font-semibold text-gray-800">Journal Bearing Design Calculator</h3>
+            <h3 class="font-semibold text-gray-800">Journal bearing design calculator</h3>
             <p class="text-sm text-gray-600 mt-1">Evaluate load capacity, clearance, and Sommerfeld number.</p>
           </div>
         </a>
@@ -174,7 +174,7 @@
             </svg>
           </div>
           <div>
-            <h3 class="font-semibold text-gray-800">Shaft Design Calculator</h3>
+            <h3 class="font-semibold text-gray-800">Shaft design calculator</h3>
             <p class="text-sm text-gray-600 mt-1">Check stresses and deflection for stepped or keyed shafts.</p>
           </div>
         </a>
@@ -185,7 +185,7 @@
             </svg>
           </div>
           <div>
-            <h3 class="font-semibold text-gray-800">Ball Bearing Life Calculator</h3>
+            <h3 class="font-semibold text-gray-800">Ball bearing life calculator</h3>
             <p class="text-sm text-gray-600 mt-1">Estimate L10 bearing life from load and speed conditions.</p>
           </div>
         </a>
@@ -196,7 +196,7 @@
             </svg>
           </div>
           <div>
-            <h3 class="font-semibold text-gray-800">Pressure Vessel Design (ASME)</h3>
+            <h3 class="font-semibold text-gray-800">Pressure vessel design (ASME)</h3>
             <p class="text-sm text-gray-600 mt-1">Quick wall thickness and hoop stress checks for cylinders and heads.</p>
           </div>
         </a>
@@ -207,7 +207,7 @@
             </svg>
           </div>
           <div>
-            <h3 class="font-semibold text-gray-800">Fin Heat Transfer Calculator</h3>
+            <h3 class="font-semibold text-gray-800">Fin heat transfer calculator</h3>
             <p class="text-sm text-gray-600 mt-1">Compute fin efficiency and heat dissipation for common fin types.</p>
           </div>
         </a>
@@ -224,7 +224,7 @@
             </svg>
           </div>
           <div>
-            <h3 class="font-semibold text-gray-800">Stress and Strain Calculator</h3>
+            <h3 class="font-semibold text-gray-800">Stress and strain calculator</h3>
             <p class="text-sm text-gray-600 mt-1">Convert between stress, strain, and modulus for axial and shear loads.</p>
           </div>
         </a>
@@ -235,7 +235,7 @@
             </svg>
           </div>
           <div>
-            <h3 class="font-semibold text-gray-800">Factor of Safety Calculator</h3>
+            <h3 class="font-semibold text-gray-800">Factor of safety calculator</h3>
             <p class="text-sm text-gray-600 mt-1">Check static safety using yield or ultimate criteria and applied loads.</p>
           </div>
         </a>
@@ -246,7 +246,7 @@
             </svg>
           </div>
           <div>
-            <h3 class="font-semibold text-gray-800">Beam Deflection Calculator</h3>
+            <h3 class="font-semibold text-gray-800">Beam deflection calculator</h3>
             <p class="text-sm text-gray-600 mt-1">Predict deflection and slope for standard loads and supports.</p>
           </div>
         </a>
@@ -257,7 +257,7 @@
             </svg>
           </div>
           <div>
-            <h3 class="font-semibold text-gray-800">Thermal Stress Calculator</h3>
+            <h3 class="font-semibold text-gray-800">Thermal stress calculator</h3>
             <p class="text-sm text-gray-600 mt-1">Estimate stresses from constrained thermal expansion.</p>
           </div>
         </a>
@@ -268,7 +268,7 @@
             </svg>
           </div>
           <div>
-            <h3 class="font-semibold text-gray-800">Fatigue Life (S–N) Calculator</h3>
+            <h3 class="font-semibold text-gray-800">Fatigue life (S–N) calculator</h3>
             <p class="text-sm text-gray-600 mt-1">Approximate cycles to failure from stress amplitude and material data.</p>
           </div>
         
@@ -279,7 +279,7 @@
             </svg>
           </div>
           <div>
-            <h3 class="font-semibold text-gray-800">Fracture Mechanics (K) Calculator</h3>
+            <h3 class="font-semibold text-gray-800">Fracture mechanics (K) calculator</h3>
             <p class="text-sm text-gray-600 mt-1">Evaluate stress intensity factor and crack growth parameters.</p>
           </div>
         </a>
@@ -290,7 +290,7 @@
             </svg>
           </div>
           <div>
-            <h3 class="font-semibold text-gray-800">Hardness Conversion Calculator</h3>
+            <h3 class="font-semibold text-gray-800">Hardness conversion calculator</h3>
             <p class="text-sm text-gray-600 mt-1">Convert between Rockwell, Brinell, and Vickers hardness scales.</p>
           </div>
         </a>
@@ -301,7 +301,7 @@
             </svg>
           </div>
           <div>
-            <h3 class="font-semibold text-gray-800">Welded Connection Design</h3>
+            <h3 class="font-semibold text-gray-800">Welded connection design</h3>
             <p class="text-sm text-gray-600 mt-1">Check fillet and groove weld capacities under combined loading.</p>
           </div>
         </a>
@@ -318,7 +318,7 @@
             </svg>
           </div>
           <div>
-            <h3 class="font-semibold text-gray-800">Reynolds Number Calculator</h3>
+            <h3 class="font-semibold text-gray-800">Reynolds number calculator</h3>
             <p class="text-sm text-gray-600 mt-1">Classify flow regime and assess similarity scaling.</p>
           </div>
         </a>
@@ -329,7 +329,7 @@
             </svg>
           </div>
           <div>
-            <h3 class="font-semibold text-gray-800">Bernoulli's Equation Calculator</h3>
+            <h3 class="font-semibold text-gray-800">Bernoulli's equation calculator</h3>
             <p class="text-sm text-gray-600 mt-1">Relate pressure, velocity, and elevation for steady incompressible flow.</p>
           </div>
         </a>
@@ -340,7 +340,7 @@
             </svg>
           </div>
           <div>
-            <h3 class="font-semibold text-gray-800">Heat Transfer Calculator</h3>
+            <h3 class="font-semibold text-gray-800">Heat transfer calculator</h3>
             <p class="text-sm text-gray-600 mt-1">Conduction, convection, and radiation estimates in one place.</p>
           </div>
         </a>
@@ -351,7 +351,7 @@
             </svg>
           </div>
           <div>
-            <h3 class="font-semibold text-gray-800">Rankine Cycle Calculator</h3>
+            <h3 class="font-semibold text-gray-800">Rankine cycle calculator</h3>
             <p class="text-sm text-gray-600 mt-1">Approximate thermal efficiency and state points for steam cycles.</p>
           </div>
         </a>
@@ -362,7 +362,7 @@
             </svg>
           </div>
           <div>
-            <h3 class="font-semibold text-gray-800">Heat Exchanger (LMTD) Calculator</h3>
+            <h3 class="font-semibold text-gray-800">Heat exchanger (LMTD) calculator</h3>
             <p class="text-sm text-gray-600 mt-1">Size exchangers using LMTD or UA methods for common configurations.</p>
           </div>
         </a>
@@ -373,7 +373,7 @@
             </svg>
           </div>
           <div>
-            <h3 class="font-semibold text-gray-800">Pipe Flow (Hazen–Williams)</h3>
+            <h3 class="font-semibold text-gray-800">Pipe flow (hazen–williams)</h3>
             <p class="text-sm text-gray-600 mt-1">Estimate head loss in water systems using empirical C factors.</p>
           </div>
         </a>
@@ -384,7 +384,7 @@
             </svg>
           </div>
           <div>
-            <h3 class="font-semibold text-gray-800">Pipe Flow (Darcy–Weisbach)</h3>
+            <h3 class="font-semibold text-gray-800">Pipe flow (darcy–weisbach)</h3>
             <p class="text-sm text-gray-600 mt-1">Compute friction losses via Moody or Colebrook correlations.</p>
           </div>
         </a>
@@ -395,7 +395,7 @@
             </svg>
           </div>
           <div>
-            <h3 class="font-semibold text-gray-800">Orifice Plate Flow Calculator</h3>
+            <h3 class="font-semibold text-gray-800">Orifice plate flow calculator</h3>
             <p class="text-sm text-gray-600 mt-1">Measure flow rate from differential pressure across an orifice.</p>
           </div>
         </a>
@@ -406,7 +406,7 @@
             </svg>
           </div>
           <div>
-            <h3 class="font-semibold text-gray-800">Pump Power Calculator</h3>
+            <h3 class="font-semibold text-gray-800">Pump power calculator</h3>
             <p class="text-sm text-gray-600 mt-1">Find hydraulic and shaft power from flow, head, and efficiency.</p>
           </div>
         </a>
@@ -417,7 +417,7 @@
             </svg>
           </div>
           <div>
-            <h3 class="font-semibold text-gray-800">Hydrostatic Pressure Calculator</h3>
+            <h3 class="font-semibold text-gray-800">Hydrostatic pressure calculator</h3>
             <p class="text-sm text-gray-600 mt-1">Determine pressure with depth for liquids at rest.</p>
           </div>
         </a>
@@ -428,7 +428,7 @@
             </svg>
           </div>
           <div>
-            <h3 class="font-semibold text-gray-800">Pump Sizing Calculator</h3>
+            <h3 class="font-semibold text-gray-800">Pump sizing calculator</h3>
             <p class="text-sm text-gray-600 mt-1">Select pump capacity from system curve and duty point.</p>
           </div>
         </a>
@@ -439,7 +439,7 @@
             </svg>
           </div>
           <div>
-            <h3 class="font-semibold text-gray-800">Pipe Sizing (Water) Calculator</h3>
+            <h3 class="font-semibold text-gray-800">Pipe sizing (water) calculator</h3>
             <p class="text-sm text-gray-600 mt-1">Choose pipe diameter to meet velocity and head loss targets.</p>
           </div>
         </a>
@@ -456,7 +456,7 @@
             </svg>
           </div>
           <div>
-            <h3 class="font-semibold text-gray-800">HVAC Tonnage Calculator</h3>
+            <h3 class="font-semibold text-gray-800">HVAC tonnage calculator</h3>
             <p class="text-sm text-gray-600 mt-1">Estimate cooling capacity requirements for spaces.</p>
           </div>
         </a>
@@ -467,7 +467,7 @@
             </svg>
           </div>
           <div>
-            <h3 class="font-semibold text-gray-800">Duct Sizing (Equal Friction)</h3>
+            <h3 class="font-semibold text-gray-800">Duct sizing (equal friction)</h3>
             <p class="text-sm text-gray-600 mt-1">Size ducts by target friction rate and airflow.</p>
           </div>
         </a>
@@ -478,7 +478,7 @@
             </svg>
           </div>
           <div>
-            <h3 class="font-semibold text-gray-800">Psychrometric Calculator</h3>
+            <h3 class="font-semibold text-gray-800">Psychrometric calculator</h3>
             <p class="text-sm text-gray-600 mt-1">Get humidity ratio, enthalpy, and state points from temperature and RH.</p>
           </div>
         </a>
@@ -489,7 +489,7 @@
             </svg>
           </div>
           <div>
-            <h3 class="font-semibold text-gray-800">Heat Loss Calculator</h3>
+            <h3 class="font-semibold text-gray-800">Heat loss calculator</h3>
             <p class="text-sm text-gray-600 mt-1">Estimate envelope and infiltration heat losses.</p>
           </div>
         </a>
@@ -500,7 +500,7 @@
             </svg>
           </div>
           <div>
-            <h3 class="font-semibold text-gray-800">Chiller Load Calculator</h3>
+            <h3 class="font-semibold text-gray-800">Chiller load calculator</h3>
             <p class="text-sm text-gray-600 mt-1">Compute cooling load from flow rate and temperature drop.</p>
           </div>
         </a>
@@ -517,7 +517,7 @@
             </svg>
           </div>
           <div>
-            <h3 class="font-semibold text-gray-800">Machining Speed &amp; Feed</h3>
+            <h3 class="font-semibold text-gray-800">Machining speed &amp; feed</h3>
             <p class="text-sm text-gray-600 mt-1">Find RPM, feed, and material removal rate for milling, turning, and drilling.</p>
           </div>
         </a>
@@ -528,7 +528,7 @@
             </svg>
           </div>
           <div>
-            <h3 class="font-semibold text-gray-800">Welding Cost Calculator</h3>
+            <h3 class="font-semibold text-gray-800">Welding cost calculator</h3>
             <p class="text-sm text-gray-600 mt-1">Estimate weld time, consumables, and total cost per joint.</p>
           </div>
         </a>
@@ -545,7 +545,7 @@
             </svg>
           </div>
           <div>
-            <h3 class="font-semibold text-gray-800">Vibration Analysis (Natural Frequency)</h3>
+            <h3 class="font-semibold text-gray-800">Vibration analysis (natural frequency)</h3>
             <p class="text-sm text-gray-600 mt-1">Approximate natural frequencies for SDOF and simple multi-DOF systems.</p>
           </div>
         </a>
@@ -556,7 +556,7 @@
         <div class="container mx-auto px-4">
             <div class="grid grid-cols-1 md:grid-cols-4 gap-8">
                 <div>
-                    <h3 class="text-2xl font-bold mb-4">CalcDomain</h3>
+                    <h3 class="text-2xl font-bold mb-4">Calcdomain</h3>
                     <p class="text-gray-400 mb-4">Your trusted source for free online calculators. Accurate, fast, and reliable calculations for every need.</p>
                     <div class="flex space-x-4">
                         <a href="#" class="text-gray-400 hover:text-white" aria-label="Twitter">
@@ -590,10 +590,10 @@
                 <div>
                     <h4 class="text-lg font-semibold mb-4">Support</h4>
                     <ul class="space-y-2">
-                        <li><a href="about" class="text-gray-400 hover:text-white">About Us</a></li>
-                        <li><a href="contact" class="text-gray-400 hover:text-white">Contact</a></li>
-                        <li><a href="privacy" class="text-gray-400 hover:text-white">Privacy Policy</a></li>
-                        <li><a href="terms" class="text-gray-400 hover:text-white">Terms of Service</a></li>
+                        <li><a href="https://calcdomain.com/about" class="text-gray-400 hover:text-white">About Us</a></li>
+                        <li><a href="https://calcdomain.com/contact" class="text-gray-400 hover:text-white">Contact</a></li>
+                        <li><a href="https://calcdomain.com/privacy" class="text-gray-400 hover:text-white">Privacy Policy</a></li>
+                        <li><a href="https://calcdomain.com/terms" class="text-gray-400 hover:text-white">Terms of Service</a></li>
                         <li><a href="sitemap.xml" class="text-gray-400 hover:text-white">Site Map</a></li>
                     </ul>
                 </div>
