--- a/sito_modificato/subcategories/automotive.html
+++ b/sito_modificato/subcategories/automotive.html
@@ -94,7 +94,7 @@
                                     <svg class="w-6 h-6 text-blue-600" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v8m0 0v1m0-1c-1.11 0-2.08-.402-2.599-1"></path></svg>
                                 </div>
                                 <div>
-                                    <h3 class="font-semibold text-gray-800">Gas Mileage Calculator</h3>
+                                    <h3 class="font-semibold text-gray-800">Gas mileage calculator</h3>
                                     <p class="text-sm text-gray-600 mt-1">Calculate gas mileage quickly and accurately.</p>
                                 </div>
                             </a>
@@ -103,14 +103,14 @@
                                     <svg class="w-6 h-6 text-blue-600" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v8m0 0v1m0-1c-1.11 0-2.08-.402-2.599-1"></path></svg>
                                 </div>
                                 <div>
-                                    <h3 class="font-semibold text-gray-800">Fuel Economy Calculator</h3>
+                                    <h3 class="font-semibold text-gray-800">Fuel economy calculator</h3>
                                     <p class="text-sm text-gray-600 mt-1">Calculate fuel economy calculator quickly and accurately.</p>
                                 </div>
                                 <div class="bg-blue-100 p-3 rounded-full">
                                     <svg class="w-6 h-6 text-blue-600" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v8m0 0v1m0-1c-1.11 0-2.08-.402-2.599-1"></path></svg>
                                 </div>
                                 <div>
-                                    <h3 class="font-semibold text-gray-800">Trip Cost Calculator</h3>
+                                    <h3 class="font-semibold text-gray-800">Trip cost calculator</h3>
                                     <p class="text-sm text-gray-600 mt-1">Calculate trip cost calculator quickly and accurately.</p>
                                 </div>
                                 
@@ -119,7 +119,7 @@
                     <svg class="w-6 h-6 text-blue-600" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v8m0 0v1m0-1c-1.11 0-2.08-.402-2.599-1"></path></svg>
                 </div>
                 <div>
-                    <h3 class="font-semibold text-gray-800">Car Depreciation Calculator</h3>
+                    <h3 class="font-semibold text-gray-800">Car depreciation calculator</h3>
                     <p class="text-sm text-gray-600 mt-1">Calculate how much your car will depreciate over time with our authoritative Car Depreciation Calculator.</p>
                 </div>
             </a>
@@ -129,7 +129,7 @@
                     <svg class="w-6 h-6 text-blue-600" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v8m0 0v1m0-1c-1.11 0-2.08-.402-2.599-1"></path></svg>
                 </div>
                 <div>
-                    <h3 class="font-semibold text-gray-800">Fuel Cost Calculator | Everyday Life</h3>
+                    <h3 class="font-semibold text-gray-800">Fuel cost calculator | everyday life</h3>
                     <p class="text-sm text-gray-600 mt-1">Calculate your fuel costs efficiently with our accurate and accessible Fuel Cost Calculator.</p>
                 </div>
             </a>
@@ -139,7 +139,7 @@
                     <svg class="w-6 h-6 text-blue-600" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v8m0 0v1m0-1c-1.11 0-2.08-.402-2.599-1"></path></svg>
                 </div>
                 <div>
-                    <h3 class="font-semibold text-gray-800">Gas Mileage (MPG) Calculator</h3>
+                    <h3 class="font-semibold text-gray-800">Gas mileage (MPG) calculator</h3>
                     <p class="text-sm text-gray-600 mt-1">Calculate your vehicle</p>
                 </div>
             </a>
@@ -149,7 +149,7 @@
                     <svg class="w-6 h-6 text-blue-600" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v8m0 0v1m0-1c-1.11 0-2.08-.402-2.599-1"></path></svg>
                 </div>
                 <div>
-                    <h3 class="font-semibold text-gray-800">Oil Change Interval Calculator</h3>
+                    <h3 class="font-semibold text-gray-800">Oil change interval calculator</h3>
                     <p class="text-sm text-gray-600 mt-1">Calculate the optimal interval for changing your car</p>
                 </div>
             </a>
@@ -159,7 +159,7 @@
                     <svg class="w-6 h-6 text-blue-600" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v8m0 0v1m0-1c-1.11 0-2.08-.402-2.599-1"></path></svg>
                 </div>
                 <div>
-                    <h3 class="font-semibold text-gray-800">Tire Size Calculator</h3>
+                    <h3 class="font-semibold text-gray-800">Tire size calculator</h3>
                     <p class="text-sm text-gray-600 mt-1">Calculate the dimensions of your tire with our authoritative Tire Size Calculator. Determine the best fit for your vehicle with precision.</p>
                 </div>
             </a>
@@ -170,7 +170,7 @@
                                     <svg class="w-6 h-6 text-blue-600" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v8m0 0v1m0-1c-1.11 0-2.08-.402-2.599-1"></path></svg>
                                 </div>
                                 <div>
-                                    <h3 class="font-semibold text-gray-800">Car Payment Calculator</h3>
+                                    <h3 class="font-semibold text-gray-800">Car payment calculator</h3>
                                     <p class="text-sm text-gray-600 mt-1">Calculate car payment calculator quickly and accurately.</p>
                                 </div>
                             </a>
@@ -179,7 +179,7 @@
                                     <svg class="w-6 h-6 text-blue-600" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v8m0 0v1m0-1c-1.11 0-2.08-.402-2.599-1"></path></svg>
                                 </div>
                                 <div>
-                                    <h3 class="font-semibold text-gray-800">Auto Insurance Calculator</h3>
+                                    <h3 class="font-semibold text-gray-800">Auto insurance calculator</h3>
                                     <p class="text-sm text-gray-600 mt-1">Calculate auto insurance calculator quickly and accurately.</p>
                                 </div>
                             </a>
@@ -188,7 +188,7 @@
                                     <svg class="w-6 h-6 text-blue-600" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v8m0 0v1m0-1c-1.11 0-2.08-.402-2.599-1"></path></svg>
                                 </div>
                                 <div>
-                                    <h3 class="font-semibold text-gray-800">Tire Pressure Calculator</h3>
+                                    <h3 class="font-semibold text-gray-800">Tire pressure calculator</h3>
                                     <p class="text-sm text-gray-600 mt-1">Calculate tire pressure calculator quickly and accurately.</p>
                                 </div>
                             </a>
@@ -197,7 +197,7 @@
                                     <svg class="w-6 h-6 text-blue-600" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v8m0 0v1m0-1c-1.11 0-2.08-.402-2.599-1"></path></svg>
                                 </div>
                                 <div>
-                                    <h3 class="font-semibold text-gray-800">Engine Displacement Calculator</h3>
+                                    <h3 class="font-semibold text-gray-800">Engine displacement calculator</h3>
                                     <p class="text-sm text-gray-600 mt-1">Calculate engine displacement calculator quickly and accurately.</p>
                                 </div>
                             </a>
@@ -215,7 +215,7 @@
 
                     <!-- Related Categories -->
                     <div class="bg-white p-6 rounded-lg shadow-md">
-                        <h3 class="font-bold text-lg mb-4">Related Categories</h3>
+                        <h3 class="font-bold text-lg mb-4">Related categories</h3>
                         <ul class="space-y-3">
                             <li><a href="https://calcdomain.com/finance" class="text-blue-600 hover:underline">Finance Calculators</a></li>
                             <li><a href="https://calcdomain.com/health-fitness" class="text-blue-600 hover:underline">Health & Fitness</a></li>
@@ -234,7 +234,7 @@
         <div class="container mx-auto px-4">
             <div class="grid grid-cols-1 md:grid-cols-4 gap-8">
                 <div>
-                    <h3 class="text-2xl font-bold mb-4">CalcDomain</h3>
+                    <h3 class="text-2xl font-bold mb-4">Calcdomain</h3>
                     <p class="text-gray-400 mb-4">Your trusted source for free online calculators. Accurate, fast, and reliable calculations for every need.</p>
                     <div class="flex space-x-4">
                         <a href="#" class="text-gray-400 hover:text-white" aria-label="Twitter">
@@ -268,10 +268,10 @@
                 <div>
                     <h4 class="text-lg font-semibold mb-4">Support</h4>
                     <ul class="space-y-2">
-                        <li><a href="about" class="text-gray-400 hover:text-white">About Us</a></li>
-                        <li><a href="contact" class="text-gray-400 hover:text-white">Contact</a></li>
-                        <li><a href="privacy" class="text-gray-400 hover:text-white">Privacy Policy</a></li>
-                        <li><a href="terms" class="text-gray-400 hover:text-white">Terms of Service</a></li>
+                        <li><a href="https://calcdomain.com/about" class="text-gray-400 hover:text-white">About Us</a></li>
+                        <li><a href="https://calcdomain.com/contact" class="text-gray-400 hover:text-white">Contact</a></li>
+                        <li><a href="https://calcdomain.com/privacy" class="text-gray-400 hover:text-white">Privacy Policy</a></li>
+                        <li><a href="https://calcdomain.com/terms" class="text-gray-400 hover:text-white">Terms of Service</a></li>
                         <li><a href="sitemap.xml" class="text-gray-400 hover:text-white">Site Map</a></li>
                     </ul>
                 </div>
