--- a/sito_modificato/subcategories/construction-concrete-mix-design-and-quality.html
+++ b/sito_modificato/subcategories/construction-concrete-mix-design-and-quality.html
@@ -34,7 +34,7 @@
         <div class="container mx-auto px-4">
             <div class="grid grid-cols-1 md:grid-cols-4 gap-8">
                 <div>
-                    <h3 class="text-2xl font-bold mb-4">CalcDomain</h3>
+                    <h3 class="text-2xl font-bold mb-4">Calcdomain</h3>
                     <p class="text-gray-400 mb-4">Your trusted source for free online calculators. Accurate, fast, and reliable calculations for every need.</p>
                     <div class="flex space-x-4">
                         <a href="#" class="text-gray-400 hover:text-white" aria-label="Twitter">
@@ -68,10 +68,10 @@
                 <div>
                     <h4 class="text-lg font-semibold mb-4">Support</h4>
                     <ul class="space-y-2">
-                        <li><a href="about" class="text-gray-400 hover:text-white">About Us</a></li>
-                        <li><a href="contact" class="text-gray-400 hover:text-white">Contact</a></li>
-                        <li><a href="privacy" class="text-gray-400 hover:text-white">Privacy Policy</a></li>
-                        <li><a href="terms" class="text-gray-400 hover:text-white">Terms of Service</a></li>
+                        <li><a href="https://calcdomain.com/about" class="text-gray-400 hover:text-white">About Us</a></li>
+                        <li><a href="https://calcdomain.com/contact" class="text-gray-400 hover:text-white">Contact</a></li>
+                        <li><a href="https://calcdomain.com/privacy" class="text-gray-400 hover:text-white">Privacy Policy</a></li>
+                        <li><a href="https://calcdomain.com/terms" class="text-gray-400 hover:text-white">Terms of Service</a></li>
                         <li><a href="sitemap.xml" class="text-gray-400 hover:text-white">Site Map</a></li>
                     </ul>
                 </div>
@@ -93,11 +93,11 @@
 <h1>Concrete Mix Design &amp; Quality</h1>
 <p>Design, verify, and optimize mixes with transparent calculations aligned to industry practice.</p>
 <div class="grid grid-3-col" style="margin-top:1rem;">
-<a class="card" href="https://calcdomain.com/aci-concrete-mix-design"><h3>ACI Concrete Mix Design (Absolute Volume)</h3><p>Design proportions per ACI with batch weights and yields.</p></a>
-<a class="card" href="https://calcdomain.com/concrete-admixture"><h3>Concrete Admixture Dosage Calculator</h3><p>Dosage by cement content and manufacturer specs.</p></a>
-<a class="card" href="https://calcdomain.com/aggregate-gradation"><h3>Concrete Aggregate Gradation Calculator</h3><p>Check sieve results against target grading envelopes.</p></a>
-<a class="card" href="https://calcdomain.com/concrete-strength"><h3>Concrete Compressive Strength Estimator</h3><p>Maturity/curing inputs to estimate in-place strength.</p></a>
-<a class="card" href="https://calcdomain.com/water-cement-ratio"><h3>Concrete Water-Cement Ratio Calculator</h3><p>Compute w/c and compare to spec ranges.</p></a>
+<a class="card" href="https://calcdomain.com/aci-concrete-mix-design"><h3>ACI concrete mix design (absolute volume)</h3><p>Design proportions per ACI with batch weights and yields.</p></a>
+<a class="card" href="https://calcdomain.com/concrete-admixture"><h3>Concrete admixture dosage calculator</h3><p>Dosage by cement content and manufacturer specs.</p></a>
+<a class="card" href="https://calcdomain.com/aggregate-gradation"><h3>Concrete aggregate gradation calculator</h3><p>Check sieve results against target grading envelopes.</p></a>
+<a class="card" href="https://calcdomain.com/concrete-strength"><h3>Concrete compressive strength estimator</h3><p>Maturity/curing inputs to estimate in-place strength.</p></a>
+<a class="card" href="https://calcdomain.com/water-cement-ratio"><h3>Concrete water-cement ratio calculator</h3><p>Compute w/c and compare to spec ranges.</p></a>
 </div>
 </div></main>
 <!-- Standard Footer --> 
