--- a/sito_modificato/subcategories/construction-concrete-quantities-and-masonry.html
+++ b/sito_modificato/subcategories/construction-concrete-quantities-and-masonry.html
@@ -34,7 +34,7 @@
         <div class="container mx-auto px-4">
             <div class="grid grid-cols-1 md:grid-cols-4 gap-8">
                 <div>
-                    <h3 class="text-2xl font-bold mb-4">CalcDomain</h3>
+                    <h3 class="text-2xl font-bold mb-4">Calcdomain</h3>
                     <p class="text-gray-400 mb-4">Your trusted source for free online calculators. Accurate, fast, and reliable calculations for every need.</p>
                     <div class="flex space-x-4">
                         <a href="#" class="text-gray-400 hover:text-white" aria-label="Twitter">
@@ -68,10 +68,10 @@
                 <div>
                     <h4 class="text-lg font-semibold mb-4">Support</h4>
                     <ul class="space-y-2">
-                        <li><a href="about" class="text-gray-400 hover:text-white">About Us</a></li>
-                        <li><a href="contact" class="text-gray-400 hover:text-white">Contact</a></li>
-                        <li><a href="privacy" class="text-gray-400 hover:text-white">Privacy Policy</a></li>
-                        <li><a href="terms" class="text-gray-400 hover:text-white">Terms of Service</a></li>
+                        <li><a href="https://calcdomain.com/about" class="text-gray-400 hover:text-white">About Us</a></li>
+                        <li><a href="https://calcdomain.com/contact" class="text-gray-400 hover:text-white">Contact</a></li>
+                        <li><a href="https://calcdomain.com/privacy" class="text-gray-400 hover:text-white">Privacy Policy</a></li>
+                        <li><a href="https://calcdomain.com/terms" class="text-gray-400 hover:text-white">Terms of Service</a></li>
                         <li><a href="sitemap.xml" class="text-gray-400 hover:text-white">Site Map</a></li>
                     </ul>
                 </div>
@@ -93,10 +93,10 @@
 <h1>Concrete Quantities &amp; Masonry</h1>
 <p>Fast takeoffs for common concrete elements and CMU walls, with clear formulas and waste factors.</p>
 <div class="grid grid-3-col" style="margin-top:1rem;">
-<a class="card" href="https://calcdomain.com/block-wall"><h3>Concrete Block (CMU) Wall Calculator</h3><p>Blocks, mortar, and grout estimates for CMU walls.</p></a>
-<a class="card" href="https://calcdomain.com/concrete-column"><h3>Concrete Column Calculator</h3><p>Volume and bags/ready-mix for round or rectangular columns.</p></a>
-<a class="card" href="https://calcdomain.com/concrete-footing"><h3>Concrete Footing Calculator</h3><p>Continuous or isolated footings with waste factors.</p></a>
-<a class="card" href="https://calcdomain.com/concrete-slab"><h3>Concrete Slab Volume Calculator</h3><p>Cubic yards/meters for pads, driveways, and floors.</p></a>
+<a class="card" href="https://calcdomain.com/block-wall"><h3>Concrete block (CMU) wall calculator</h3><p>Blocks, mortar, and grout estimates for CMU walls.</p></a>
+<a class="card" href="https://calcdomain.com/concrete-column"><h3>Concrete column calculator</h3><p>Volume and bags/ready-mix for round or rectangular columns.</p></a>
+<a class="card" href="https://calcdomain.com/concrete-footing"><h3>Concrete footing calculator</h3><p>Continuous or isolated footings with waste factors.</p></a>
+<a class="card" href="https://calcdomain.com/concrete-slab"><h3>Concrete slab volume calculator</h3><p>Cubic yards/meters for pads, driveways, and floors.</p></a>
 </div>
 </div></main>
 <!-- Standard Footer --> 
