--- a/sito_modificato/subcategories/construction-diy-project-layout-design.html
+++ b/sito_modificato/subcategories/construction-diy-project-layout-design.html
@@ -37,7 +37,7 @@
                                     <svg class="w-6 h-6 text-blue-600" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 12l2-2m0 0l7-7 7 7M5 10v10a1 1 0 001 1h3m10-11l2 2m-2-2v10a1 1 0 01-1 1h-3m-6 0a1 1 0 001-1v-4a1 1 0 011-1h2a1 1 0 011 1v4a1 1 0 001 1m-6 0h6"></path></svg>
                                 </div>
                                 <div>
-                                    <h3 class="font-semibold text-gray-800">Room Layout Calculator</h3>
+                                    <h3 class="font-semibold text-gray-800">Room layout calculator</h3>
                                 </div>
                             </a>
                             <a href="https://calcdomain.com/floor-plan-calculator" class="card-hover bg-white p-5 rounded-lg shadow-sm border flex items-start gap-4">
@@ -45,18 +45,18 @@
                                     <svg class="w-6 h-6 text-blue-600" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 12l2-2m0 0l7-7 7 7M5 10v10a1 1 0 001 1h3m10-11l2 2m-2-2v10a1 1 0 01-1 1h-3m-6 0a1 1 0 001-1v-4a1 1 0 011-1h2a1 1 0 011 1v4a1 1 0 001 1m-6 0h6"></path></svg>
                                 </div>
                                 <div>
-                                    <h3 class="font-semibold text-gray-800">Floor Plan Calculator</h3>
+                                    <h3 class="font-semibold text-gray-800">Floor plan calculator</h3>
                                 </div>
                             </a></div>                </section>            </main>
             <aside class="w-full lg:w-1/3">                <div class="sticky top-24 space-y-8">                    <div class="bg-gray-100 border rounded-lg flex items-center justify-center min-h-[300px]">
                       <div class="w-full h-full ad-slot" aria-hidden="true"></div>
                     </div>
-                    <div class="bg-white p-6 rounded-lg shadow-md">                        <h3 class="font-bold text-lg mb-4">Related Categories</h3>                        <ul class="space-y-3">                            <li><a href="https://calcdomain.com/finance" class="text-blue-600 hover:underline">Finance Calculators</a></li>                            <li><a href="https://calcdomain.com/health-fitness" class="text-blue-600 hover:underline">Health & Fitness</a></li>                            <li><a href="https://calcdomain.com/math-conversions" class="text-blue-600 hover:underline">Math & Conversions</a></li>                            <li><a href="https://calcdomain.com/lifestyle-everyday" class="text-blue-600 hover:underline">Lifestyle & Everyday</a></li>                        </ul>                    </div>                </div>            </aside>
+                    <div class="bg-white p-6 rounded-lg shadow-md">                        <h3 class="font-bold text-lg mb-4">Related categories</h3>                        <ul class="space-y-3">                            <li><a href="https://calcdomain.com/finance" class="text-blue-600 hover:underline">Finance Calculators</a></li>                            <li><a href="https://calcdomain.com/health-fitness" class="text-blue-600 hover:underline">Health & Fitness</a></li>                            <li><a href="https://calcdomain.com/math-conversions" class="text-blue-600 hover:underline">Math & Conversions</a></li>                            <li><a href="https://calcdomain.com/lifestyle-everyday" class="text-blue-600 hover:underline">Lifestyle & Everyday</a></li>                        </ul>                    </div>                </div>            </aside>
         </div>    </div>                <footer class="bg-gray-900 text-white py-12">
         <div class="container mx-auto px-4">
             <div class="grid grid-cols-1 md:grid-cols-4 gap-8">
                 <div>
-                    <h3 class="text-2xl font-bold mb-4">CalcDomain</h3>
+                    <h3 class="text-2xl font-bold mb-4">Calcdomain</h3>
                     <p class="text-gray-400 mb-4">Your trusted source for free online calculators. Accurate, fast, and reliable calculations for every need.</p>
                     <div class="flex space-x-4">
                         <a href="#" class="text-gray-400 hover:text-white" aria-label="Twitter">
@@ -90,10 +90,10 @@
                 <div>
                     <h4 class="text-lg font-semibold mb-4">Support</h4>
                     <ul class="space-y-2">
-                        <li><a href="about" class="text-gray-400 hover:text-white">About Us</a></li>
-                        <li><a href="contact" class="text-gray-400 hover:text-white">Contact</a></li>
-                        <li><a href="privacy" class="text-gray-400 hover:text-white">Privacy Policy</a></li>
-                        <li><a href="terms" class="text-gray-400 hover:text-white">Terms of Service</a></li>
+                        <li><a href="https://calcdomain.com/about" class="text-gray-400 hover:text-white">About Us</a></li>
+                        <li><a href="https://calcdomain.com/contact" class="text-gray-400 hover:text-white">Contact</a></li>
+                        <li><a href="https://calcdomain.com/privacy" class="text-gray-400 hover:text-white">Privacy Policy</a></li>
+                        <li><a href="https://calcdomain.com/terms" class="text-gray-400 hover:text-white">Terms of Service</a></li>
                         <li><a href="sitemap.xml" class="text-gray-400 hover:text-white">Site Map</a></li>
                     </ul>
                 </div>
