--- a/sito_modificato/subcategories/construction-framing-and-carpentry.html
+++ b/sito_modificato/subcategories/construction-framing-and-carpentry.html
@@ -34,7 +34,7 @@
         <div class="container mx-auto px-4">
             <div class="grid grid-cols-1 md:grid-cols-4 gap-8">
                 <div>
-                    <h3 class="text-2xl font-bold mb-4">CalcDomain</h3>
+                    <h3 class="text-2xl font-bold mb-4">Calcdomain</h3>
                     <p class="text-gray-400 mb-4">Your trusted source for free online calculators. Accurate, fast, and reliable calculations for every need.</p>
                     <div class="flex space-x-4">
                         <a href="#" class="text-gray-400 hover:text-white" aria-label="Twitter">
@@ -68,10 +68,10 @@
                 <div>
                     <h4 class="text-lg font-semibold mb-4">Support</h4>
                     <ul class="space-y-2">
-                        <li><a href="about" class="text-gray-400 hover:text-white">About Us</a></li>
-                        <li><a href="contact" class="text-gray-400 hover:text-white">Contact</a></li>
-                        <li><a href="privacy" class="text-gray-400 hover:text-white">Privacy Policy</a></li>
-                        <li><a href="terms" class="text-gray-400 hover:text-white">Terms of Service</a></li>
+                        <li><a href="https://calcdomain.com/about" class="text-gray-400 hover:text-white">About Us</a></li>
+                        <li><a href="https://calcdomain.com/contact" class="text-gray-400 hover:text-white">Contact</a></li>
+                        <li><a href="https://calcdomain.com/privacy" class="text-gray-400 hover:text-white">Privacy Policy</a></li>
+                        <li><a href="https://calcdomain.com/terms" class="text-gray-400 hover:text-white">Terms of Service</a></li>
                         <li><a href="sitemap.xml" class="text-gray-400 hover:text-white">Site Map</a></li>
                     </ul>
                 </div>
@@ -93,11 +93,11 @@
 <h1>Framing &amp; Carpentry</h1>
 <p>From board feet to stair geometry, get quick, code-aware carpentry numbers.</p>
 <div class="grid grid-3-col" style="margin-top:1rem;">
-<a class="card" href="https://calcdomain.com/board-foot"><h3>Board Foot Calculator</h3><p>Lumber volume from thickness, width, and length.</p></a>
-<a class="card" href="https://calcdomain.com/decking"><h3>Decking Calculator</h3><p>Boards, joist spacing, and fasteners for decks.</p></a>
-<a class="card" href="https://calcdomain.com/siding"><h3>Siding Calculator</h3><p>Squares, laps, and waste for exterior siding.</p></a>
-<a class="card" href="https://calcdomain.com/stair"><h3>Stair Calculator</h3><p>Rise/run, stringers, and code-friendly stair layout.</p></a>
-<a class="card" href="https://calcdomain.com/wall-framing"><h3>Wall Framing Calculator</h3><p>Stud counts, plates, headers, and opening layout.</p></a>
+<a class="card" href="https://calcdomain.com/board-foot"><h3>Board foot calculator</h3><p>Lumber volume from thickness, width, and length.</p></a>
+<a class="card" href="https://calcdomain.com/decking"><h3>Decking calculator</h3><p>Boards, joist spacing, and fasteners for decks.</p></a>
+<a class="card" href="https://calcdomain.com/siding"><h3>Siding calculator</h3><p>Squares, laps, and waste for exterior siding.</p></a>
+<a class="card" href="https://calcdomain.com/stair"><h3>Stair calculator</h3><p>Rise/run, stringers, and code-friendly stair layout.</p></a>
+<a class="card" href="https://calcdomain.com/wall-framing"><h3>Wall framing calculator</h3><p>Stud counts, plates, headers, and opening layout.</p></a>
 </div>
 </div></main>
 <!-- Standard Footer --> 
