--- a/sito_modificato/subcategories/construction-interiors-envelope-and-finishes.html
+++ b/sito_modificato/subcategories/construction-interiors-envelope-and-finishes.html
@@ -34,7 +34,7 @@
         <div class="container mx-auto px-4">
             <div class="grid grid-cols-1 md:grid-cols-4 gap-8">
                 <div>
-                    <h3 class="text-2xl font-bold mb-4">CalcDomain</h3>
+                    <h3 class="text-2xl font-bold mb-4">Calcdomain</h3>
                     <p class="text-gray-400 mb-4">Your trusted source for free online calculators. Accurate, fast, and reliable calculations for every need.</p>
                     <div class="flex space-x-4">
                         <a href="#" class="text-gray-400 hover:text-white" aria-label="Twitter">
@@ -68,10 +68,10 @@
                 <div>
                     <h4 class="text-lg font-semibold mb-4">Support</h4>
                     <ul class="space-y-2">
-                        <li><a href="about" class="text-gray-400 hover:text-white">About Us</a></li>
-                        <li><a href="contact" class="text-gray-400 hover:text-white">Contact</a></li>
-                        <li><a href="privacy" class="text-gray-400 hover:text-white">Privacy Policy</a></li>
-                        <li><a href="terms" class="text-gray-400 hover:text-white">Terms of Service</a></li>
+                        <li><a href="https://calcdomain.com/about" class="text-gray-400 hover:text-white">About Us</a></li>
+                        <li><a href="https://calcdomain.com/contact" class="text-gray-400 hover:text-white">Contact</a></li>
+                        <li><a href="https://calcdomain.com/privacy" class="text-gray-400 hover:text-white">Privacy Policy</a></li>
+                        <li><a href="https://calcdomain.com/terms" class="text-gray-400 hover:text-white">Terms of Service</a></li>
                         <li><a href="sitemap.xml" class="text-gray-400 hover:text-white">Site Map</a></li>
                     </ul>
                 </div>
@@ -93,10 +93,10 @@
 <h1>Interiors, Envelope &amp; Finishes</h1>
 <p>Finish faster with accurate material counts for common interior and envelope jobs.</p>
 <div class="grid grid-3-col" style="margin-top:1rem;">
-<a class="card" href="https://calcdomain.com/drywall"><h3>Drywall Calculator</h3><p>Sheets, joint compound, and tape by room size.</p></a>
-<a class="card" href="https://calcdomain.com/flooring"><h3>Flooring Calculator</h3><p>Tile/plank counts with layout and waste options.</p></a>
-<a class="card" href="https://calcdomain.com/r-value"><h3>Insulation R-Value Calculator</h3><p>Required R-values by assembly and climate inputs.</p></a>
-<a class="card" href="https://calcdomain.com/paint"><h3>Paint Calculator</h3><p>Gallons by coats, coverage, and openings.</p></a>
+<a class="card" href="https://calcdomain.com/drywall"><h3>Drywall calculator</h3><p>Sheets, joint compound, and tape by room size.</p></a>
+<a class="card" href="https://calcdomain.com/flooring"><h3>Flooring calculator</h3><p>Tile/plank counts with layout and waste options.</p></a>
+<a class="card" href="https://calcdomain.com/r-value"><h3>Insulation r-value calculator</h3><p>Required R-values by assembly and climate inputs.</p></a>
+<a class="card" href="https://calcdomain.com/paint"><h3>Paint calculator</h3><p>Gallons by coats, coverage, and openings.</p></a>
 </div>
 </div></main>
 <!-- Standard Footer --> 
