--- a/sito_modificato/subcategories/construction-planning-and-estimating.html
+++ b/sito_modificato/subcategories/construction-planning-and-estimating.html
@@ -34,7 +34,7 @@
         <div class="container mx-auto px-4">
             <div class="grid grid-cols-1 md:grid-cols-4 gap-8">
                 <div>
-                    <h3 class="text-2xl font-bold mb-4">CalcDomain</h3>
+                    <h3 class="text-2xl font-bold mb-4">Calcdomain</h3>
                     <p class="text-gray-400 mb-4">Your trusted source for free online calculators. Accurate, fast, and reliable calculations for every need.</p>
                     <div class="flex space-x-4">
                         <a href="#" class="text-gray-400 hover:text-white" aria-label="Twitter">
@@ -68,10 +68,10 @@
                 <div>
                     <h4 class="text-lg font-semibold mb-4">Support</h4>
                     <ul class="space-y-2">
-                        <li><a href="about" class="text-gray-400 hover:text-white">About Us</a></li>
-                        <li><a href="contact" class="text-gray-400 hover:text-white">Contact</a></li>
-                        <li><a href="privacy" class="text-gray-400 hover:text-white">Privacy Policy</a></li>
-                        <li><a href="terms" class="text-gray-400 hover:text-white">Terms of Service</a></li>
+                        <li><a href="https://calcdomain.com/about" class="text-gray-400 hover:text-white">About Us</a></li>
+                        <li><a href="https://calcdomain.com/contact" class="text-gray-400 hover:text-white">Contact</a></li>
+                        <li><a href="https://calcdomain.com/privacy" class="text-gray-400 hover:text-white">Privacy Policy</a></li>
+                        <li><a href="https://calcdomain.com/terms" class="text-gray-400 hover:text-white">Terms of Service</a></li>
                         <li><a href="sitemap.xml" class="text-gray-400 hover:text-white">Site Map</a></li>
                     </ul>
                 </div>
@@ -93,8 +93,8 @@
 <h1>Planning &amp; Estimating</h1>
 <p>Estimate costs and convert scales to streamline planning and bid prep.</p>
 <div class="grid grid-3-col" style="margin-top:1rem;">
-<a class="card" href="https://calcdomain.com/construction-cost-estimator"><h3>Construction Cost Estimator</h3><p>Assemblies, labor, and materials rolled into project cost.</p></a>
-<a class="card" href="https://calcdomain.com/scale-conversion"><h3>Scale Conversion Calculator</h3><p>Convert plan scales and dimensions for accurate takeoffs.</p></a>
+<a class="card" href="https://calcdomain.com/construction-cost-estimator"><h3>Construction cost estimator</h3><p>Assemblies, labor, and materials rolled into project cost.</p></a>
+<a class="card" href="https://calcdomain.com/scale-conversion"><h3>Scale conversion calculator</h3><p>Convert plan scales and dimensions for accurate takeoffs.</p></a>
 </div>
 </div></main>
 <!-- Standard Footer --> 
