--- a/sito_modificato/subcategories/core-math-algebra.html
+++ b/sito_modificato/subcategories/core-math-algebra.html
@@ -77,7 +77,7 @@
                             <svg class="w-6 h-6 text-blue-600" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 7h8M8 12h8M8 17h8"></path></svg>
                         </div>
                         <div>
-                            <h3 class="font-semibold text-gray-800">Equation Solver</h3>
+                            <h3 class="font-semibold text-gray-800">Equation solver</h3>
                             <p class="text-sm text-gray-600">Handle polynomials, rational, and exponential equations fast.</p>
                         </div>
                     </a>
@@ -86,7 +86,7 @@
                             <svg class="w-6 h-6 text-green-600" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 3h18M3 9h18M3 15h18M3 21h18"></path></svg>
                         </div>
                         <div>
-                            <h3 class="font-semibold text-gray-800">Systems of Equations</h3>
+                            <h3 class="font-semibold text-gray-800">Systems of equations</h3>
                             <p class="text-sm text-gray-600">Solve using substitution, elimination, or matrices for multiple variables.</p>
                         </div>
                     </a>
@@ -95,7 +95,7 @@
                             <svg class="w-6 h-6 text-yellow-600" fill="none" stroke="currentColor" viewBox="0 0 24 24"><rect x="4" y="4" width="16" height="16" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></rect></svg>
                         </div>
                         <div>
-                            <h3 class="font-semibold text-gray-800">Matrix Operations</h3>
+                            <h3 class="font-semibold text-gray-800">Matrix operations</h3>
                             <p class="text-sm text-gray-600">Add, multiply, invert, and compute determinants with a single matrix editor.</p>
                         </div>
                     </a>
@@ -113,7 +113,7 @@
                             <svg class="w-6 h-6 text-indigo-600" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 20V4h12v16"></path></svg>
                         </div>
                         <div>
-                            <h3 class="font-semibold text-gray-800">Quadratic Formula</h3>
+                            <h3 class="font-semibold text-gray-800">Quadratic formula</h3>
                             <p class="text-sm text-gray-600">Compute roots, vertex, and discriminant instantly from coefficients.</p>
                         </div>
                     </a>
@@ -122,7 +122,7 @@
                             <svg class="w-6 h-6 text-emerald-600" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 3h14v18H5z"></path></svg>
                         </div>
                         <div>
-                            <h3 class="font-semibold text-gray-800">Linear Algebra Essentials</h3>
+                            <h3 class="font-semibold text-gray-800">Linear algebra essentials</h3>
                             <p class="text-sm text-gray-600">Vectors, spans, bases, and transformation insight for every step.</p>
                         </div>
                     </a>
@@ -130,7 +130,7 @@
             </main>
             <aside class="w-full lg:w-1/3 space-y-6">
                 <div class="bg-white p-5 rounded-lg shadow-sm border">
-                    <h3 class="text-lg font-semibold mb-3">Math &amp; Conversions</h3>
+                    <h3 class="text-lg font-semibold mb-3">Math &amp; conversions</h3>
                     <p class="text-sm text-gray-600 mb-4">Pair algebraic insight with conversions and geometry to build stronger solutions.</p>
                     <ul class="list-disc pl-5 space-y-2 text-sm text-gray-700">
                         <li><a href="https://calcdomain.com/subcategories/math-conversions-measurement-unit-conversions" class="text-blue-600 hover:underline">Measurement Unit Conversions</a></li>
@@ -148,7 +148,7 @@
         <div class="container mx-auto px-4">
             <div class="grid grid-cols-1 md:grid-cols-4 gap-8">
                 <div>
-                    <h3 class="text-2xl font-bold mb-4">CalcDomain</h3>
+                    <h3 class="text-2xl font-bold mb-4">Calcdomain</h3>
                     <p class="text-gray-400 mb-4">Your trusted source for free online calculators. Accurate, fast, and reliable calculations for every need.</p>
                     <div class="flex space-x-4">
                         <a href="#" class="text-gray-400 hover:text-white" aria-label="Twitter">
@@ -182,10 +182,10 @@
                 <div>
                     <h4 class="text-lg font-semibold mb-4">Support</h4>
                     <ul class="space-y-2">
-                        <li><a href="about" class="text-gray-400 hover:text-white">About Us</a></li>
-                        <li><a href="contact" class="text-gray-400 hover:text-white">Contact</a></li>
-                        <li><a href="privacy" class="text-gray-400 hover:text-white">Privacy Policy</a></li>
-                        <li><a href="terms" class="text-gray-400 hover:text-white">Terms of Service</a></li>
+                        <li><a href="https://calcdomain.com/about" class="text-gray-400 hover:text-white">About Us</a></li>
+                        <li><a href="https://calcdomain.com/contact" class="text-gray-400 hover:text-white">Contact</a></li>
+                        <li><a href="https://calcdomain.com/privacy" class="text-gray-400 hover:text-white">Privacy Policy</a></li>
+                        <li><a href="https://calcdomain.com/terms" class="text-gray-400 hover:text-white">Terms of Service</a></li>
                         <li><a href="sitemap.xml" class="text-gray-400 hover:text-white">Site Map</a></li>
                     </ul>
                 </div>
