--- a/sito_modificato/subcategories/engineering-eurocode-1.html
+++ b/sito_modificato/subcategories/engineering-eurocode-1.html
@@ -40,7 +40,7 @@
         <div class="container mx-auto px-4">
             <div class="grid grid-cols-1 md:grid-cols-4 gap-8">
                 <div>
-                    <h3 class="text-2xl font-bold mb-4">CalcDomain</h3>
+                    <h3 class="text-2xl font-bold mb-4">Calcdomain</h3>
                     <p class="text-gray-400 mb-4">Your trusted source for free online calculators. Accurate, fast, and reliable calculations for every need.</p>
                     <div class="flex space-x-4">
                         <a href="#" class="text-gray-400 hover:text-white" aria-label="Twitter">
@@ -74,10 +74,10 @@
                 <div>
                     <h4 class="text-lg font-semibold mb-4">Support</h4>
                     <ul class="space-y-2">
-                        <li><a href="about" class="text-gray-400 hover:text-white">About Us</a></li>
-                        <li><a href="contact" class="text-gray-400 hover:text-white">Contact</a></li>
-                        <li><a href="privacy" class="text-gray-400 hover:text-white">Privacy Policy</a></li>
-                        <li><a href="terms" class="text-gray-400 hover:text-white">Terms of Service</a></li>
+                        <li><a href="https://calcdomain.com/about" class="text-gray-400 hover:text-white">About Us</a></li>
+                        <li><a href="https://calcdomain.com/contact" class="text-gray-400 hover:text-white">Contact</a></li>
+                        <li><a href="https://calcdomain.com/privacy" class="text-gray-400 hover:text-white">Privacy Policy</a></li>
+                        <li><a href="https://calcdomain.com/terms" class="text-gray-400 hover:text-white">Terms of Service</a></li>
                         <li><a href="sitemap.xml" class="text-gray-400 hover:text-white">Site Map</a></li>
                     </ul>
                 </div>
@@ -107,10 +107,10 @@ Home / <a href="https://calcdomain.com/engineering">Engineering</a> / EC1
         For ULS/SLS combinations and partial safety factors, see <a href="https://calcdomain.com/engineering-eurocode-0">EC0 — EN 1990</a>.
       </p>
 <div class="grid grid-3-col" style="margin-top:1rem;">
-<a class="card" href="https://calcdomain.com/eurocode-1-snow-load"><h3>EC1 Snow Load</h3><p>Ground, roof and drift loads.</p></a>
-<a class="card" href="https://calcdomain.com/eurocode-1-wind-load"><h3>EC1 Wind Load</h3><p>External/internal pressures by exposure.</p></a>
-<a class="card" href="https://calcdomain.com/eurocode-1-imposed-loads"><h3>EC1 Imposed Loads</h3><p>Category A–H live loads.</p></a>
-<a class="card" href="https://calcdomain.com/eurocode-1-thermal-actions"><h3>EC1 Thermal Actions</h3><p>Temperature actions and effects.</p></a>
+<a class="card" href="https://calcdomain.com/eurocode-1-snow-load"><h3>EC1 snow load</h3><p>Ground, roof and drift loads.</p></a>
+<a class="card" href="https://calcdomain.com/eurocode-1-wind-load"><h3>EC1 wind load</h3><p>External/internal pressures by exposure.</p></a>
+<a class="card" href="https://calcdomain.com/eurocode-1-imposed-loads"><h3>EC1 imposed loads</h3><p>Category A–H live loads.</p></a>
+<a class="card" href="https://calcdomain.com/eurocode-1-thermal-actions"><h3>EC1 thermal actions</h3><p>Temperature actions and effects.</p></a>
 </div>
 </div>
 </main>
