--- a/sito_modificato/subcategories/engineering-eurocode-3.html
+++ b/sito_modificato/subcategories/engineering-eurocode-3.html
@@ -37,7 +37,7 @@
         <div class="container mx-auto px-4">
             <div class="grid grid-cols-1 md:grid-cols-4 gap-8">
                 <div>
-                    <h3 class="text-2xl font-bold mb-4">CalcDomain</h3>
+                    <h3 class="text-2xl font-bold mb-4">Calcdomain</h3>
                     <p class="text-gray-400 mb-4">Your trusted source for free online calculators. Accurate, fast, and reliable calculations for every need.</p>
                     <div class="flex space-x-4">
                         <a href="#" class="text-gray-400 hover:text-white" aria-label="Twitter">
@@ -71,10 +71,10 @@
                 <div>
                     <h4 class="text-lg font-semibold mb-4">Support</h4>
                     <ul class="space-y-2">
-                        <li><a href="about" class="text-gray-400 hover:text-white">About Us</a></li>
-                        <li><a href="contact" class="text-gray-400 hover:text-white">Contact</a></li>
-                        <li><a href="privacy" class="text-gray-400 hover:text-white">Privacy Policy</a></li>
-                        <li><a href="terms" class="text-gray-400 hover:text-white">Terms of Service</a></li>
+                        <li><a href="https://calcdomain.com/about" class="text-gray-400 hover:text-white">About Us</a></li>
+                        <li><a href="https://calcdomain.com/contact" class="text-gray-400 hover:text-white">Contact</a></li>
+                        <li><a href="https://calcdomain.com/privacy" class="text-gray-400 hover:text-white">Privacy Policy</a></li>
+                        <li><a href="https://calcdomain.com/terms" class="text-gray-400 hover:text-white">Terms of Service</a></li>
                         <li><a href="sitemap.xml" class="text-gray-400 hover:text-white">Site Map</a></li>
                     </ul>
                 </div>
@@ -97,9 +97,9 @@
 <h1>Eurocode 3 — Steel (EC3)</h1>
 <p style="max-width:900px">Design structural steel members and connections per EC3, including section class, bending, shear and buckling checks.</p>
 <div class="grid grid-3-col" style="margin-top:1rem;">
-<a class="card" href="https://calcdomain.com/eurocode-3-beam-design"><h3>EC3 Steel Beam</h3><p>Class, bending and shear resistance.</p></a>
-<a class="card" href="https://calcdomain.com/eurocode-3-column-design"><h3>EC3 Steel Column</h3><p>Buckling curves and χ factors.</p></a>
-<a class="card" href="https://calcdomain.com/eurocode-3-bolted-connection"><h3>EC3 Bolted Connection</h3><p>Bearing, slip and shear checks.</p></a>
+<a class="card" href="https://calcdomain.com/eurocode-3-beam-design"><h3>EC3 steel beam</h3><p>Class, bending and shear resistance.</p></a>
+<a class="card" href="https://calcdomain.com/eurocode-3-column-design"><h3>EC3 steel column</h3><p>Buckling curves and χ factors.</p></a>
+<a class="card" href="https://calcdomain.com/eurocode-3-bolted-connection"><h3>EC3 bolted connection</h3><p>Bearing, slip and shear checks.</p></a>
 </div>
 </div></main>
 <!-- Standard Footer --> 
