--- a/sito_modificato/subcategories/engineering-eurocode-4.html
+++ b/sito_modificato/subcategories/engineering-eurocode-4.html
@@ -36,7 +36,7 @@
         <div class="container mx-auto px-4">
             <div class="grid grid-cols-1 md:grid-cols-4 gap-8">
                 <div>
-                    <h3 class="text-2xl font-bold mb-4">CalcDomain</h3>
+                    <h3 class="text-2xl font-bold mb-4">Calcdomain</h3>
                     <p class="text-gray-400 mb-4">Your trusted source for free online calculators. Accurate, fast, and reliable calculations for every need.</p>
                     <div class="flex space-x-4">
                         <a href="#" class="text-gray-400 hover:text-white" aria-label="Twitter">
@@ -70,10 +70,10 @@
                 <div>
                     <h4 class="text-lg font-semibold mb-4">Support</h4>
                     <ul class="space-y-2">
-                        <li><a href="about" class="text-gray-400 hover:text-white">About Us</a></li>
-                        <li><a href="contact" class="text-gray-400 hover:text-white">Contact</a></li>
-                        <li><a href="privacy" class="text-gray-400 hover:text-white">Privacy Policy</a></li>
-                        <li><a href="terms" class="text-gray-400 hover:text-white">Terms of Service</a></li>
+                        <li><a href="https://calcdomain.com/about" class="text-gray-400 hover:text-white">About Us</a></li>
+                        <li><a href="https://calcdomain.com/contact" class="text-gray-400 hover:text-white">Contact</a></li>
+                        <li><a href="https://calcdomain.com/privacy" class="text-gray-400 hover:text-white">Privacy Policy</a></li>
+                        <li><a href="https://calcdomain.com/terms" class="text-gray-400 hover:text-white">Terms of Service</a></li>
                         <li><a href="sitemap.xml" class="text-gray-400 hover:text-white">Site Map</a></li>
                     </ul>
                 </div>
@@ -96,8 +96,8 @@
 <h1>Eurocode 4 — Composite Steel–Concrete (EC4)</h1>
 <p style="max-width:900px">Design composite members with shear connectors, accounting for partial interaction and slip as required by EC4.</p>
 <div class="grid grid-3-col" style="margin-top:1rem;">
-<a class="card" href="https://calcdomain.com/eurocode-4-composite-beam"><h3>EC4 Composite Beam</h3><p>Stud count and composite resistance.</p></a>
-<a class="card" href="https://calcdomain.com/eurocode-4-composite-column"><h3>EC4 Composite Column</h3><p>Axial and bending resistance.</p></a>
+<a class="card" href="https://calcdomain.com/eurocode-4-composite-beam"><h3>EC4 composite beam</h3><p>Stud count and composite resistance.</p></a>
+<a class="card" href="https://calcdomain.com/eurocode-4-composite-column"><h3>EC4 composite column</h3><p>Axial and bending resistance.</p></a>
 </div>
 </div></main>
 <!-- Standard Footer --> 
