--- a/sito_modificato/subcategories/engineering-eurocode-6.html
+++ b/sito_modificato/subcategories/engineering-eurocode-6.html
@@ -36,7 +36,7 @@
         <div class="container mx-auto px-4">
             <div class="grid grid-cols-1 md:grid-cols-4 gap-8">
                 <div>
-                    <h3 class="text-2xl font-bold mb-4">CalcDomain</h3>
+                    <h3 class="text-2xl font-bold mb-4">Calcdomain</h3>
                     <p class="text-gray-400 mb-4">Your trusted source for free online calculators. Accurate, fast, and reliable calculations for every need.</p>
                     <div class="flex space-x-4">
                         <a href="#" class="text-gray-400 hover:text-white" aria-label="Twitter">
@@ -70,10 +70,10 @@
                 <div>
                     <h4 class="text-lg font-semibold mb-4">Support</h4>
                     <ul class="space-y-2">
-                        <li><a href="about" class="text-gray-400 hover:text-white">About Us</a></li>
-                        <li><a href="contact" class="text-gray-400 hover:text-white">Contact</a></li>
-                        <li><a href="privacy" class="text-gray-400 hover:text-white">Privacy Policy</a></li>
-                        <li><a href="terms" class="text-gray-400 hover:text-white">Terms of Service</a></li>
+                        <li><a href="https://calcdomain.com/about" class="text-gray-400 hover:text-white">About Us</a></li>
+                        <li><a href="https://calcdomain.com/contact" class="text-gray-400 hover:text-white">Contact</a></li>
+                        <li><a href="https://calcdomain.com/privacy" class="text-gray-400 hover:text-white">Privacy Policy</a></li>
+                        <li><a href="https://calcdomain.com/terms" class="text-gray-400 hover:text-white">Terms of Service</a></li>
                         <li><a href="sitemap.xml" class="text-gray-400 hover:text-white">Site Map</a></li>
                     </ul>
                 </div>
@@ -96,9 +96,9 @@
 <h1>Eurocode 6 — Masonry (EC6)</h1>
 <p style="max-width:900px">Design loadbearing and shear masonry walls per EC6, including local bearing checks.</p>
 <div class="grid grid-3-col" style="margin-top:1rem;">
-<a class="card" href="https://calcdomain.com/eurocode-6-masonry-wall"><h3>EC6 Masonry Wall</h3><p>Axial and bending resistance.</p></a>
-<a class="card" href="https://calcdomain.com/eurocode-6-concentrated-load"><h3>EC6 Concentrated Load</h3><p>Local bearing under point loads.</p></a>
-<a class="card" href="https://calcdomain.com/eurocode-6-shear-wall"><h3>EC6 Masonry Shear Wall</h3><p>In-plane shear capacity.</p></a>
+<a class="card" href="https://calcdomain.com/eurocode-6-masonry-wall"><h3>EC6 masonry wall</h3><p>Axial and bending resistance.</p></a>
+<a class="card" href="https://calcdomain.com/eurocode-6-concentrated-load"><h3>EC6 concentrated load</h3><p>Local bearing under point loads.</p></a>
+<a class="card" href="https://calcdomain.com/eurocode-6-shear-wall"><h3>EC6 masonry shear wall</h3><p>In-plane shear capacity.</p></a>
 </div>
 </div></main>
 <!-- Standard Footer --> 
