--- a/sito_modificato/subcategories/engineering-eurocode-7.html
+++ b/sito_modificato/subcategories/engineering-eurocode-7.html
@@ -36,7 +36,7 @@
         <div class="container mx-auto px-4">
             <div class="grid grid-cols-1 md:grid-cols-4 gap-8">
                 <div>
-                    <h3 class="text-2xl font-bold mb-4">CalcDomain</h3>
+                    <h3 class="text-2xl font-bold mb-4">Calcdomain</h3>
                     <p class="text-gray-400 mb-4">Your trusted source for free online calculators. Accurate, fast, and reliable calculations for every need.</p>
                     <div class="flex space-x-4">
                         <a href="#" class="text-gray-400 hover:text-white" aria-label="Twitter">
@@ -70,10 +70,10 @@
                 <div>
                     <h4 class="text-lg font-semibold mb-4">Support</h4>
                     <ul class="space-y-2">
-                        <li><a href="about" class="text-gray-400 hover:text-white">About Us</a></li>
-                        <li><a href="contact" class="text-gray-400 hover:text-white">Contact</a></li>
-                        <li><a href="privacy" class="text-gray-400 hover:text-white">Privacy Policy</a></li>
-                        <li><a href="terms" class="text-gray-400 hover:text-white">Terms of Service</a></li>
+                        <li><a href="https://calcdomain.com/about" class="text-gray-400 hover:text-white">About Us</a></li>
+                        <li><a href="https://calcdomain.com/contact" class="text-gray-400 hover:text-white">Contact</a></li>
+                        <li><a href="https://calcdomain.com/privacy" class="text-gray-400 hover:text-white">Privacy Policy</a></li>
+                        <li><a href="https://calcdomain.com/terms" class="text-gray-400 hover:text-white">Terms of Service</a></li>
                         <li><a href="sitemap.xml" class="text-gray-400 hover:text-white">Site Map</a></li>
                     </ul>
                 </div>
@@ -96,11 +96,11 @@
 <h1>Eurocode 7 — Geotechnical (EC7)</h1>
 <p style="max-width:900px">Check geotechnical limit states per EC7 for shallow and deep foundations, earth-retaining structures and slopes.</p>
 <div class="grid grid-3-col" style="margin-top:1rem;">
-<a class="card" href="https://calcdomain.com/eurocode-7-bearing-resistance"><h3>EC7 Bearing Resistance</h3><p>Shallow foundation capacity.</p></a>
-<a class="card" href="https://calcdomain.com/eurocode-7-sliding-resistance"><h3>EC7 Sliding Resistance</h3><p>Base shear resistance.</p></a>
-<a class="card" href="https://calcdomain.com/eurocode-7-pile-capacity"><h3>EC7 Pile Capacity</h3><p>Axial compression/tension.</p></a>
-<a class="card" href="https://calcdomain.com/eurocode-7-retaining-wall"><h3>EC7 Retaining Wall</h3><p>ULS stability checks.</p></a>
-<a class="card" href="https://calcdomain.com/eurocode-7-slope-stability"><h3>EC7 Slope Stability</h3><p>Factor of safety.</p></a>
+<a class="card" href="https://calcdomain.com/eurocode-7-bearing-resistance"><h3>EC7 bearing resistance</h3><p>Shallow foundation capacity.</p></a>
+<a class="card" href="https://calcdomain.com/eurocode-7-sliding-resistance"><h3>EC7 sliding resistance</h3><p>Base shear resistance.</p></a>
+<a class="card" href="https://calcdomain.com/eurocode-7-pile-capacity"><h3>EC7 pile capacity</h3><p>Axial compression/tension.</p></a>
+<a class="card" href="https://calcdomain.com/eurocode-7-retaining-wall"><h3>EC7 retaining wall</h3><p>ULS stability checks.</p></a>
+<a class="card" href="https://calcdomain.com/eurocode-7-slope-stability"><h3>EC7 slope stability</h3><p>Factor of safety.</p></a>
 </div>
 </div></main>
 <!-- Standard Footer --> 
