--- a/sito_modificato/subcategories/finance-canada-taxes.html
+++ b/sito_modificato/subcategories/finance-canada-taxes.html
@@ -35,7 +35,7 @@
         <div class="container mx-auto px-4">
             <div class="grid grid-cols-1 md:grid-cols-4 gap-8">
                 <div>
-                    <h3 class="text-2xl font-bold mb-4">CalcDomain</h3>
+                    <h3 class="text-2xl font-bold mb-4">Calcdomain</h3>
                     <p class="text-gray-400 mb-4">Your trusted source for free online calculators. Accurate, fast, and reliable calculations for every need.</p>
                     <div class="flex space-x-4">
                         <a href="#" class="text-gray-400 hover:text-white" aria-label="Twitter">
@@ -69,10 +69,10 @@
                 <div>
                     <h4 class="text-lg font-semibold mb-4">Support</h4>
                     <ul class="space-y-2">
-                        <li><a href="about" class="text-gray-400 hover:text-white">About Us</a></li>
-                        <li><a href="contact" class="text-gray-400 hover:text-white">Contact</a></li>
-                        <li><a href="privacy" class="text-gray-400 hover:text-white">Privacy Policy</a></li>
-                        <li><a href="terms" class="text-gray-400 hover:text-white">Terms of Service</a></li>
+                        <li><a href="https://calcdomain.com/about" class="text-gray-400 hover:text-white">About Us</a></li>
+                        <li><a href="https://calcdomain.com/contact" class="text-gray-400 hover:text-white">Contact</a></li>
+                        <li><a href="https://calcdomain.com/privacy" class="text-gray-400 hover:text-white">Privacy Policy</a></li>
+                        <li><a href="https://calcdomain.com/terms" class="text-gray-400 hover:text-white">Terms of Service</a></li>
                         <li><a href="sitemap.xml" class="text-gray-400 hover:text-white">Site Map</a></li>
                     </ul>
                 </div>
@@ -95,7 +95,7 @@
 <h1>Canada Taxes &amp; Payroll</h1>
 <p style="max-width:800px">Strumenti rapidi per imposte federali, busta paga e GST/HST, con link dedicati per province e territori.</p>
 <div class="grid grid-3-col" style="margin-top:1rem;">
-<a class="card" href="https://calcdomain.com/canada-income-tax"><h3>Federal Income Tax</h3><p>Brackets, crediti, CPP/EI.</p></a>
+<a class="card" href="https://calcdomain.com/canada-income-tax"><h3>Federal income tax</h3><p>Brackets, crediti, CPP/EI.</p></a>
 <a class="card" href="https://calcdomain.com/canada-payroll"><h3>Payroll</h3><p>Netto in busta con benefit.</p></a>
 <a class="card" href="https://calcdomain.com/gst-hst"><h3>GST/HST</h3><p>Aggiungi/togli GST/HST.</p></a>
 </div>
