--- a/sito_modificato/subcategories/finance-income-and-payroll.html
+++ b/sito_modificato/subcategories/finance-income-and-payroll.html
@@ -34,7 +34,7 @@
         <div class="container mx-auto px-4">
             <div class="grid grid-cols-1 md:grid-cols-4 gap-8">
                 <div>
-                    <h3 class="text-2xl font-bold mb-4">CalcDomain</h3>
+                    <h3 class="text-2xl font-bold mb-4">Calcdomain</h3>
                     <p class="text-gray-400 mb-4">Your trusted source for free online calculators. Accurate, fast, and reliable calculations for every need.</p>
                     <div class="flex space-x-4">
                         <a href="#" class="text-gray-400 hover:text-white" aria-label="Twitter">
@@ -68,10 +68,10 @@
                 <div>
                     <h4 class="text-lg font-semibold mb-4">Support</h4>
                     <ul class="space-y-2">
-                        <li><a href="about" class="text-gray-400 hover:text-white">About Us</a></li>
-                        <li><a href="contact" class="text-gray-400 hover:text-white">Contact</a></li>
-                        <li><a href="privacy" class="text-gray-400 hover:text-white">Privacy Policy</a></li>
-                        <li><a href="terms" class="text-gray-400 hover:text-white">Terms of Service</a></li>
+                        <li><a href="https://calcdomain.com/about" class="text-gray-400 hover:text-white">About Us</a></li>
+                        <li><a href="https://calcdomain.com/contact" class="text-gray-400 hover:text-white">Contact</a></li>
+                        <li><a href="https://calcdomain.com/privacy" class="text-gray-400 hover:text-white">Privacy Policy</a></li>
+                        <li><a href="https://calcdomain.com/terms" class="text-gray-400 hover:text-white">Terms of Service</a></li>
                         <li><a href="sitemap.xml" class="text-gray-400 hover:text-white">Site Map</a></li>
                     </ul>
                 </div>
@@ -96,13 +96,13 @@
 <h1>Income, Payroll &amp; Cost of Living</h1>
 <p style="max-width:800px">Stima il netto in busta, imposta le ritenute, converti orario⇄annuale e confronta il costo della vita tra città. Strumenti pratici per pianificare stipendi, budget e trasferimenti.</p>
 <div class="grid grid-3-col" style="margin-top:1rem;">
-<a class="card" href="https://calcdomain.com/paycheck"><h3>Paycheck Calculator</h3><p>Calcola il netto con imposte, benefit e contributi.</p></a>
-<a class="card" href="https://calcdomain.com/w4-withholding"><h3>W-4 Withholding</h3><p>Regola le ritenute per minimizzare conguaglio.</p></a>
-<a class="card" href="https://calcdomain.com/hourly-to-salary"><h3>Hourly to Salary</h3><p>Converti paga oraria in annuale e viceversa.</p></a>
-<a class="card" href="https://calcdomain.com/cost-of-living"><h3>Cost of Living</h3><p>Confronta spese di alloggio, trasporti e tasse.</p></a>
-<a class="card" href="https://calcdomain.com/cost-of-living"><h3>City Comparison</h3><p>Analisi affiancata tra due città.</p></a>
-<a class="card" href="https://calcdomain.com/travel-budget"><h3>Travel Budget</h3><p>Budget di viaggio per categoria e valuta.</p></a>
-<a class="card" href="https://calcdomain.com/tip"><h3>Tip &amp; Bill Splitting</h3><p>Mancia, ripartizione e arrotondamenti smart.</p></a>
+<a class="card" href="https://calcdomain.com/paycheck"><h3>Paycheck calculator</h3><p>Calcola il netto con imposte, benefit e contributi.</p></a>
+<a class="card" href="https://calcdomain.com/w4-withholding"><h3>W-4 withholding</h3><p>Regola le ritenute per minimizzare conguaglio.</p></a>
+<a class="card" href="https://calcdomain.com/hourly-to-salary"><h3>Hourly to salary</h3><p>Converti paga oraria in annuale e viceversa.</p></a>
+<a class="card" href="https://calcdomain.com/cost-of-living"><h3>Cost of living</h3><p>Confronta spese di alloggio, trasporti e tasse.</p></a>
+<a class="card" href="https://calcdomain.com/cost-of-living"><h3>City comparison</h3><p>Analisi affiancata tra due città.</p></a>
+<a class="card" href="https://calcdomain.com/travel-budget"><h3>Travel budget</h3><p>Budget di viaggio per categoria e valuta.</p></a>
+<a class="card" href="https://calcdomain.com/tip"><h3>Tip &amp; bill splitting</h3><p>Mancia, ripartizione e arrotondamenti smart.</p></a>
 </div>
 </div>
 </main>
