--- a/sito_modificato/subcategories/finance-international-personal.html
+++ b/sito_modificato/subcategories/finance-international-personal.html
@@ -35,7 +35,7 @@
         <div class="container mx-auto px-4">
             <div class="grid grid-cols-1 md:grid-cols-4 gap-8">
                 <div>
-                    <h3 class="text-2xl font-bold mb-4">CalcDomain</h3>
+                    <h3 class="text-2xl font-bold mb-4">Calcdomain</h3>
                     <p class="text-gray-400 mb-4">Your trusted source for free online calculators. Accurate, fast, and reliable calculations for every need.</p>
                     <div class="flex space-x-4">
                         <a href="#" class="text-gray-400 hover:text-white" aria-label="Twitter">
@@ -69,10 +69,10 @@
                 <div>
                     <h4 class="text-lg font-semibold mb-4">Support</h4>
                     <ul class="space-y-2">
-                        <li><a href="about" class="text-gray-400 hover:text-white">About Us</a></li>
-                        <li><a href="contact" class="text-gray-400 hover:text-white">Contact</a></li>
-                        <li><a href="privacy" class="text-gray-400 hover:text-white">Privacy Policy</a></li>
-                        <li><a href="terms" class="text-gray-400 hover:text-white">Terms of Service</a></li>
+                        <li><a href="https://calcdomain.com/about" class="text-gray-400 hover:text-white">About Us</a></li>
+                        <li><a href="https://calcdomain.com/contact" class="text-gray-400 hover:text-white">Contact</a></li>
+                        <li><a href="https://calcdomain.com/privacy" class="text-gray-400 hover:text-white">Privacy Policy</a></li>
+                        <li><a href="https://calcdomain.com/terms" class="text-gray-400 hover:text-white">Terms of Service</a></li>
                         <li><a href="sitemap.xml" class="text-gray-400 hover:text-white">Site Map</a></li>
                     </ul>
                 </div>
@@ -98,12 +98,12 @@
 <p style="max-width:800px">Se operi fuori dagli USA, questi strumenti ti aiutano a stimare imposte, pensioni e risparmio agevolato in UK, Europa e area Asia-Pacifico.</p>
 <h2>United Kingdom</h2>
 <div class="grid grid-3-col" style="margin-top:1rem;">
-<h3>ISA Calculator (UK)</h3><p>Valorizza contributi e allowances.</p>
-<h3>SIPP Calculator (UK)</h3><p>Agevolazioni e crescita differita.</p>
-<h3>Salary Sacrifice (UK)</h3><p>Ottimizza NIC/Income Tax.</p>
-<a class="card" href="https://calcdomain.com/what-is-stamp-duty"><h3>Stamp Duty (SDLT)</h3><p>Aliquote per band, FTB e seconde case.</p></a>
-<h3>LBTT (Scotland)</h3><p>Imposta trasferimenti in Scozia.</p>
-<h3>LTT (Wales)</h3><p>Imposta trasferimenti in Galles.</p>
+<h3>ISA calculator (UK)</h3><p>Valorizza contributi e allowances.</p>
+<h3>SIPP calculator (UK)</h3><p>Agevolazioni e crescita differita.</p>
+<h3>Salary sacrifice (UK)</h3><p>Ottimizza NIC/Income Tax.</p>
+<a class="card" href="https://calcdomain.com/what-is-stamp-duty"><h3>Stamp duty (SDLT)</h3><p>Aliquote per band, FTB e seconde case.</p></a>
+<h3>LBTT (scotland)</h3><p>Imposta trasferimenti in Scozia.</p>
+<h3>LTT (wales)</h3><p>Imposta trasferimenti in Galles.</p>
 </div>
 <h2 style="margin-top:1.25rem;">Europe Pensions</h2>
 <div class="link-list" style="margin-top:.5rem;">
@@ -117,8 +117,8 @@ Japanese Nenkin
 <h2 style="margin-top:1.25rem;">Australia &amp; New Zealand</h2>
 <div class="grid grid-3-col" style="margin-top:1rem;">
 <h3>Superannuation (AU)</h3><p>Contributi, SG e rendimento.</p>
-<h3>Negative Gearing (AU)</h3><p>Effetti fiscali su property.</p>
-<h3>KiwiSaver (NZ)</h3><p>Contributi, match e crescita.</p>
+<h3>Negative gearing (AU)</h3><p>Effetti fiscali su property.</p>
+<h3>Kiwisaver (NZ)</h3><p>Contributi, match e crescita.</p>
 </div>
 </div>
 </main>
