--- a/sito_modificato/subcategories/finance-investing-and-growth.html
+++ b/sito_modificato/subcategories/finance-investing-and-growth.html
@@ -34,7 +34,7 @@
         <div class="container mx-auto px-4">
             <div class="grid grid-cols-1 md:grid-cols-4 gap-8">
                 <div>
-                    <h3 class="text-2xl font-bold mb-4">CalcDomain</h3>
+                    <h3 class="text-2xl font-bold mb-4">Calcdomain</h3>
                     <p class="text-gray-400 mb-4">Your trusted source for free online calculators. Accurate, fast, and reliable calculations for every need.</p>
                     <div class="flex space-x-4">
                         <a href="#" class="text-gray-400 hover:text-white" aria-label="Twitter">
@@ -68,10 +68,10 @@
                 <div>
                     <h4 class="text-lg font-semibold mb-4">Support</h4>
                     <ul class="space-y-2">
-                        <li><a href="about" class="text-gray-400 hover:text-white">About Us</a></li>
-                        <li><a href="contact" class="text-gray-400 hover:text-white">Contact</a></li>
-                        <li><a href="privacy" class="text-gray-400 hover:text-white">Privacy Policy</a></li>
-                        <li><a href="terms" class="text-gray-400 hover:text-white">Terms of Service</a></li>
+                        <li><a href="https://calcdomain.com/about" class="text-gray-400 hover:text-white">About Us</a></li>
+                        <li><a href="https://calcdomain.com/contact" class="text-gray-400 hover:text-white">Contact</a></li>
+                        <li><a href="https://calcdomain.com/privacy" class="text-gray-400 hover:text-white">Privacy Policy</a></li>
+                        <li><a href="https://calcdomain.com/terms" class="text-gray-400 hover:text-white">Terms of Service</a></li>
                         <li><a href="sitemap.xml" class="text-gray-400 hover:text-white">Site Map</a></li>
                     </ul>
                 </div>
@@ -94,10 +94,10 @@
 <h1>Investing &amp; Compound Growth</h1>
 <p style="max-width:800px">Valuta la crescita composta, confronta progetti con NPV/IRR e calcola rendimenti e ritorni con strumenti rapidi e trasparenti.</p>
 <div class="grid grid-3-col" style="margin-top:1rem;">
-<h3>Compound Interest</h3><p>Contributi e frequenza di capitalizzazione.</p>
+<h3>Compound interest</h3><p>Contributi e frequenza di capitalizzazione.</p>
 <a class="card" href="https://calcdomain.com/roi"><h3>Investment ROI</h3><p>Rendimento assoluto/annualizzato.</p></a>
-<a class="card" href="https://calcdomain.com/future-value"><h3>Future Value</h3><p>Valore futuro di somme e rendite.</p></a>
-<a class="card" href="https://calcdomain.com/present-value"><h3>Present Value</h3><p>Sconto flussi futuri a oggi.</p></a>
+<a class="card" href="https://calcdomain.com/future-value"><h3>Future value</h3><p>Valore futuro di somme e rendite.</p></a>
+<a class="card" href="https://calcdomain.com/present-value"><h3>Present value</h3><p>Sconto flussi futuri a oggi.</p></a>
 <a class="card" href="https://calcdomain.com/npv"><h3>NPV</h3><p>Valore attuale netto di progetti.</p></a>
 <a class="card" href="https://calcdomain.com/irr"><h3>IRR</h3><p>Tasso interno di rendimento.</p></a>
 <a class="card" href="https://calcdomain.com/mirr"><h3>MIRR</h3><p>Finanziamento e reinvestimento realistici.</p></a>
