--- a/sito_modificato/subcategories/finance-investment.html
+++ b/sito_modificato/subcategories/finance-investment.html
@@ -72,27 +72,27 @@
             <h2 class="text-xl font-semibold text-gray-900 mb-4">Featured investment tools</h2>
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4">
                 <a href="https://calcdomain.com/compound-interest-calculator" class="card-hover bg-white p-5 rounded-lg shadow">
-                    <h3 class="text-lg font-semibold text-gray-900">Compound Interest Calculator</h3>
+                    <h3 class="text-lg font-semibold text-gray-900">Compound interest calculator</h3>
                     <p class="text-sm text-gray-600 mt-2">Project lump sums and recurring contributions with flexible compounding and inflation adjustments.</p>
                 </a>
                 <a href="https://calcdomain.com/simple-interest" class="card-hover bg-white p-5 rounded-lg shadow">
-                    <h3 class="text-lg font-semibold text-gray-900">Simple Interest Calculator</h3>
+                    <h3 class="text-lg font-semibold text-gray-900">Simple interest calculator</h3>
                     <p class="text-sm text-gray-600 mt-2">Compute linear interest on loans or deposits using principal, rate, and time in one step.</p>
                 </a>
                 <a href="https://calcdomain.com/roi" class="card-hover bg-white p-5 rounded-lg shadow">
-                    <h3 class="text-lg font-semibold text-gray-900">Investment Return (ROI)</h3>
+                    <h3 class="text-lg font-semibold text-gray-900">Investment return (ROI)</h3>
                     <p class="text-sm text-gray-600 mt-2">Calculate net profit, ROI %, annualized return (CAGR), and break-even targets.</p>
                 </a>
                 <a href="https://calcdomain.com/sip-calculator" class="card-hover bg-white p-5 rounded-lg shadow">
-                    <h3 class="text-lg font-semibold text-gray-900">SIP / DCA Calculator</h3>
+                    <h3 class="text-lg font-semibold text-gray-900">SIP / DCA calculator</h3>
                     <p class="text-sm text-gray-600 mt-2">Model systematic investments, step-up plans, and inflation-adjusted results.</p>
                 </a>
                 <a href="https://calcdomain.com/npv" class="card-hover bg-white p-5 rounded-lg shadow">
-                    <h3 class="text-lg font-semibold text-gray-900">Net Present Value (NPV)</h3>
+                    <h3 class="text-lg font-semibold text-gray-900">Net present value (NPV)</h3>
                     <p class="text-sm text-gray-600 mt-2">Discount cash flows, evaluate project viability, and compare scenarios instantly.</p>
                 </a>
                 <a href="https://calcdomain.com/irr" class="card-hover bg-white p-5 rounded-lg shadow">
-                    <h3 class="text-lg font-semibold text-gray-900">Internal Rate of Return (IRR)</h3>
+                    <h3 class="text-lg font-semibold text-gray-900">Internal rate of return (IRR)</h3>
                     <p class="text-sm text-gray-600 mt-2">Solve for IRR, XIRR, and payback with custom cash-flow timing.</p>
                 </a>
                 <a href="https://calcdomain.com/mirr" class="card-hover bg-white p-5 rounded-lg shadow">
@@ -106,27 +106,27 @@
             <h2 class="text-xl font-semibold text-gray-900 mb-4">Growth &amp; savings planners</h2>
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4">
                 <a href="https://calcdomain.com/future-value" class="card-hover bg-white p-5 rounded-lg shadow">
-                    <h3 class="text-lg font-semibold text-gray-900">Future Value Calculator</h3>
+                    <h3 class="text-lg font-semibold text-gray-900">Future value calculator</h3>
                     <p class="text-sm text-gray-600 mt-2">Estimate future balances for lump sums or annuities with optional inflation.</p>
                 </a>
                 <a href="https://calcdomain.com/savings" class="card-hover bg-white p-5 rounded-lg shadow">
-                    <h3 class="text-lg font-semibold text-gray-900">Savings Goal Planner</h3>
+                    <h3 class="text-lg font-semibold text-gray-900">Savings goal planner</h3>
                     <p class="text-sm text-gray-600 mt-2">Target a future amount and compute the monthly contributions required.</p>
                 </a>
                 <a href="https://calcdomain.com/cd" class="card-hover bg-white p-5 rounded-lg shadow">
-                    <h3 class="text-lg font-semibold text-gray-900">CD Calculator</h3>
+                    <h3 class="text-lg font-semibold text-gray-900">CD calculator</h3>
                     <p class="text-sm text-gray-600 mt-2">Compare certificate of deposit terms, APYs, and renewal strategies.</p>
                 </a>
                 <a href="https://calcdomain.com/annuity" class="card-hover bg-white p-5 rounded-lg shadow">
-                    <h3 class="text-lg font-semibold text-gray-900">Annuity Calculator</h3>
+                    <h3 class="text-lg font-semibold text-gray-900">Annuity calculator</h3>
                     <p class="text-sm text-gray-600 mt-2">Price immediate or deferred annuities and translate payouts to present value.</p>
                 </a>
                 <a href="https://calcdomain.com/inflation" class="card-hover bg-white p-5 rounded-lg shadow">
-                    <h3 class="text-lg font-semibold text-gray-900">Inflation Calculator</h3>
+                    <h3 class="text-lg font-semibold text-gray-900">Inflation calculator</h3>
                     <p class="text-sm text-gray-600 mt-2">Convert historical amounts to today’s dollars using CPI-based adjustments.</p>
                 </a>
                 <a href="https://calcdomain.com/lumpsum-calculator" class="card-hover bg-white p-5 rounded-lg shadow">
-                    <h3 class="text-lg font-semibold text-gray-900">Lump Sum vs SIP</h3>
+                    <h3 class="text-lg font-semibold text-gray-900">Lump sum vs SIP</h3>
                     <p class="text-sm text-gray-600 mt-2">Compare lump-sum investing against phased contributions over time.</p>
                 </a>
             </div>
@@ -136,27 +136,27 @@
             <h2 class="text-xl font-semibold text-gray-900 mb-4">Portfolio &amp; risk analytics</h2>
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4">
                 <a href="https://calcdomain.com/asset-allocation" class="card-hover bg-white p-5 rounded-lg shadow">
-                    <h3 class="text-lg font-semibold text-gray-900">Asset Allocation Calculator</h3>
+                    <h3 class="text-lg font-semibold text-gray-900">Asset allocation calculator</h3>
                     <p class="text-sm text-gray-600 mt-2">Build diversified mixes by risk profile and rebalance with drift controls.</p>
                 </a>
                 <a href="https://calcdomain.com/capm" class="card-hover bg-white p-5 rounded-lg shadow">
-                    <h3 class="text-lg font-semibold text-gray-900">CAPM Expected Return</h3>
+                    <h3 class="text-lg font-semibold text-gray-900">CAPM expected return</h3>
                     <p class="text-sm text-gray-600 mt-2">Estimate required returns using beta, risk-free rate, and market premium.</p>
                 </a>
                 <a href="https://calcdomain.com/sharpe-ratio" class="card-hover bg-white p-5 rounded-lg shadow">
-                    <h3 class="text-lg font-semibold text-gray-900">Sharpe Ratio Calculator</h3>
+                    <h3 class="text-lg font-semibold text-gray-900">Sharpe ratio calculator</h3>
                     <p class="text-sm text-gray-600 mt-2">Score risk-adjusted performance with optional Sortino comparison.</p>
                 </a>
                 <a href="https://calcdomain.com/beta" class="card-hover bg-white p-5 rounded-lg shadow">
-                    <h3 class="text-lg font-semibold text-gray-900">Beta Calculator</h3>
+                    <h3 class="text-lg font-semibold text-gray-900">Beta calculator</h3>
                     <p class="text-sm text-gray-600 mt-2">Measure systematic risk versus a benchmark using covariance inputs.</p>
                 </a>
                 <a href="https://calcdomain.com/portfolio-standard-deviation" class="card-hover bg-white p-5 rounded-lg shadow">
-                    <h3 class="text-lg font-semibold text-gray-900">Portfolio Standard Deviation</h3>
+                    <h3 class="text-lg font-semibold text-gray-900">Portfolio standard deviation</h3>
                     <p class="text-sm text-gray-600 mt-2">Quantify volatility with support for multi-asset correlation matrices.</p>
                 </a>
                 <a href="https://calcdomain.com/dividend-yield" class="card-hover bg-white p-5 rounded-lg shadow">
-                    <h3 class="text-lg font-semibold text-gray-900">Dividend Yield Calculator</h3>
+                    <h3 class="text-lg font-semibold text-gray-900">Dividend yield calculator</h3>
                     <p class="text-sm text-gray-600 mt-2">Track yield-on-cost, payout ratios, and growth assumptions for income portfolios.</p>
                 </a>
             </div>
@@ -175,7 +175,7 @@
         <div class="container mx-auto px-4">
             <div class="grid grid-cols-1 md:grid-cols-4 gap-8">
                 <div>
-                    <h3 class="text-2xl font-bold mb-4">CalcDomain</h3>
+                    <h3 class="text-2xl font-bold mb-4">Calcdomain</h3>
                     <p class="text-gray-400 mb-4">Your trusted source for free online calculators. Accurate, fast, and reliable calculations for every need.</p>
                     <div class="flex space-x-4">
                         <a href="#" class="text-gray-400 hover:text-white" aria-label="Twitter">
@@ -209,10 +209,10 @@
                 <div>
                     <h4 class="text-lg font-semibold mb-4">Support</h4>
                     <ul class="space-y-2">
-                        <li><a href="about" class="text-gray-400 hover:text-white">About Us</a></li>
-                        <li><a href="contact" class="text-gray-400 hover:text-white">Contact</a></li>
-                        <li><a href="privacy" class="text-gray-400 hover:text-white">Privacy Policy</a></li>
-                        <li><a href="terms" class="text-gray-400 hover:text-white">Terms of Service</a></li>
+                        <li><a href="https://calcdomain.com/about" class="text-gray-400 hover:text-white">About Us</a></li>
+                        <li><a href="https://calcdomain.com/contact" class="text-gray-400 hover:text-white">Contact</a></li>
+                        <li><a href="https://calcdomain.com/privacy" class="text-gray-400 hover:text-white">Privacy Policy</a></li>
+                        <li><a href="https://calcdomain.com/terms" class="text-gray-400 hover:text-white">Terms of Service</a></li>
                         <li><a href="sitemap.xml" class="text-gray-400 hover:text-white">Site Map</a></li>
                     </ul>
                 </div>
