--- a/sito_modificato/subcategories/finance-loans-and-debt.html
+++ b/sito_modificato/subcategories/finance-loans-and-debt.html
@@ -37,7 +37,7 @@
         <div class="container mx-auto px-4">
             <div class="grid grid-cols-1 md:grid-cols-4 gap-8">
                 <div>
-                    <h3 class="text-2xl font-bold mb-4">CalcDomain</h3>
+                    <h3 class="text-2xl font-bold mb-4">Calcdomain</h3>
                     <p class="text-gray-400 mb-4">Your trusted source for free online calculators. Accurate, fast, and reliable calculations for every need.</p>
                     <div class="flex space-x-4">
                         <a href="#" class="text-gray-400 hover:text-white" aria-label="Twitter">
@@ -71,10 +71,10 @@
                 <div>
                     <h4 class="text-lg font-semibold mb-4">Support</h4>
                     <ul class="space-y-2">
-                        <li><a href="about" class="text-gray-400 hover:text-white">About Us</a></li>
-                        <li><a href="contact" class="text-gray-400 hover:text-white">Contact</a></li>
-                        <li><a href="privacy" class="text-gray-400 hover:text-white">Privacy Policy</a></li>
-                        <li><a href="terms" class="text-gray-400 hover:text-white">Terms of Service</a></li>
+                        <li><a href="https://calcdomain.com/about" class="text-gray-400 hover:text-white">About Us</a></li>
+                        <li><a href="https://calcdomain.com/contact" class="text-gray-400 hover:text-white">Contact</a></li>
+                        <li><a href="https://calcdomain.com/privacy" class="text-gray-400 hover:text-white">Privacy Policy</a></li>
+                        <li><a href="https://calcdomain.com/terms" class="text-gray-400 hover:text-white">Terms of Service</a></li>
                         <li><a href="sitemap.xml" class="text-gray-400 hover:text-white">Site Map</a></li>
                     </ul>
                 </div>
@@ -101,15 +101,15 @@ Home / <a href="https://calcdomain.com/finance">Finance</a> / Loans &amp; Debt
 <h1>Loans &amp; Debt Calculators</h1>
 <p style="max-width:800px">Plan payments, compare offers, e valutare strategie di rimborso. Questa raccolta copre prestiti personali, auto e studenti, oltre a payoff accelerato, APR reale e DTI per l’idoneità al credito.</p>
 <div class="grid grid-3-col" style="margin-top:1rem;">
-<a class="card" href="https://calcdomain.com/simple-loan"><h3>Simple Loan Calculator</h3><p>Pagamento mensile, interessi totali e durata.</p></a>
-<a class="card" href="https://calcdomain.com/loan-amortization"><h3>Loan Amortization</h3><p>Piano rateale completo con extra payment.</p></a>
-<a class="card" href="https://calcdomain.com/loan-payoff"><h3>Loan Payoff</h3><p>Data di estinzione e interessi risparmiati.</p></a>
-<a class="card" href="https://calcdomain.com/apr"><h3>APR Calculator</h3><p>Tasso annuo effettivo con commissioni.</p></a>
-<a class="card" href="https://calcdomain.com/dti-ratio"><h3>DTI Ratio</h3><p>Debito mensile vs. reddito lordo.</p></a>
-<a class="card" href="https://calcdomain.com/debt-consolidation"><h3>Debt Consolidation</h3><p>Confronto consolidamento vs. debiti attuali.</p></a>
-<a class="card" href="https://calcdomain.com/student-loan"><h3>Student Loan</h3><p>Piani standard e income-driven.</p></a>
-<a class="card" href="https://calcdomain.com/credit-card-payoff"><h3>Credit Card Payoff</h3><p>Snowball/avalanche e interessi evitati.</p></a>
-<a class="card" href="https://calcdomain.com/personal-loan"><h3>Personal Loan</h3><p>Prestiti non garantiti con origination fee.</p></a>
+<a class="card" href="https://calcdomain.com/simple-loan"><h3>Simple loan calculator</h3><p>Pagamento mensile, interessi totali e durata.</p></a>
+<a class="card" href="https://calcdomain.com/loan-amortization"><h3>Loan amortization</h3><p>Piano rateale completo con extra payment.</p></a>
+<a class="card" href="https://calcdomain.com/loan-payoff"><h3>Loan payoff</h3><p>Data di estinzione e interessi risparmiati.</p></a>
+<a class="card" href="https://calcdomain.com/apr"><h3>APR calculator</h3><p>Tasso annuo effettivo con commissioni.</p></a>
+<a class="card" href="https://calcdomain.com/dti-ratio"><h3>DTI ratio</h3><p>Debito mensile vs. reddito lordo.</p></a>
+<a class="card" href="https://calcdomain.com/debt-consolidation"><h3>Debt consolidation</h3><p>Confronto consolidamento vs. debiti attuali.</p></a>
+<a class="card" href="https://calcdomain.com/student-loan"><h3>Student loan</h3><p>Piani standard e income-driven.</p></a>
+<a class="card" href="https://calcdomain.com/credit-card-payoff"><h3>Credit card payoff</h3><p>Snowball/avalanche e interessi evitati.</p></a>
+<a class="card" href="https://calcdomain.com/personal-loan"><h3>Personal loan</h3><p>Prestiti non garantiti con origination fee.</p></a>
 </div>
 </div>
 </main>
