--- a/sito_modificato/subcategories/finance-loans-debt.html
+++ b/sito_modificato/subcategories/finance-loans-debt.html
@@ -65,67 +65,67 @@
                     <h2 class="text-xl font-semibold text-gray-900 mb-4">Featured calculators</h2>
                     <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4">
                         <a href="https://calcdomain.com/simple-loan" class="card-hover bg-white p-5 rounded-lg shadow">
-                            <h3 class="text-lg font-semibold text-gray-900">Simple Loan Calculator</h3>
+                            <h3 class="text-lg font-semibold text-gray-900">Simple loan calculator</h3>
                             <p class="text-sm text-gray-600 mt-2">Compute simple-interest payments, total cost, and payoff time for quick loan estimates.</p>
                         </a>
                         <a href="https://calcdomain.com/personal-loan-calculator" class="card-hover bg-white p-5 rounded-lg shadow">
-                            <h3 class="text-lg font-semibold text-gray-900">Personal Loan Calculator</h3>
+                            <h3 class="text-lg font-semibold text-gray-900">Personal loan calculator</h3>
                             <p class="text-sm text-gray-600 mt-2">Model payments, origination fees, and extra contributions with full amortization.</p>
                         </a>
                         <a href="https://calcdomain.com/loan-amortization" class="card-hover bg-white p-5 rounded-lg shadow">
-                            <h3 class="text-lg font-semibold text-gray-900">Loan Amortization Schedule</h3>
+                            <h3 class="text-lg font-semibold text-gray-900">Loan amortization schedule</h3>
                             <p class="text-sm text-gray-600 mt-2">Generate detailed principal, interest, escrow, and PMI breakdowns per period.</p>
                         </a>
                         <a href="https://calcdomain.com/loan-payoff" class="card-hover bg-white p-5 rounded-lg shadow">
-                            <h3 class="text-lg font-semibold text-gray-900">Loan Payoff Calculator</h3>
+                            <h3 class="text-lg font-semibold text-gray-900">Loan payoff calculator</h3>
                             <p class="text-sm text-gray-600 mt-2">See how recurring extras or lump sums cut payoff time and interest paid.</p>
                         </a>
                         <a href="https://calcdomain.com/loan-prepayment" class="card-hover bg-white p-5 rounded-lg shadow">
-                            <h3 class="text-lg font-semibold text-gray-900">Loan Prepayment Planner</h3>
+                            <h3 class="text-lg font-semibold text-gray-900">Loan prepayment planner</h3>
                             <p class="text-sm text-gray-600 mt-2">Compare snowball vs. avalanche methods and forecast months saved.</p>
                         </a>
                         <a href="https://calcdomain.com/loan-comparison" class="card-hover bg-white p-5 rounded-lg shadow">
-                            <h3 class="text-lg font-semibold text-gray-900">Loan Comparison Tool</h3>
+                            <h3 class="text-lg font-semibold text-gray-900">Loan comparison tool</h3>
                             <p class="text-sm text-gray-600 mt-2">Evaluate multiple offers side-by-side by APR, fees, and total interest.</p>
                         </a>
                         <a href="https://calcdomain.com/interest-only-loan" class="card-hover bg-white p-5 rounded-lg shadow">
-                            <h3 class="text-lg font-semibold text-gray-900">Interest-Only Loan Calculator</h3>
+                            <h3 class="text-lg font-semibold text-gray-900">Interest-only loan calculator</h3>
                             <p class="text-sm text-gray-600 mt-2">Understand payment resets and principal due after an interest-only period.</p>
                         </a>
                         <a href="https://calcdomain.com/balloon-loan" class="card-hover bg-white p-5 rounded-lg shadow">
-                            <h3 class="text-lg font-semibold text-gray-900">Balloon Loan Calculator</h3>
+                            <h3 class="text-lg font-semibold text-gray-900">Balloon loan calculator</h3>
                             <p class="text-sm text-gray-600 mt-2">Plan for balloon payments, refinancing needs, and interest expense.</p>
                         </a>
                 <a href="https://calcdomain.com/apr" class="card-hover bg-white p-5 rounded-lg shadow">
-                            <h3 class="text-lg font-semibold text-gray-900">APR Calculator</h3>
+                            <h3 class="text-lg font-semibold text-gray-900">APR calculator</h3>
                             <p class="text-sm text-gray-600 mt-2">Convert nominal rates and fees into true APR for accurate comparisons.</p>
                         </a>
                         <a href="https://calcdomain.com/dti-ratio" class="card-hover bg-white p-5 rounded-lg shadow">
-                            <h3 class="text-lg font-semibold text-gray-900">Debt-to-Income Ratio</h3>
+                            <h3 class="text-lg font-semibold text-gray-900">Debt-to-income ratio</h3>
                             <p class="text-sm text-gray-600 mt-2">Calculate front-end and back-end DTI for underwriting or budgeting.</p>
                         </a>
                         <a href="https://calcdomain.com/credit-card-payoff" class="card-hover bg-white p-5 rounded-lg shadow">
-                            <h3 class="text-lg font-semibold text-gray-900">Credit Card Payoff Planner</h3>
+                            <h3 class="text-lg font-semibold text-gray-900">Credit card payoff planner</h3>
                             <p class="text-sm text-gray-600 mt-2">Design fixed or target-based payoff plans for revolving card balances.</p>
                         </a>
                         <a href="https://calcdomain.com/debt-consolidation" class="card-hover bg-white p-5 rounded-lg shadow">
-                            <h3 class="text-lg font-semibold text-gray-900">Debt Consolidation Analysis</h3>
+                            <h3 class="text-lg font-semibold text-gray-900">Debt consolidation analysis</h3>
                             <p class="text-sm text-gray-600 mt-2">Compare current debts against a consolidation loan to confirm savings.</p>
                         </a>
                         <a href="https://calcdomain.com/auto-loan" class="card-hover bg-white p-5 rounded-lg shadow">
-                            <h3 class="text-lg font-semibold text-gray-900">Auto Loan Calculator</h3>
+                            <h3 class="text-lg font-semibold text-gray-900">Auto loan calculator</h3>
                             <p class="text-sm text-gray-600 mt-2">Price vehicles with taxes, trade-ins, rebates, and dealer fees.</p>
                         </a>
                         <a href="https://calcdomain.com/auto-lease" class="card-hover bg-white p-5 rounded-lg shadow">
-                            <h3 class="text-lg font-semibold text-gray-900">Auto Lease Calculator</h3>
+                            <h3 class="text-lg font-semibold text-gray-900">Auto lease calculator</h3>
                             <p class="text-sm text-gray-600 mt-2">Break down money factor, residual value, and total lease expense.</p>
                         </a>
                         <a href="https://calcdomain.com/student-loan" class="card-hover bg-white p-5 rounded-lg shadow">
-                            <h3 class="text-lg font-semibold text-gray-900">Student Loan Calculator</h3>
+                            <h3 class="text-lg font-semibold text-gray-900">Student loan calculator</h3>
                             <p class="text-sm text-gray-600 mt-2">Model federal IDR plans, forgiveness targets, and private refinancing.</p>
                         </a>
                         <a href="https://calcdomain.com/student-loan-payoff" class="card-hover bg-white p-5 rounded-lg shadow">
-                            <h3 class="text-lg font-semibold text-gray-900">Student Loan Payoff</h3>
+                            <h3 class="text-lg font-semibold text-gray-900">Student loan payoff</h3>
                             <p class="text-sm text-gray-600 mt-2">Accelerate payoff with extra payments and track interest savings.</p>
                         </a>
                     </div>
@@ -163,7 +163,7 @@
         <div class="container mx-auto px-4">
             <div class="grid grid-cols-1 md:grid-cols-4 gap-8">
                 <div>
-                    <h3 class="text-2xl font-bold mb-4">CalcDomain</h3>
+                    <h3 class="text-2xl font-bold mb-4">Calcdomain</h3>
                     <p class="text-gray-400 mb-4">Your trusted source for free online calculators. Accurate, fast, and reliable calculations for every need.</p>
                     <div class="flex space-x-4">
                         <a href="#" class="text-gray-400 hover:text-white" aria-label="Twitter">
@@ -197,10 +197,10 @@
                 <div>
                     <h4 class="text-lg font-semibold mb-4">Support</h4>
                     <ul class="space-y-2">
-                        <li><a href="about" class="text-gray-400 hover:text-white">About Us</a></li>
-                        <li><a href="contact" class="text-gray-400 hover:text-white">Contact</a></li>
-                        <li><a href="privacy" class="text-gray-400 hover:text-white">Privacy Policy</a></li>
-                        <li><a href="terms" class="text-gray-400 hover:text-white">Terms of Service</a></li>
+                        <li><a href="https://calcdomain.com/about" class="text-gray-400 hover:text-white">About Us</a></li>
+                        <li><a href="https://calcdomain.com/contact" class="text-gray-400 hover:text-white">Contact</a></li>
+                        <li><a href="https://calcdomain.com/privacy" class="text-gray-400 hover:text-white">Privacy Policy</a></li>
+                        <li><a href="https://calcdomain.com/terms" class="text-gray-400 hover:text-white">Terms of Service</a></li>
                         <li><a href="sitemap.xml" class="text-gray-400 hover:text-white">Site Map</a></li>
                     </ul>
                 </div>
