--- a/sito_modificato/subcategories/finance-mortgage-real-estate.html
+++ b/sito_modificato/subcategories/finance-mortgage-real-estate.html
@@ -72,27 +72,27 @@
                     <h2 class="text-xl font-semibold text-gray-900 mb-4">Featured mortgage calculators</h2>
                     <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4">
                         <a href="https://calcdomain.com/mortgage" class="card-hover bg-white p-5 rounded-lg shadow">
-                            <h3 class="text-lg font-semibold text-gray-900">Mortgage Calculator</h3>
+                            <h3 class="text-lg font-semibold text-gray-900">Mortgage calculator</h3>
                             <p class="text-sm text-gray-600 mt-2">Project monthly payments with taxes, insurance, PMI, and amortization tables.</p>
                         </a>
                         <a href="https://calcdomain.com/mortgage-payment" class="card-hover bg-white p-5 rounded-lg shadow">
-                            <h3 class="text-lg font-semibold text-gray-900">Mortgage Payment</h3>
+                            <h3 class="text-lg font-semibold text-gray-900">Mortgage payment</h3>
                             <p class="text-sm text-gray-600 mt-2">Break down principal and interest by payment frequency and start date.</p>
                         </a>
                         <a href="https://calcdomain.com/mortgage-affordability-calculator" class="card-hover bg-white p-5 rounded-lg shadow">
-                            <h3 class="text-lg font-semibold text-gray-900">Affordability Calculator</h3>
+                            <h3 class="text-lg font-semibold text-gray-900">Affordability calculator</h3>
                             <p class="text-sm text-gray-600 mt-2">Estimate home budgets using income, debts, taxes, insurance, and target DTI.</p>
                         </a>
                         <a href="https://calcdomain.com/mortgage-refinance" class="card-hover bg-white p-5 rounded-lg shadow">
-                            <h3 class="text-lg font-semibold text-gray-900">Refinance Calculator</h3>
+                            <h3 class="text-lg font-semibold text-gray-900">Refinance calculator</h3>
                             <p class="text-sm text-gray-600 mt-2">Compare current and new loans, savings timelines, and break-even points.</p>
                         </a>
                         <a href="https://calcdomain.com/mortgage-payoff" class="card-hover bg-white p-5 rounded-lg shadow">
-                            <h3 class="text-lg font-semibold text-gray-900">Mortgage Payoff</h3>
+                            <h3 class="text-lg font-semibold text-gray-900">Mortgage payoff</h3>
                             <p class="text-sm text-gray-600 mt-2">Accelerate payoff with one-time or recurring extra payments and track interest saved.</p>
                         </a>
                         <a href="https://calcdomain.com/15-vs-30-year-mortgage" class="card-hover bg-white p-5 rounded-lg shadow">
-                            <h3 class="text-lg font-semibold text-gray-900">15 vs. 30 Year Mortgage</h3>
+                            <h3 class="text-lg font-semibold text-gray-900">15 vs. 30 year mortgage</h3>
                             <p class="text-sm text-gray-600 mt-2">Compare total interest, monthly payments, and breakeven for term choices.</p>
                         </a>
                     </div>
@@ -102,19 +102,19 @@
                     <h2 class="text-xl font-semibold text-gray-900 mb-4">Refinancing &amp; payoff strategies</h2>
                     <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4">
                         <a href="https://calcdomain.com/biweekly-mortgage" class="card-hover bg-white p-5 rounded-lg shadow">
-                            <h3 class="text-lg font-semibold text-gray-900">Biweekly Mortgage</h3>
+                            <h3 class="text-lg font-semibold text-gray-900">Biweekly mortgage</h3>
                             <p class="text-sm text-gray-600 mt-2">See how half-payments every two weeks shave years off the loan term.</p>
                         </a>
                         <a href="https://calcdomain.com/mortgage-points" class="card-hover bg-white p-5 rounded-lg shadow">
-                            <h3 class="text-lg font-semibold text-gray-900">Mortgage Points</h3>
+                            <h3 class="text-lg font-semibold text-gray-900">Mortgage points</h3>
                             <p class="text-sm text-gray-600 mt-2">Weigh upfront discount points against rate reductions and break-even time.</p>
                         </a>
                         <a href="https://calcdomain.com/reverse-mortgage" class="card-hover bg-white p-5 rounded-lg shadow">
-                            <h3 class="text-lg font-semibold text-gray-900">Reverse Mortgage</h3>
+                            <h3 class="text-lg font-semibold text-gray-900">Reverse mortgage</h3>
                             <p class="text-sm text-gray-600 mt-2">Estimate proceeds, loan balance growth, and home equity preserved.</p>
                         </a>
                         <a href="https://calcdomain.com/canadian-mortgage" class="card-hover bg-white p-5 rounded-lg shadow">
-                            <h3 class="text-lg font-semibold text-gray-900">Canadian Mortgage</h3>
+                            <h3 class="text-lg font-semibold text-gray-900">Canadian mortgage</h3>
                             <p class="text-sm text-gray-600 mt-2">Calculate payments using semi-annual compounding and accelerated schedules.</p>
                         </a>
                     </div>
@@ -124,19 +124,19 @@
                     <h2 class="text-xl font-semibold text-gray-900 mb-4">Real estate planning &amp; research</h2>
                     <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4">
                         <a href="https://calcdomain.com/rent-vs-buy" class="card-hover bg-white p-5 rounded-lg shadow">
-                            <h3 class="text-lg font-semibold text-gray-900">Rent vs. Buy</h3>
+                            <h3 class="text-lg font-semibold text-gray-900">Rent vs. buy</h3>
                             <p class="text-sm text-gray-600 mt-2">Compare long-term costs, equity build-up, and opportunity cost of capital.</p>
                         </a>
                         <a href="https://calcdomain.com/closing-costs" class="card-hover bg-white p-5 rounded-lg shadow">
-                            <h3 class="text-lg font-semibold text-gray-900">Closing Costs</h3>
+                            <h3 class="text-lg font-semibold text-gray-900">Closing costs</h3>
                             <p class="text-sm text-gray-600 mt-2">Estimate lender, title, prepaid, and escrow fees for your purchase or refinance.</p>
                         </a>
                         <a href="https://calcdomain.com/mortgages" class="card-hover bg-white p-5 rounded-lg shadow">
-                            <h3 class="text-lg font-semibold text-gray-900">Mortgage Guide</h3>
+                            <h3 class="text-lg font-semibold text-gray-900">Mortgage guide</h3>
                             <p class="text-sm text-gray-600 mt-2">Explore FHA, VA, jumbo, and conventional options in one hub.</p>
                         </a>
                         <a href="https://calcdomain.com/finance-mortgages-and-home" class="card-hover bg-white p-5 rounded-lg shadow">
-                            <h3 class="text-lg font-semibold text-gray-900">Mortgage &amp; Home Hub</h3>
+                            <h3 class="text-lg font-semibold text-gray-900">Mortgage &amp; home hub</h3>
                             <p class="text-sm text-gray-600 mt-2">Browse all mortgage and housing tools across CalcDomain.</p>
                         </a>
                     </div>
@@ -185,7 +185,7 @@
         <div class="container mx-auto px-4">
             <div class="grid grid-cols-1 md:grid-cols-4 gap-8">
                 <div>
-                    <h3 class="text-2xl font-bold mb-4">CalcDomain</h3>
+                    <h3 class="text-2xl font-bold mb-4">Calcdomain</h3>
                     <p class="text-gray-400 mb-4">Your trusted source for free online calculators. Accurate, fast, and reliable calculations for every need.</p>
                     <div class="flex space-x-4">
                         <a href="#" class="text-gray-400 hover:text-white" aria-label="Twitter">
@@ -219,10 +219,10 @@
                 <div>
                     <h4 class="text-lg font-semibold mb-4">Support</h4>
                     <ul class="space-y-2">
-                        <li><a href="about" class="text-gray-400 hover:text-white">About Us</a></li>
-                        <li><a href="contact" class="text-gray-400 hover:text-white">Contact</a></li>
-                        <li><a href="privacy" class="text-gray-400 hover:text-white">Privacy Policy</a></li>
-                        <li><a href="terms" class="text-gray-400 hover:text-white">Terms of Service</a></li>
+                        <li><a href="https://calcdomain.com/about" class="text-gray-400 hover:text-white">About Us</a></li>
+                        <li><a href="https://calcdomain.com/contact" class="text-gray-400 hover:text-white">Contact</a></li>
+                        <li><a href="https://calcdomain.com/privacy" class="text-gray-400 hover:text-white">Privacy Policy</a></li>
+                        <li><a href="https://calcdomain.com/terms" class="text-gray-400 hover:text-white">Terms of Service</a></li>
                         <li><a href="sitemap.xml" class="text-gray-400 hover:text-white">Site Map</a></li>
                     </ul>
                 </div>
