--- a/sito_modificato/subcategories/finance-mortgages-and-home.html
+++ b/sito_modificato/subcategories/finance-mortgages-and-home.html
@@ -34,7 +34,7 @@
         <div class="container mx-auto px-4">
             <div class="grid grid-cols-1 md:grid-cols-4 gap-8">
                 <div>
-                    <h3 class="text-2xl font-bold mb-4">CalcDomain</h3>
+                    <h3 class="text-2xl font-bold mb-4">Calcdomain</h3>
                     <p class="text-gray-400 mb-4">Your trusted source for free online calculators. Accurate, fast, and reliable calculations for every need.</p>
                     <div class="flex space-x-4">
                         <a href="#" class="text-gray-400 hover:text-white" aria-label="Twitter">
@@ -68,10 +68,10 @@
                 <div>
                     <h4 class="text-lg font-semibold mb-4">Support</h4>
                     <ul class="space-y-2">
-                        <li><a href="about" class="text-gray-400 hover:text-white">About Us</a></li>
-                        <li><a href="contact" class="text-gray-400 hover:text-white">Contact</a></li>
-                        <li><a href="privacy" class="text-gray-400 hover:text-white">Privacy Policy</a></li>
-                        <li><a href="terms" class="text-gray-400 hover:text-white">Terms of Service</a></li>
+                        <li><a href="https://calcdomain.com/about" class="text-gray-400 hover:text-white">About Us</a></li>
+                        <li><a href="https://calcdomain.com/contact" class="text-gray-400 hover:text-white">Contact</a></li>
+                        <li><a href="https://calcdomain.com/privacy" class="text-gray-400 hover:text-white">Privacy Policy</a></li>
+                        <li><a href="https://calcdomain.com/terms" class="text-gray-400 hover:text-white">Terms of Service</a></li>
                         <li><a href="sitemap.xml" class="text-gray-400 hover:text-white">Site Map</a></li>
                     </ul>
                 </div>
@@ -97,18 +97,18 @@
 <h1>Mortgages &amp; Home Financing</h1>
 <p style="max-width:800px">Evaluate payments, eligibility, and home repayment strategies. Compare scenarios, closing costs, and FHA/VA programs, or simulate HELOCs and biweekly repayment plans.</p>
 <div class="grid grid-3-col" style="margin-top:1rem;">
-<a class="card" href="https://calcdomain.com/mortgage-payment"><h3>Mortgage Payment</h3><p>PITI, PMI, and HOA.</p></a>
+<a class="card" href="https://calcdomain.com/mortgage-payment"><h3>Mortgage payment</h3><p>PITI, PMI, and HOA.</p></a>
 <a class="card" href="https://calcdomain.com/how-much-house-can-i-afford"><h3>Affordability</h3><p>Budget vs. DTI.</p></a>
 <a class="card" href="https://calcdomain.com/mortgage-refinance"><h3>Refinance</h3><p>Break-even point and savings.</p></a>
-<a class="card" href="https://calcdomain.com/rent-vs-buy"><h3>Rent vs. Buy</h3><p>Rental versus purchase.</p></a>
+<a class="card" href="https://calcdomain.com/rent-vs-buy"><h3>Rent vs. buy</h3><p>Rental versus purchase.</p></a>
 <a class="card" href="https://calcdomain.com/fha-loan"><h3>FHA</h3><p>MIP and minimum down payment.</p></a>
 <a class="card" href="https://calcdomain.com/va-loan"><h3>VA</h3><p>Funding fee and zero down.</p></a>
-<a class="card" href="https://calcdomain.com/down-payment"><h3>Down Payment</h3><p>Impact on LTV/PMI.</p></a>
-<a class="card" href="https://calcdomain.com/mortgage-payoff"><h3>Mortgage Payoff</h3><p>Extra principal and biweekly plans.</p></a>
+<a class="card" href="https://calcdomain.com/down-payment"><h3>Down payment</h3><p>Impact on LTV/PMI.</p></a>
+<a class="card" href="https://calcdomain.com/mortgage-payoff"><h3>Mortgage payoff</h3><p>Extra principal and biweekly plans.</p></a>
 <a class="card" href="https://calcdomain.com/heloc"><h3>HELOC</h3><p>Draw and repayment periods.</p></a>
-<a class="card" href="https://calcdomain.com/closing-costs"><h3>Closing Costs</h3><p>Fees and prepaid expenses.</p></a>
-<a class="card" href="https://calcdomain.com/biweekly-mortgage"><h3>Biweekly Mortgage</h3><p>Time and interest savings.</p></a>
-<a class="card" href="https://calcdomain.com/reverse-mortgage"><h3>Reverse Mortgage</h3><p>Proceeds and non-recourse limits.</p></a>
+<a class="card" href="https://calcdomain.com/closing-costs"><h3>Closing costs</h3><p>Fees and prepaid expenses.</p></a>
+<a class="card" href="https://calcdomain.com/biweekly-mortgage"><h3>Biweekly mortgage</h3><p>Time and interest savings.</p></a>
+<a class="card" href="https://calcdomain.com/reverse-mortgage"><h3>Reverse mortgage</h3><p>Proceeds and non-recourse limits.</p></a>
 </div>
 </div>
 </main>
