--- a/sito_modificato/subcategories/finance-real-estate-investing.html
+++ b/sito_modificato/subcategories/finance-real-estate-investing.html
@@ -34,7 +34,7 @@
         <div class="container mx-auto px-4">
             <div class="grid grid-cols-1 md:grid-cols-4 gap-8">
                 <div>
-                    <h3 class="text-2xl font-bold mb-4">CalcDomain</h3>
+                    <h3 class="text-2xl font-bold mb-4">Calcdomain</h3>
                     <p class="text-gray-400 mb-4">Your trusted source for free online calculators. Accurate, fast, and reliable calculations for every need.</p>
                     <div class="flex space-x-4">
                         <a href="#" class="text-gray-400 hover:text-white" aria-label="Twitter">
@@ -68,10 +68,10 @@
                 <div>
                     <h4 class="text-lg font-semibold mb-4">Support</h4>
                     <ul class="space-y-2">
-                        <li><a href="about" class="text-gray-400 hover:text-white">About Us</a></li>
-                        <li><a href="contact" class="text-gray-400 hover:text-white">Contact</a></li>
-                        <li><a href="privacy" class="text-gray-400 hover:text-white">Privacy Policy</a></li>
-                        <li><a href="terms" class="text-gray-400 hover:text-white">Terms of Service</a></li>
+                        <li><a href="https://calcdomain.com/about" class="text-gray-400 hover:text-white">About Us</a></li>
+                        <li><a href="https://calcdomain.com/contact" class="text-gray-400 hover:text-white">Contact</a></li>
+                        <li><a href="https://calcdomain.com/privacy" class="text-gray-400 hover:text-white">Privacy Policy</a></li>
+                        <li><a href="https://calcdomain.com/terms" class="text-gray-400 hover:text-white">Terms of Service</a></li>
                         <li><a href="sitemap.xml" class="text-gray-400 hover:text-white">Site Map</a></li>
                     </ul>
                 </div>
@@ -94,19 +94,19 @@
 <h1>Real Estate Investing</h1>
 <p style="max-width:800px">Valuta operazioni immobiliari a reddito, sviluppo e flip con metriche e modelli usati da investitori e lender.</p>
 <div class="grid grid-3-col" style="margin-top:1rem;">
-<a class="card" href="https://calcdomain.com/cap-rate"><h3>Cap Rate</h3><p>NOI ↔ valore.</p></a>
-<a class="card" href="https://calcdomain.com/cash-on-cash-return"><h3>Cash on Cash</h3><p>Rendimento sull’equity.</p></a>
-<a class="card" href="https://calcdomain.com/commercial-real-estate-pro-forma"><h3>CRE Pro Forma</h3><p>Stabilizzato vs. pro-forma.</p></a>
+<a class="card" href="https://calcdomain.com/cap-rate"><h3>Cap rate</h3><p>NOI ↔ valore.</p></a>
+<a class="card" href="https://calcdomain.com/cash-on-cash-return"><h3>Cash on cash</h3><p>Rendimento sull’equity.</p></a>
+<a class="card" href="https://calcdomain.com/commercial-real-estate-pro-forma"><h3>CRE pro forma</h3><p>Stabilizzato vs. pro-forma.</p></a>
 <a class="card" href="https://calcdomain.com/real-estate-development"><h3>Development</h3><p>Hard/soft/contingency.</p></a>
-<a class="card" href="https://calcdomain.com/1031-exchange"><h3>1031 Exchange</h3><p>Differimento plusvalenze.</p></a>
+<a class="card" href="https://calcdomain.com/1031-exchange"><h3>1031 exchange</h3><p>Differimento plusvalenze.</p></a>
 <a class="card" href="https://calcdomain.com/ltv"><h3>LTV</h3><p>Rapporto prestito/valore.</p></a>
 <a class="card" href="https://calcdomain.com/dscr"><h3>DSCR</h3><p>NOI vs. servizio debito.</p></a>
 <a class="card" href="https://calcdomain.com/grm"><h3>GRM</h3><p>Valutazione rapida.</p></a>
 <a class="card" href="https://calcdomain.com/real-estate-irr"><h3>RE IRR</h3><p>IRR levered/unlevered.</p></a>
-<a class="card" href="https://calcdomain.com/70-rule"><h3>70% Rule</h3><p>Flip screening.</p></a>
+<a class="card" href="https://calcdomain.com/70-rule"><h3>70% rule</h3><p>Flip screening.</p></a>
 <a class="card" href="https://calcdomain.com/brrrr"><h3>BRRRR</h3><p>Cash-out e cicli.</p></a>
-<a class="card" href="https://calcdomain.com/property-tax"><h3>Property Tax</h3><p>Aliquote e assessment.</p></a>
-<a class="card" href="https://calcdomain.com/commercial-lease"><h3>Commercial Lease</h3><p>Gross vs. NNN.</p></a>
+<a class="card" href="https://calcdomain.com/property-tax"><h3>Property tax</h3><p>Aliquote e assessment.</p></a>
+<a class="card" href="https://calcdomain.com/commercial-lease"><h3>Commercial lease</h3><p>Gross vs. NNN.</p></a>
 </div>
 </div></main>
 <!-- Standard Footer --> 
