--- a/sito_modificato/subcategories/finance-retirement-and-pensions.html
+++ b/sito_modificato/subcategories/finance-retirement-and-pensions.html
@@ -34,7 +34,7 @@
         <div class="container mx-auto px-4">
             <div class="grid grid-cols-1 md:grid-cols-4 gap-8">
                 <div>
-                    <h3 class="text-2xl font-bold mb-4">CalcDomain</h3>
+                    <h3 class="text-2xl font-bold mb-4">Calcdomain</h3>
                     <p class="text-gray-400 mb-4">Your trusted source for free online calculators. Accurate, fast, and reliable calculations for every need.</p>
                     <div class="flex space-x-4">
                         <a href="#" class="text-gray-400 hover:text-white" aria-label="Twitter">
@@ -68,10 +68,10 @@
                 <div>
                     <h4 class="text-lg font-semibold mb-4">Support</h4>
                     <ul class="space-y-2">
-                        <li><a href="about" class="text-gray-400 hover:text-white">About Us</a></li>
-                        <li><a href="contact" class="text-gray-400 hover:text-white">Contact</a></li>
-                        <li><a href="privacy" class="text-gray-400 hover:text-white">Privacy Policy</a></li>
-                        <li><a href="terms" class="text-gray-400 hover:text-white">Terms of Service</a></li>
+                        <li><a href="https://calcdomain.com/about" class="text-gray-400 hover:text-white">About Us</a></li>
+                        <li><a href="https://calcdomain.com/contact" class="text-gray-400 hover:text-white">Contact</a></li>
+                        <li><a href="https://calcdomain.com/privacy" class="text-gray-400 hover:text-white">Privacy Policy</a></li>
+                        <li><a href="https://calcdomain.com/terms" class="text-gray-400 hover:text-white">Terms of Service</a></li>
                         <li><a href="sitemap.xml" class="text-gray-400 hover:text-white">Site Map</a></li>
                     </ul>
                 </div>
@@ -99,10 +99,10 @@
 <a class="card" href="https://calcdomain.com/ira"><h3>IRA</h3><p>Tradizionale vs. Roth.</p></a>
 <a class="card" href="https://calcdomain.com/roth-ira"><h3>Roth IRA</h3><p>Benefici netti post-imposta.</p></a>
 <a class="card" href="https://calcdomain.com/rmd"><h3>RMD</h3><p>Prelievi minimi obbligatori.</p></a>
-<a class="card" href="https://calcdomain.com/social-security"><h3>Social Security</h3><p>Età di richiesta e break-even.</p></a>
+<a class="card" href="https://calcdomain.com/social-security"><h3>Social security</h3><p>Età di richiesta e break-even.</p></a>
 <a class="card" href="https://calcdomain.com/pension"><h3>Pension</h3><p>Formule DB e anni di servizio.</p></a>
-<a class="card" href="https://calcdomain.com/pension-payout"><h3>Payout Options</h3><p>Single-life vs. J&amp;S.</p></a>
-<a class="card" href="https://calcdomain.com/roth-conversion"><h3>Roth Conversion</h3><p>Oggi vs. tasse future.</p></a>
+<a class="card" href="https://calcdomain.com/pension-payout"><h3>Payout options</h3><p>Single-life vs. J&amp;S.</p></a>
+<a class="card" href="https://calcdomain.com/roth-conversion"><h3>Roth conversion</h3><p>Oggi vs. tasse future.</p></a>
 <a class="card" href="https://calcdomain.com/fire"><h3>FIRE</h3><p>Indipendenza finanziaria.</p></a>
 <a class="card" href="https://calcdomain.com/hsa"><h3>HSA</h3><p>Conto sanitario agevolato.</p></a>
 </div>
