--- a/sito_modificato/subcategories/finance-retirement.html
+++ b/sito_modificato/subcategories/finance-retirement.html
@@ -80,7 +80,7 @@
                                 <svg class="w-6 h-6 text-blue-600" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v8m0 0v1m0-1c-1.11 0-2.08-.402-2.599-1"></svg>
                             </div>
                             <div>
-                                <h3 class="font-semibold text-gray-800">Retirement Calculator</h3>
+                                <h3 class="font-semibold text-gray-800">Retirement calculator</h3>
                                 <p class="text-sm text-gray-600 mt-1">Project nest egg, sustainable withdrawals, Social Security, and contribution needs in today’s pounds.</p>
                             </div>
                         </a>
@@ -90,7 +90,7 @@
                                 <svg class="w-6 h-6 text-blue-600" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v8m0 0v1m0-1c-1.11 0-2.08-.402-2.599-1"></svg>
                             </div>
                             <div>
-                                <h3 class="font-semibold text-gray-800">Pension Payout Calculator</h3>
+                                <h3 class="font-semibold text-gray-800">Pension payout calculator</h3>
                                 <p class="text-sm text-gray-600 mt-1">Translate pension savings into inflation-aware monthly income over your retirement horizon.</p>
                             </div>
                         </a>
@@ -100,7 +100,7 @@
                                 <svg class="w-6 h-6 text-blue-600" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v8m0 0v1m0-1c-1.11 0-2.08-.402-2.599-1"></svg>
                             </div>
                             <div>
-                                <h3 class="font-semibold text-gray-800">Pension Calculator (DB & DC)</h3>
+                                <h3 class="font-semibold text-gray-800">Pension calculator (DB & DC)</h3>
                                 <p class="text-sm text-gray-600 mt-1">Estimate defined benefit income or project defined contribution balances with COLA and match options.</p>
                             </div>
                         </a>
@@ -110,7 +110,7 @@
                                 <svg class="w-6 h-6 text-blue-600" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v8m0 0v1m0-1c-1.11 0-2.08-.402-2.599-1"></svg>
                             </div>
                             <div>
-                                <h3 class="font-semibold text-gray-800">SIPP Calculator (UK)</h3>
+                                <h3 class="font-semibold text-gray-800">SIPP calculator (UK)</h3>
                                 <p class="text-sm text-gray-600 mt-1">Model UK SIPP growth with contribution timing, annual increases, and inflation-adjusted projections.</p>
                             </div>
                         </a>
@@ -120,7 +120,7 @@
                                 <svg class="w-6 h-6 text-blue-600" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v8m0 0v1m0-1c-1.11 0-2.08-.402-2.599-1"></svg>
                             </div>
                             <div>
-                                <h3 class="font-semibold text-gray-800">IRA Calculator</h3>
+                                <h3 class="font-semibold text-gray-800">IRA calculator</h3>
                                 <p class="text-sm text-gray-600 mt-1">Track traditional IRA contributions, growth, catch-up limits, and retirement value.</p>
                             </div>
                         </a>
@@ -130,7 +130,7 @@
                                 <svg class="w-6 h-6 text-blue-600" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v8m0 0v1m0-1c-1.11 0-2.08-.402-2.599-1"></svg>
                             </div>
                             <div>
-                                <h3 class="font-semibold text-gray-800">Roth IRA Calculator</h3>
+                                <h3 class="font-semibold text-gray-800">Roth IRA calculator</h3>
                                 <p class="text-sm text-gray-600 mt-1">Compare traditional vs. Roth IRA growth, contributions, and tax-free withdrawals.</p>
                             </div>
                         </a>
@@ -140,7 +140,7 @@
                                 <svg class="w-6 h-6 text-blue-600" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v8m0 0v1m0-1c-1.11 0-2.08-.402-2.599-1"></svg>
                             </div>
                             <div>
-                                <h3 class="font-semibold text-gray-800">Annuity Calculator</h3>
+                                <h3 class="font-semibold text-gray-800">Annuity calculator</h3>
                                 <p class="text-sm text-gray-600 mt-1">Price immediate or deferred annuities, evaluate payouts, and compare present values.</p>
                             </div>
                         </a>
@@ -150,7 +150,7 @@
                                 <svg class="w-6 h-6 text-blue-600" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v8m0 0v1m0-1c-1.11 0-2.08-.402-2.599-1"></svg>
                             </div>
                             <div>
-                                <h3 class="font-semibold text-gray-800">401(k) Calculator</h3>
+                                <h3 class="font-semibold text-gray-800">401(k) calculator</h3>
                                 <p class="text-sm text-gray-600 mt-1">Model contributions, employer match, and retirement value for your 401(k).</p>
                             </div>
                         </a>
@@ -160,7 +160,7 @@
                                 <svg class="w-6 h-6 text-blue-600" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v8m0 0v1m0-1c-1.11 0-2.08-.402-2.599-1"></svg>
                             </div>
                             <div>
-                                <h3 class="font-semibold text-gray-800">Roth Conversion Analyzer</h3>
+                                <h3 class="font-semibold text-gray-800">Roth conversion analyzer</h3>
                                 <p class="text-sm text-gray-600 mt-1">Compare taxable versus Roth conversions, break-even years, and projected balances.</p>
                             </div>
                         </a>
@@ -175,7 +175,7 @@
                             </svg>
                         </div>
                         <div>
-                            <h3 class="font-semibold text-gray-800">German Pension Calculator</h3>
+                            <h3 class="font-semibold text-gray-800">German pension calculator</h3>
                             <p class="text-sm text-gray-600 mt-1">Estimate your monthly German statutory pension (Rente) with salary, age, and points.</p>
                         </div>
                         </a>
@@ -193,7 +193,7 @@
             <aside class="w-full lg:w-1/3">
                 <div class="sticky top-24 space-y-8">
                     <div class="bg-white p-6 rounded-lg shadow-md">
-                        <h3 class="font-bold text-lg mb-4">Retirement Stats</h3>
+                        <h3 class="font-bold text-lg mb-4">Retirement stats</h3>
                         <div class="space-y-3 text-sm">
                             <div class="flex justify-between"><span class="text-gray-600">Calculators</span><span class="font-semibold">8+</span></div>
                             <div class="flex justify-between"><span class="text-gray-600">Category</span><span class="font-semibold">Finance</span></div>
@@ -206,7 +206,7 @@
                     </div>
 
                     <div class="bg-white p-6 rounded-lg shadow-md">
-                        <h3 class="font-bold text-lg mb-4">Related Finance Subcategories</h3>
+                        <h3 class="font-bold text-lg mb-4">Related finance subcategories</h3>
                         <ul class="space-y-3 text-sm">
                             <li>Investments <span class="text-gray-400">46</span></li>
                             <li>Taxes <span class="text-gray-400">108</span></li>
@@ -222,7 +222,7 @@
         <div class="container mx-auto px-4">
             <div class="grid grid-cols-1 md:grid-cols-4 gap-8">
                 <div>
-                    <h3 class="text-2xl font-bold mb-4">CalcDomain</h3>
+                    <h3 class="text-2xl font-bold mb-4">Calcdomain</h3>
                     <p class="text-gray-400 mb-4">Your trusted source for free online calculators. Accurate, fast, and reliable calculations for every need.</p>
                     <div class="flex space-x-4">
                         <a href="#" class="text-gray-400 hover:text-white" aria-label="Twitter">
@@ -256,10 +256,10 @@
                 <div>
                     <h4 class="text-lg font-semibold mb-4">Support</h4>
                     <ul class="space-y-2">
-                        <li><a href="about" class="text-gray-400 hover:text-white">About Us</a></li>
-                        <li><a href="contact" class="text-gray-400 hover:text-white">Contact</a></li>
-                        <li><a href="privacy" class="text-gray-400 hover:text-white">Privacy Policy</a></li>
-                        <li><a href="terms" class="text-gray-400 hover:text-white">Terms of Service</a></li>
+                        <li><a href="https://calcdomain.com/about" class="text-gray-400 hover:text-white">About Us</a></li>
+                        <li><a href="https://calcdomain.com/contact" class="text-gray-400 hover:text-white">Contact</a></li>
+                        <li><a href="https://calcdomain.com/privacy" class="text-gray-400 hover:text-white">Privacy Policy</a></li>
+                        <li><a href="https://calcdomain.com/terms" class="text-gray-400 hover:text-white">Terms of Service</a></li>
                         <li><a href="sitemap.xml" class="text-gray-400 hover:text-white">Site Map</a></li>
                     </ul>
                 </div>
