--- a/sito_modificato/subcategories/finance-stocks-options-and-trading.html
+++ b/sito_modificato/subcategories/finance-stocks-options-and-trading.html
@@ -34,7 +34,7 @@
         <div class="container mx-auto px-4">
             <div class="grid grid-cols-1 md:grid-cols-4 gap-8">
                 <div>
-                    <h3 class="text-2xl font-bold mb-4">CalcDomain</h3>
+                    <h3 class="text-2xl font-bold mb-4">Calcdomain</h3>
                     <p class="text-gray-400 mb-4">Your trusted source for free online calculators. Accurate, fast, and reliable calculations for every need.</p>
                     <div class="flex space-x-4">
                         <a href="#" class="text-gray-400 hover:text-white" aria-label="Twitter">
@@ -68,10 +68,10 @@
                 <div>
                     <h4 class="text-lg font-semibold mb-4">Support</h4>
                     <ul class="space-y-2">
-                        <li><a href="about" class="text-gray-400 hover:text-white">About Us</a></li>
-                        <li><a href="contact" class="text-gray-400 hover:text-white">Contact</a></li>
-                        <li><a href="privacy" class="text-gray-400 hover:text-white">Privacy Policy</a></li>
-                        <li><a href="terms" class="text-gray-400 hover:text-white">Terms of Service</a></li>
+                        <li><a href="https://calcdomain.com/about" class="text-gray-400 hover:text-white">About Us</a></li>
+                        <li><a href="https://calcdomain.com/contact" class="text-gray-400 hover:text-white">Contact</a></li>
+                        <li><a href="https://calcdomain.com/privacy" class="text-gray-400 hover:text-white">Privacy Policy</a></li>
+                        <li><a href="https://calcdomain.com/terms" class="text-gray-400 hover:text-white">Terms of Service</a></li>
                         <li><a href="sitemap.xml" class="text-gray-400 hover:text-white">Site Map</a></li>
                     </ul>
                 </div>
@@ -94,28 +94,28 @@
 <h1>Stocks, Options &amp; Trading</h1>
 <p style="max-width:800px">Strumenti per prezzi, rendimento, rischio e strategie operative. Dai bond al pricing di opzioni, fino agli indicatori tecnici e al sizing delle posizioni.</p>
 <div class="grid grid-3-col" style="margin-top:1rem;">
-<a class="card" href="https://calcdomain.com/stock"><h3>Stock Calculator</h3><p>Prezzo medio, P/L e commissioni.</p></a>
-<a class="card" href="https://calcdomain.com/bond-yield"><h3>Bond Yield</h3><p>YTM e current yield.</p></a>
+<a class="card" href="https://calcdomain.com/stock"><h3>Stock calculator</h3><p>Prezzo medio, P/L e commissioni.</p></a>
+<a class="card" href="https://calcdomain.com/bond-yield"><h3>Bond yield</h3><p>YTM e current yield.</p></a>
 <a class="card" href="https://calcdomain.com/margin"><h3>Margin</h3><p>Margine iniziale/manutenzione.</p></a>
 <a class="card" href="https://calcdomain.com/markup"><h3>Markup</h3><p>Markup ⇄ margin.</p></a>
-<a class="card" href="https://calcdomain.com/black-scholes"><h3>Black-Scholes</h3><p>Prezzo opzioni europee.</p></a>
+<a class="card" href="https://calcdomain.com/black-scholes"><h3>Black-scholes</h3><p>Prezzo opzioni europee.</p></a>
 <a class="card" href="https://calcdomain.com/options-greeks"><h3>Greeks</h3><p>Delta, Gamma, Theta, Vega.</p></a>
 <a class="card" href="https://calcdomain.com/binomial-option-pricing"><h3>Binomial</h3><p>Lattice per americane/europee.</p></a>
-<a class="card" href="https://calcdomain.com/put-call-parity"><h3>Put-Call Parity</h3><p>Relazioni di arbitraggio.</p></a>
-<a class="card" href="https://calcdomain.com/implied-volatility"><h3>Implied Vol</h3><p>IV da prezzi osservati.</p></a>
-<a class="card" href="https://calcdomain.com/historical-volatility"><h3>Historical Vol</h3><p>σ su finestra mobile.</p></a>
+<a class="card" href="https://calcdomain.com/put-call-parity"><h3>Put-call parity</h3><p>Relazioni di arbitraggio.</p></a>
+<a class="card" href="https://calcdomain.com/implied-volatility"><h3>Implied vol</h3><p>IV da prezzi osservati.</p></a>
+<a class="card" href="https://calcdomain.com/historical-volatility"><h3>Historical vol</h3><p>σ su finestra mobile.</p></a>
 <a class="card" href="https://calcdomain.com/moving-average"><h3>SMA/EMA</h3><p>Medie mobili e incroci.</p></a>
 <a class="card" href="https://calcdomain.com/rsi"><h3>RSI</h3><p>Oscillatore di momentum.</p></a>
 <a class="card" href="https://calcdomain.com/macd"><h3>MACD</h3><p>Trend &amp; momentum.</p></a>
-<a class="card" href="https://calcdomain.com/bollinger-bands"><h3>Bollinger Bands</h3><p>Involucri basati su σ.</p></a>
+<a class="card" href="https://calcdomain.com/bollinger-bands"><h3>Bollinger bands</h3><p>Involucri basati su σ.</p></a>
 <a class="card" href="https://calcdomain.com/fibonacci-retracement"><h3>Fibonacci</h3><p>Livelli di ritracciamento.</p></a>
-<a class="card" href="https://calcdomain.com/pivot-point"><h3>Pivot Points</h3><p>Classic/Woodie/Camarilla.</p></a>
-<a class="card" href="https://calcdomain.com/position-size"><h3>Position Size</h3><p>Rischio per trade.</p></a>
+<a class="card" href="https://calcdomain.com/pivot-point"><h3>Pivot points</h3><p>Classic/Woodie/Camarilla.</p></a>
+<a class="card" href="https://calcdomain.com/position-size"><h3>Position size</h3><p>Rischio per trade.</p></a>
 <a class="card" href="https://calcdomain.com/kelly-criterion"><h3>Kelly</h3><p>Quota ottimale teorica.</p></a>
-<a class="card" href="https://calcdomain.com/covered-call"><h3>Covered Call</h3><p>Rendimento e payoff.</p></a>
-<a class="card" href="https://calcdomain.com/cash-secured-put"><h3>Cash-Secured Put</h3><p>Prezzo effettivo d’acquisto.</p></a>
-<a class="card" href="https://calcdomain.com/iron-condor"><h3>Iron Condor</h3><p>Profitti, perdite, BE.</p></a>
-<a class="card" href="https://calcdomain.com/straddle"><h3>Straddle/Strangle</h3><p>Payoff e BE di volatilità.</p></a>
+<a class="card" href="https://calcdomain.com/covered-call"><h3>Covered call</h3><p>Rendimento e payoff.</p></a>
+<a class="card" href="https://calcdomain.com/cash-secured-put"><h3>Cash-secured put</h3><p>Prezzo effettivo d’acquisto.</p></a>
+<a class="card" href="https://calcdomain.com/iron-condor"><h3>Iron condor</h3><p>Profitti, perdite, BE.</p></a>
+<a class="card" href="https://calcdomain.com/straddle"><h3>Straddle/strangle</h3><p>Payoff e BE di volatilità.</p></a>
 </div>
 </div></main>
 <!-- Standard Footer --> 
