--- a/sito_modificato/subcategories/finance-uk-and-europe-taxes.html
+++ b/sito_modificato/subcategories/finance-uk-and-europe-taxes.html
@@ -34,7 +34,7 @@
         <div class="container mx-auto px-4">
             <div class="grid grid-cols-1 md:grid-cols-4 gap-8">
                 <div>
-                    <h3 class="text-2xl font-bold mb-4">CalcDomain</h3>
+                    <h3 class="text-2xl font-bold mb-4">Calcdomain</h3>
                     <p class="text-gray-400 mb-4">Your trusted source for free online calculators. Accurate, fast, and reliable calculations for every need.</p>
                     <div class="flex space-x-4">
                         <a href="#" class="text-gray-400 hover:text-white" aria-label="Twitter">
@@ -68,10 +68,10 @@
                 <div>
                     <h4 class="text-lg font-semibold mb-4">Support</h4>
                     <ul class="space-y-2">
-                        <li><a href="about" class="text-gray-400 hover:text-white">About Us</a></li>
-                        <li><a href="contact" class="text-gray-400 hover:text-white">Contact</a></li>
-                        <li><a href="privacy" class="text-gray-400 hover:text-white">Privacy Policy</a></li>
-                        <li><a href="terms" class="text-gray-400 hover:text-white">Terms of Service</a></li>
+                        <li><a href="https://calcdomain.com/about" class="text-gray-400 hover:text-white">About Us</a></li>
+                        <li><a href="https://calcdomain.com/contact" class="text-gray-400 hover:text-white">Contact</a></li>
+                        <li><a href="https://calcdomain.com/privacy" class="text-gray-400 hover:text-white">Privacy Policy</a></li>
+                        <li><a href="https://calcdomain.com/terms" class="text-gray-400 hover:text-white">Terms of Service</a></li>
                         <li><a href="sitemap.xml" class="text-gray-400 hover:text-white">Site Map</a></li>
                     </ul>
                 </div>
@@ -95,24 +95,24 @@
 <p style="max-width:800px">Stime rapide per imposte su redditi, capitale e consumi nel Regno Unito e in Germania.</p>
 <h2>United Kingdom</h2>
 <div class="grid grid-3-col" style="margin-top:1rem;">
-<a class="card" href="https://calcdomain.com/uk-tax"><h3>UK Income Tax (England &amp; NI)</h3><p>Bands, PA, NI e student loans.</p></a>
+<a class="card" href="https://calcdomain.com/uk-tax"><h3>UK income tax (england &amp; NI)</h3><p>Bands, PA, NI e student loans.</p></a>
 <a class="card" href="https://calcdomain.com/scotland-tax"><h3>Scotland</h3><p>Aliquote e soglie scozzesi.</p></a>
 <a class="card" href="https://calcdomain.com/wales-tax"><h3>Wales</h3><p>Aliquote e allowances gallesi.</p></a>
 <a class="card" href="https://calcdomain.com/paye-uk"><h3>PAYE</h3><p>Da lordo a netto con NI.</p></a>
-<a class="card" href="https://calcdomain.com/national-insurance"><h3>National Insurance</h3><p>Classi 1/2/4.</p></a>
+<a class="card" href="https://calcdomain.com/national-insurance"><h3>National insurance</h3><p>Classi 1/2/4.</p></a>
 <a class="card" href="https://calcdomain.com/capital-gains-tax-uk"><h3>CGT</h3><p>Esenzioni annue e immobili.</p></a>
 <a class="card" href="https://calcdomain.com/vat-uk"><h3>VAT</h3><p>Aliquote standard/ridotte.</p></a>
 <a class="card" href="https://calcdomain.com/what-is-stamp-duty"><h3>SDLT</h3><p>Banding e FTB/additional.</p></a>
-<a class="card" href="https://calcdomain.com/council-tax"><h3>Council Tax</h3><p>Per band e località.</p></a>
+<a class="card" href="https://calcdomain.com/council-tax"><h3>Council tax</h3><p>Per band e località.</p></a>
 </div>
 <h2 style="margin-top:1.25rem">Germany</h2>
 <div class="grid grid-3-col" style="margin-top:1rem;">
-<a class="card" href="https://calcdomain.com/german-income-tax"><h3>Income Tax</h3><p>Tariffe, allowances e Soli.</p></a>
+<a class="card" href="https://calcdomain.com/german-income-tax"><h3>Income tax</h3><p>Tariffe, allowances e Soli.</p></a>
 <a class="card" href="https://calcdomain.com/german-vat"><h3>VAT</h3><p>Umsatzsteuer standard/ridotta.</p></a>
-<a class="card" href="https://calcdomain.com/german-capital-gains-tax"><h3>Capital Gains</h3><p>Abgeltungsteuer e Kirchensteuer.</p></a>
-<a class="card" href="https://calcdomain.com/german-trade-tax"><h3>Trade Tax</h3><p>Hebesatz comunale.</p></a>
-<a class="card" href="https://calcdomain.com/church-tax-germany"><h3>Church Tax</h3><p>Aliquote diocesane.</p></a>
-<a class="card" href="https://calcdomain.com/solidarity-surcharge"><h3>Solidarity Surcharge</h3><p>Riduzioni e soglie.</p></a>
+<a class="card" href="https://calcdomain.com/german-capital-gains-tax"><h3>Capital gains</h3><p>Abgeltungsteuer e Kirchensteuer.</p></a>
+<a class="card" href="https://calcdomain.com/german-trade-tax"><h3>Trade tax</h3><p>Hebesatz comunale.</p></a>
+<a class="card" href="https://calcdomain.com/church-tax-germany"><h3>Church tax</h3><p>Aliquote diocesane.</p></a>
+<a class="card" href="https://calcdomain.com/solidarity-surcharge"><h3>Solidarity surcharge</h3><p>Riduzioni e soglie.</p></a>
 </div>
 </div></main>
 <!-- Standard Footer --> 
