--- a/sito_modificato/subcategories/fitness.html
+++ b/sito_modificato/subcategories/fitness.html
@@ -94,7 +94,7 @@
                                 <svg class="w-6 h-6 text-blue-600" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M16 8c0-1.105-.895-2-2-2H8a2 2 0 00-2 2v2h10a2 2 0 002-2zM6 12h4v8H6zM14 12h4v3a1 1 0 01-1 1h-3z"></path></svg>
                             </div>
                             <div>
-                                <h3 class="font-semibold text-gray-800">Running Pace Calculator</h3>
+                                <h3 class="font-semibold text-gray-800">Running pace calculator</h3>
                                 <p class="text-sm text-gray-600 mt-1">Convert finish times to splits, plan interval sessions, and predict race paces.</p>
                             </div>
                         </a>
@@ -103,7 +103,7 @@
                                 <svg class="w-6 h-6 text-blue-600" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12l2 2 4-4M7 12a5 5 0 1110 0 5 5 0 01-10 0z"></path></svg>
                             </div>
                             <div>
-                                <h3 class="font-semibold text-gray-800">VO₂ Max Calculator</h3>
+                                <h3 class="font-semibold text-gray-800">VO₂ max calculator</h3>
                                 <p class="text-sm text-gray-600 mt-1">Estimate aerobic capacity from race results or field tests to benchmark progress.</p>
                             </div>
                         </a>
@@ -112,7 +112,7 @@
                                 <svg class="w-6 h-6 text-blue-600" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h8M4 18h16"></path></svg>
                             </div>
                             <div>
-                                <h3 class="font-semibold text-gray-800">One-Rep Max (1RM) Calculator</h3>
+                                <h3 class="font-semibold text-gray-800">One-rep max (1RM) calculator</h3>
                                 <p class="text-sm text-gray-600 mt-1">Translate working sets into projected maxes and create strength training percentages.</p>
                             </div>
                         </a>
@@ -121,7 +121,7 @@
                                 <svg class="w-6 h-6 text-blue-600" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 21a2 2 0 112 2 2 2 0 01-2-2zm12 0a2 2 0 112 2 2 2 0 01-2-2zM5 21h14l1-7H4zM5 6h14l1-3H4z"></path></svg>
                             </div>
                             <div>
-                                <h3 class="font-semibold text-gray-800">Cycling Speed & Power Calculator</h3>
+                                <h3 class="font-semibold text-gray-800">Cycling speed & power calculator</h3>
                                 <p class="text-sm text-gray-600 mt-1">Balance cadence, gearing, grade, and power output for road and indoor sessions.</p>
                             </div>
                         </a>
@@ -130,7 +130,7 @@
                                 <svg class="w-6 h-6 text-blue-600" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16"></path></svg>
                             </div>
                             <div>
-                                <h3 class="font-semibold text-gray-800">Workout Builder</h3>
+                                <h3 class="font-semibold text-gray-800">Workout builder</h3>
                                 <p class="text-sm text-gray-600 mt-1">Structure sets, reps, tempo, and rest intervals for strength or conditioning blocks.</p>
                             </div>
                         </a>
@@ -139,7 +139,7 @@
                                 <svg class="w-6 h-6 text-blue-600" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4.318 6.318a4.5 4.5 0 000 6.364L12 20.364l7.682-7.682a4.5 4.5 0 00-6.364-6.364L12 7.636l-1.318-1.318a4.5 4.5 0 00-6.364 0z"></path></svg>
                             </div>
                             <div>
-                                <h3 class="font-semibold text-gray-800">Target Heart Rate Zones</h3>
+                                <h3 class="font-semibold text-gray-800">Target heart rate zones</h3>
                                 <p class="text-sm text-gray-600 mt-1">Map aerobic, tempo, and threshold zones from max heart rate or lab data.</p>
                             </div>
                         </a>
@@ -148,7 +148,7 @@
                                 <svg class="w-6 h-6 text-blue-600" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v8m0 0v1m0-1c-1.11 0-2.08-.402-2.599-1"></path></svg>
                             </div>
                             <div>
-                                <h3 class="font-semibold text-gray-800">TDEE & Calorie Needs</h3>
+                                <h3 class="font-semibold text-gray-800">TDEE & calorie needs</h3>
                                 <p class="text-sm text-gray-600 mt-1">Calculate daily energy expenditure with activity multipliers and adjust for goals.</p>
                             </div>
                         </a>
@@ -157,7 +157,7 @@
                                 <svg class="w-6 h-6 text-blue-600" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"></path></svg>
                             </div>
                             <div>
-                                <h3 class="font-semibold text-gray-800">Heart Rate Reserve (HRR)</h3>
+                                <h3 class="font-semibold text-gray-800">Heart rate reserve (HRR)</h3>
                                 <p class="text-sm text-gray-600 mt-1">Use the Karvonen method to personalize intensity targets from resting HR.</p>
                             </div>
                         </a>
@@ -175,7 +175,7 @@
 
                     <!-- Related Categories -->
                     <div class="bg-white p-6 rounded-lg shadow-md">
-                        <h3 class="font-bold text-lg mb-4">Related Categories</h3>
+                        <h3 class="font-bold text-lg mb-4">Related categories</h3>
                         <ul class="space-y-3">
                             <li><a href="https://calcdomain.com/health-fitness" class="text-blue-600 hover:underline">Health & Fitness Calculators</a></li>
                             <li><a href="https://calcdomain.com/subcategories/health-metrics" class="text-blue-600 hover:underline">Health Metrics</a></li>
@@ -194,7 +194,7 @@
         <div class="container mx-auto px-4">
             <div class="grid grid-cols-1 md:grid-cols-4 gap-8">
                 <div>
-                    <h3 class="text-2xl font-bold mb-4">CalcDomain</h3>
+                    <h3 class="text-2xl font-bold mb-4">Calcdomain</h3>
                     <p class="text-gray-400 mb-4">Your trusted source for free online calculators. Accurate, fast, and reliable calculations for every need.</p>
                     <div class="flex space-x-4">
                         <a href="#" class="text-gray-400 hover:text-white" aria-label="Twitter">
@@ -228,10 +228,10 @@
                 <div>
                     <h4 class="text-lg font-semibold mb-4">Support</h4>
                     <ul class="space-y-2">
-                        <li><a href="about" class="text-gray-400 hover:text-white">About Us</a></li>
-                        <li><a href="contact" class="text-gray-400 hover:text-white">Contact</a></li>
-                        <li><a href="privacy" class="text-gray-400 hover:text-white">Privacy Policy</a></li>
-                        <li><a href="terms" class="text-gray-400 hover:text-white">Terms of Service</a></li>
+                        <li><a href="https://calcdomain.com/about" class="text-gray-400 hover:text-white">About Us</a></li>
+                        <li><a href="https://calcdomain.com/contact" class="text-gray-400 hover:text-white">Contact</a></li>
+                        <li><a href="https://calcdomain.com/privacy" class="text-gray-400 hover:text-white">Privacy Policy</a></li>
+                        <li><a href="https://calcdomain.com/terms" class="text-gray-400 hover:text-white">Terms of Service</a></li>
                         <li><a href="sitemap.xml" class="text-gray-400 hover:text-white">Site Map</a></li>
                     </ul>
                 </div>
