--- a/sito_modificato/subcategories/geometry-area-and-perimeter-formulas.html
+++ b/sito_modificato/subcategories/geometry-area-and-perimeter-formulas.html
@@ -218,9 +218,9 @@
 
           <section class="prose mt-10" aria-label="FAQ">
             <h2>FAQ</h2>
-            <h3>Can I use this for homework?</h3>
+            <h3>Can i use this for homework?</h3>
             <p>Yes — the calculator shows the same formulas you see in school. You can copy the numbers in and round to the required decimal places.</p>
-            <h3>What if a triangle is not right or I only know the sides?</h3>
+            <h3>What if a triangle is not right or i only know the sides?</h3>
             <p>Use Heron’s formula: Area = √(s(s − a)(s − b)(s − c)) where s = (a + b + c)/2. For brevity the interactive calculator above uses base and height, but you can extend it with Heron easily.</p>
           </section>
         </div>
@@ -250,7 +250,7 @@
         <div class="container mx-auto px-4">
             <div class="grid grid-cols-1 md:grid-cols-4 gap-8">
                 <div>
-                    <h3 class="text-2xl font-bold mb-4">CalcDomain</h3>
+                    <h3 class="text-2xl font-bold mb-4">Calcdomain</h3>
                     <p class="text-gray-400 mb-4">Your trusted source for free online calculators. Accurate, fast, and reliable calculations for every need.</p>
                     <div class="flex space-x-4">
                         <a href="#" class="text-gray-400 hover:text-white" aria-label="Twitter">
@@ -284,10 +284,10 @@
                 <div>
                     <h4 class="text-lg font-semibold mb-4">Support</h4>
                     <ul class="space-y-2">
-                        <li><a href="about" class="text-gray-400 hover:text-white">About Us</a></li>
-                        <li><a href="contact" class="text-gray-400 hover:text-white">Contact</a></li>
-                        <li><a href="privacy" class="text-gray-400 hover:text-white">Privacy Policy</a></li>
-                        <li><a href="terms" class="text-gray-400 hover:text-white">Terms of Service</a></li>
+                        <li><a href="https://calcdomain.com/about" class="text-gray-400 hover:text-white">About Us</a></li>
+                        <li><a href="https://calcdomain.com/contact" class="text-gray-400 hover:text-white">Contact</a></li>
+                        <li><a href="https://calcdomain.com/privacy" class="text-gray-400 hover:text-white">Privacy Policy</a></li>
+                        <li><a href="https://calcdomain.com/terms" class="text-gray-400 hover:text-white">Terms of Service</a></li>
                         <li><a href="sitemap.xml" class="text-gray-400 hover:text-white">Site Map</a></li>
                     </ul>
                 </div>
