--- a/sito_modificato/subcategories/geometry.html
+++ b/sito_modificato/subcategories/geometry.html
@@ -77,7 +77,7 @@
                             <svg class="w-6 h-6 text-purple-600" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 2l7.943 14.128H4.057z"></path></svg>
                         </div>
                         <div>
-                            <h3 class="font-semibold text-gray-800">Triangle Builder</h3>
+                            <h3 class="font-semibold text-gray-800">Triangle builder</h3>
                             <p class="text-sm text-gray-600">Find area, perimeter, medians, and heights for general triangles.</p>
                         </div>
                     </a>
@@ -86,7 +86,7 @@
                             <svg class="w-6 h-6 text-pink-600" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 13L15 3v18H3z"></path></svg>
                         </div>
                         <div>
-                            <h3 class="font-semibold text-gray-800">Right Triangle</h3>
+                            <h3 class="font-semibold text-gray-800">Right triangle</h3>
                             <p class="text-sm text-gray-600">Pythagorean, trigonometric, and height calculations in one place.</p>
                         </div>
                     </a>
@@ -95,7 +95,7 @@
                             <svg class="w-6 h-6 text-yellow-600" fill="none" stroke="currentColor" viewBox="0 0 24 24"><circle cx="12" cy="12" r="8" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></circle></svg>
                         </div>
                         <div>
-                            <h3 class="font-semibold text-gray-800">Circle &amp; Arc</h3>
+                            <h3 class="font-semibold text-gray-800">Circle &amp; arc</h3>
                             <p class="text-sm text-gray-600">Radius, diameter, circumference, and sector area formulas instantly computed.</p>
                         </div>
                     </a>
@@ -104,7 +104,7 @@
                             <svg class="w-6 h-6 text-blue-600" fill="none" stroke="currentColor" viewBox="0 0 24 24"><rect x="5" y="5" width="14" height="14" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></rect></svg>
                         </div>
                         <div>
-                            <h3 class="font-semibold text-gray-800">Squares &amp; Polygons</h3>
+                            <h3 class="font-semibold text-gray-800">Squares &amp; polygons</h3>
                             <p class="text-sm text-gray-600">Compute side lengths, diagonals, and area for regular polytopes.</p>
                         </div>
                     </a>
@@ -113,7 +113,7 @@
                             <svg class="w-6 h-6 text-emerald-600" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 2l9 4.5v9l-9 4.5L3 15.5v-9z"></path></svg>
                         </div>
                         <div>
-                            <h3 class="font-semibold text-gray-800">Solid Geometry</h3>
+                            <h3 class="font-semibold text-gray-800">Solid geometry</h3>
                             <p class="text-sm text-gray-600">Volumes, surface areas, and nets for prisms, cylinders, and cones.</p>
                         </div>
                     </a>
@@ -122,7 +122,7 @@
                             <svg class="w-6 h-6 text-indigo-600" fill="none" stroke="currentColor" viewBox="0 0 24 24"><circle cx="12" cy="12" r="9" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></circle><path stroke-width="2" stroke-linecap="round" stroke-linejoin="round" d="M3 12h18"></path></svg>
                         </div>
                         <div>
-                            <h3 class="font-semibold text-gray-800">Spheres &amp; Rotations</h3>
+                            <h3 class="font-semibold text-gray-800">Spheres &amp; rotations</h3>
                             <p class="text-sm text-gray-600">Find great-circle distances, spherical volume, and surface area.</p>
                         </div>
                     </a>
@@ -130,7 +130,7 @@
             </main>
             <aside class="w-full lg:w-1/3 space-y-6">
                 <div class="bg-white p-5 rounded-lg shadow-sm border">
-                    <h3 class="text-lg font-semibold mb-3">Math &amp; Conversions</h3>
+                    <h3 class="text-lg font-semibold mb-3">Math &amp; conversions</h3>
                     <p class="text-sm text-gray-600 mb-4">Unlock formulas, unit conversions, and algebra support from the same hub.</p>
                     <ul class="list-disc pl-5 space-y-2 text-sm text-gray-700">
                         <li><a href="https://calcdomain.com/subcategories/core-math-algebra" class="text-blue-600 hover:underline">Core Math &amp; Algebra</a></li>
@@ -148,7 +148,7 @@
         <div class="container mx-auto px-4">
             <div class="grid grid-cols-1 md:grid-cols-4 gap-8">
                 <div>
-                    <h3 class="text-2xl font-bold mb-4">CalcDomain</h3>
+                    <h3 class="text-2xl font-bold mb-4">Calcdomain</h3>
                     <p class="text-gray-400 mb-4">Your trusted source for free online calculators. Accurate, fast, and reliable calculations for every need.</p>
                     <div class="flex space-x-4">
                         <a href="#" class="text-gray-400 hover:text-white" aria-label="Twitter">
@@ -182,10 +182,10 @@
                 <div>
                     <h4 class="text-lg font-semibold mb-4">Support</h4>
                     <ul class="space-y-2">
-                        <li><a href="about" class="text-gray-400 hover:text-white">About Us</a></li>
-                        <li><a href="contact" class="text-gray-400 hover:text-white">Contact</a></li>
-                        <li><a href="privacy" class="text-gray-400 hover:text-white">Privacy Policy</a></li>
-                        <li><a href="terms" class="text-gray-400 hover:text-white">Terms of Service</a></li>
+                        <li><a href="https://calcdomain.com/about" class="text-gray-400 hover:text-white">About Us</a></li>
+                        <li><a href="https://calcdomain.com/contact" class="text-gray-400 hover:text-white">Contact</a></li>
+                        <li><a href="https://calcdomain.com/privacy" class="text-gray-400 hover:text-white">Privacy Policy</a></li>
+                        <li><a href="https://calcdomain.com/terms" class="text-gray-400 hover:text-white">Terms of Service</a></li>
                         <li><a href="sitemap.xml" class="text-gray-400 hover:text-white">Site Map</a></li>
                     </ul>
                 </div>
