--- a/sito_modificato/subcategories/health-metrics.html
+++ b/sito_modificato/subcategories/health-metrics.html
@@ -94,7 +94,7 @@
                                     <svg class="w-6 h-6 text-blue-600" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v8m0 0v1m0-1c-1.11 0-2.08-.402-2.599-1"></path></svg>
                                 </div>
                                 <div>
-                                    <h3 class="font-semibold text-gray-800">BMI Calculator</h3>
+                                    <h3 class="font-semibold text-gray-800">BMI calculator</h3>
                                     <p class="text-sm text-gray-600 mt-1">Calculate bmi calculator quickly and accurately.</p>
                                 </div>
                             </a>
@@ -103,7 +103,7 @@
                                     <svg class="w-6 h-6 text-blue-600" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v8m0 0v1m0-1c-1.11 0-2.08-.402-2.599-1"></path></svg>
                                 </div>
                                 <div>
-                                    <h3 class="font-semibold text-gray-800">Body Fat Calculator</h3>
+                                    <h3 class="font-semibold text-gray-800">Body fat calculator</h3>
                                     <p class="text-sm text-gray-600 mt-1">Calculate body fat quickly and accurately.</p>
                                 </div>
                             </a>
@@ -112,7 +112,7 @@
                                     <svg class="w-6 h-6 text-blue-600" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v8m0 0v1m0-1c-1.11 0-2.08-.402-2.599-1"></path></svg>
                                 </div>
                                 <div>
-                                    <h3 class="font-semibold text-gray-800">BMR Calculator</h3>
+                                    <h3 class="font-semibold text-gray-800">BMR calculator</h3>
                                     <p class="text-sm text-gray-600 mt-1">Calculate bmr quickly and accurately.</p>
                                 </div>
                             </a>
@@ -121,7 +121,7 @@
                                     <svg class="w-6 h-6 text-blue-600" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v8m0 0v1m0-1c-1.11 0-2.08-.402-2.599-1"></path></svg>
                                 </div>
                                 <div>
-                                    <h3 class="font-semibold text-gray-800">Heart Rate Calculator</h3>
+                                    <h3 class="font-semibold text-gray-800">Heart rate calculator</h3>
                                     <p class="text-sm text-gray-600 mt-1">Calculate heart rate quickly and accurately.</p>
                                 </div>
                             </a>
@@ -130,7 +130,7 @@
                                     <svg class="w-6 h-6 text-blue-600" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v8m0 0v1m0-1c-1.11 0-2.08-.402-2.599-1"></path></svg>
                                 </div>
                                 <div>
-                                    <h3 class="font-semibold text-gray-800">Blood Pressure Calculator</h3>
+                                    <h3 class="font-semibold text-gray-800">Blood pressure calculator</h3>
                                     <p class="text-sm text-gray-600 mt-1">Calculate blood pressure quickly and accurately.</p>
                                 </div>
                             </a>
@@ -139,7 +139,7 @@
                                     <svg class="w-6 h-6 text-blue-600" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v8m0 0v1m0-1c-1.11 0-2.08-.402-2.599-1"></path></svg>
                                 </div>
                                 <div>
-                                    <h3 class="font-semibold text-gray-800">Ideal Weight Calculator</h3>
+                                    <h3 class="font-semibold text-gray-800">Ideal weight calculator</h3>
                                     <p class="text-sm text-gray-600 mt-1">Calculate ideal weight quickly and accurately.</p>
                                 </div>
                             </a>
@@ -148,7 +148,7 @@
                                     <svg class="w-6 h-6 text-blue-600" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v8m0 0v1m0-1c-1.11 0-2.08-.402-2.599-1"></path></svg>
                                 </div>
                                 <div>
-                                    <h3 class="font-semibold text-gray-800">Waist to Hip Ratio Calculator</h3>
+                                    <h3 class="font-semibold text-gray-800">Waist to hip ratio calculator</h3>
                                     <p class="text-sm text-gray-600 mt-1">Calculate waist to hip ratio quickly and accurately.</p>
                                 </div>
                             </a>
@@ -157,7 +157,7 @@
                                     <svg class="w-6 h-6 text-blue-600" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v8m0 0v1m0-1c-1.11 0-2.08-.402-2.599-1"></path></svg>
                                 </div>
                                 <div>
-                                    <h3 class="font-semibold text-gray-800">Body Surface Area Calculator</h3>
+                                    <h3 class="font-semibold text-gray-800">Body surface area calculator</h3>
                                     <p class="text-sm text-gray-600 mt-1">Calculate body surface area quickly and accurately.</p>
                                 </div>
                             </a>
@@ -166,7 +166,7 @@
                                     <svg class="w-6 h-6 text-blue-600" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v8m0 0v1m0-1c-1.11 0-2.08-.402-2.599-1"></path></svg>
                                 </div>
                                 <div>
-                                    <h3 class="font-semibold text-gray-800">Pregnancy Calculator</h3>
+                                    <h3 class="font-semibold text-gray-800">Pregnancy calculator</h3>
                                     <p class="text-sm text-gray-600 mt-1">Calculate pregnancy quickly and accurately.</p>
                                 </div>
                             </a>                               <a href="https://calcdomain.com/bac" class="card-hover bg-white p-5 rounded-lg shadow-sm border flex items-start gap-4">
@@ -174,7 +174,7 @@
                                     <svg class="w-6 h-6 text-blue-600" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v8m0 0v1m0-1c-1.11 0-2.08-.402-2.599-1"></path></svg>
                                 </div>
                                 <div>
-                                    <h3 class="font-semibold text-gray-800">Blood Alcohol Content</h3>
+                                    <h3 class="font-semibold text-gray-800">Blood alcohol content</h3>
                                     <p class="text-sm text-gray-600 mt-1">Estimates your Blood Alcohol Content using the Widmark formula.</p>
                                 </div>
                             </a>
@@ -184,7 +184,7 @@
                     <svg class="w-6 h-6 text-blue-600" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v8m0 0v1m0-1c-1.11 0-2.08-.402-2.599-1"></path></svg>
                 </div>
                 <div>
-                    <h3 class="font-semibold text-gray-800">Life Table Calculator</h3>
+                    <h3 class="font-semibold text-gray-800">Life table calculator</h3>
                     <p class="text-sm text-gray-600 mt-1">An advanced interactive life table calculator designed for life and earth sciences. Calculate life expectancy with precision.</p>
                 </div>
             </a>
@@ -194,7 +194,7 @@
                     <svg class="w-6 h-6 text-blue-600" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v8m0 0v1m0-1c-1.11 0-2.08-.402-2.599-1"></path></svg>
                 </div>
                 <div>
-                    <h3 class="font-semibold text-gray-800">Target Heart Rate Calculator</h3>
+                    <h3 class="font-semibold text-gray-800">Target heart rate calculator</h3>
                     <p class="text-sm text-gray-600 mt-1">Calculate your target heart rate for optimal exercise efficiency. This tool assists in determining the safe and effective heart rate zones for physical activity.</p>
                 </div>
             </a>
@@ -212,7 +212,7 @@
 
                     <!-- Related Categories -->
                     <div class="bg-white p-6 rounded-lg shadow-md">
-                        <h3 class="font-bold text-lg mb-4">Related Categories</h3>
+                        <h3 class="font-bold text-lg mb-4">Related categories</h3>
                         <ul class="space-y-3">
                             <li><a href="https://calcdomain.com/finance" class="text-blue-600 hover:underline">Finance Calculators</a></li>
                             <li><a href="https://calcdomain.com/health-fitness" class="text-blue-600 hover:underline">Health & Fitness</a></li>
@@ -231,7 +231,7 @@
         <div class="container mx-auto px-4">
             <div class="grid grid-cols-1 md:grid-cols-4 gap-8">
                 <div>
-                    <h3 class="text-2xl font-bold mb-4">CalcDomain</h3>
+                    <h3 class="text-2xl font-bold mb-4">Calcdomain</h3>
                     <p class="text-gray-400 mb-4">Your trusted source for free online calculators. Accurate, fast, and reliable calculations for every need.</p>
                     <div class="flex space-x-4">
                         <a href="#" class="text-gray-400 hover:text-white" aria-label="Twitter">
@@ -265,10 +265,10 @@
                 <div>
                     <h4 class="text-lg font-semibold mb-4">Support</h4>
                     <ul class="space-y-2">
-                        <li><a href="about" class="text-gray-400 hover:text-white">About Us</a></li>
-                        <li><a href="contact" class="text-gray-400 hover:text-white">Contact</a></li>
-                        <li><a href="privacy" class="text-gray-400 hover:text-white">Privacy Policy</a></li>
-                        <li><a href="terms" class="text-gray-400 hover:text-white">Terms of Service</a></li>
+                        <li><a href="https://calcdomain.com/about" class="text-gray-400 hover:text-white">About Us</a></li>
+                        <li><a href="https://calcdomain.com/contact" class="text-gray-400 hover:text-white">Contact</a></li>
+                        <li><a href="https://calcdomain.com/privacy" class="text-gray-400 hover:text-white">Privacy Policy</a></li>
+                        <li><a href="https://calcdomain.com/terms" class="text-gray-400 hover:text-white">Terms of Service</a></li>
                         <li><a href="sitemap.xml" class="text-gray-400 hover:text-white">Site Map</a></li>
                     </ul>
                 </div>
