--- a/sito_modificato/subcategories/math-conversions-measurement-unit-conversions.html
+++ b/sito_modificato/subcategories/math-conversions-measurement-unit-conversions.html
@@ -208,7 +208,7 @@
                                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5H7a2 2 0 00-2 2v10a2 2 0 002 2h8a2 2 0 002-2V7a2 2 0 00-2-2h-2M9 5a2 2 0 002 2h2a2 2 0 002-2M9 5a2 2 0 012-2h2a2 2 0 012 2"></path>
                             </svg>
                         </div>
-                        <h3 class="text-lg font-semibold text-gray-800 mb-2">122 Calculators Available</h3>
+                        <h3 class="text-lg font-semibold text-gray-800 mb-2">122 calculators available</h3>
                         <p class="text-gray-600">Specialized tools for Measurement Unit Conversions. Search above to find specific calculators.</p>
                     </div>
                 </section>
@@ -596,7 +596,7 @@
                 <div class="sticky top-24 space-y-8">
                     <!-- Category Info -->
                     <div class="bg-white p-6 rounded-lg shadow-md">
-                        <h3 class="font-bold text-lg mb-4">Measurement Unit Conversions Stats</h3>
+                        <h3 class="font-bold text-lg mb-4">Measurement unit conversions stats</h3>
                         <div class="space-y-3">
                             <div class="flex justify-between">
                                 <span class="text-gray-600">Calculators</span>
@@ -620,7 +620,7 @@
 
                     <!-- Related Subcategories -->
                     <div class="bg-white p-6 rounded-lg shadow-md">
-                        <h3 class="font-bold text-lg mb-4">Related in Math & Conversions</h3>
+                        <h3 class="font-bold text-lg mb-4">Related in math & conversions</h3>
                         <ul class="space-y-3">
                             <li><a href="https://calcdomain.com/math-conversions" class="text-blue-600 hover:underline">All Math & Conversions</a></li>
                             <li><a href="https://calcdomain.com/math-conversions-geometry" class="text-blue-600 hover:underline">Geometry</a></li>
@@ -636,7 +636,7 @@
         <div class="container mx-auto px-4">
             <div class="grid grid-cols-1 md:grid-cols-4 gap-8">
                 <div>
-                    <h3 class="text-2xl font-bold mb-4">CalcDomain</h3>
+                    <h3 class="text-2xl font-bold mb-4">Calcdomain</h3>
                     <p class="text-gray-400 mb-4">Your trusted source for free online calculators. Accurate, fast, and reliable calculations for every need.</p>
                     <div class="flex space-x-4">
                         <a href="#" class="text-gray-400 hover:text-white" aria-label="Twitter">
@@ -670,10 +670,10 @@
                 <div>
                     <h4 class="text-lg font-semibold mb-4">Support</h4>
                     <ul class="space-y-2">
-                        <li><a href="about" class="text-gray-400 hover:text-white">About Us</a></li>
-                        <li><a href="contact" class="text-gray-400 hover:text-white">Contact</a></li>
-                        <li><a href="privacy" class="text-gray-400 hover:text-white">Privacy Policy</a></li>
-                        <li><a href="terms" class="text-gray-400 hover:text-white">Terms of Service</a></li>
+                        <li><a href="https://calcdomain.com/about" class="text-gray-400 hover:text-white">About Us</a></li>
+                        <li><a href="https://calcdomain.com/contact" class="text-gray-400 hover:text-white">Contact</a></li>
+                        <li><a href="https://calcdomain.com/privacy" class="text-gray-400 hover:text-white">Privacy Policy</a></li>
+                        <li><a href="https://calcdomain.com/terms" class="text-gray-400 hover:text-white">Terms of Service</a></li>
                         <li><a href="sitemap.xml" class="text-gray-400 hover:text-white">Site Map</a></li>
                     </ul>
                 </div>
